Implement: Add Hebrew Terminology Standards document and update terminology references
- Introduced a new document outlining Hebrew terminology standards, providing guidelines for consistent usage across the application.
- Updated various JSON guide files to replace instances of "אגנטים" (agents) with "סוכנים" (agents) to align with the new terminology.
- Enhanced the overall documentation quality and accessibility for Hebrew-speaking users by ensuring uniform terminology throughout the guides.
- Conducted thorough reviews to maintain clarity and consistency in the updated content.

--- a/src/content/locale/he/guides/agents/game-agents.json
+++ b/src/content/locale/he/guides/agents/game-agents.json
@@ -3,7 +3,7 @@
     "id": "game-agents",
     "slug": "game-agents",
     "title": "מדריך אג'נטים - חלק 3: אג'נטי משחקים",
-    "description": "הכירו את שלושת אגנטי המשחקים המיוחדים ב-BMAD: Game Designer לעיצוב גיימפליי, Game Architect לארכיטקטורת משחק, ו-Game Dev לפיתוח משחקים. ללמוד איך לבנות משחק מקצה לקצה.",
+    "description": "הכירו את שלושת סוכןי המשחקים המיוחדים ב-BMAD: Game Designer לעיצוב גיימפליי, Game Architect לארכיטקטורת משחק, ו-Game Dev לפיתוח משחקים. ללמוד איך לבנות משחק מקצה לקצה.",
     "category": "agents",
     "difficulty": "advanced",
     "estimatedMinutes": 45,
@@ -1273,7 +1273,7 @@
       "items": [
         "מדריך וורקפלואים - Phase 2 Design (GDD + Narrative)",
         "מדריך למפתחי משחקים (Roles)",
-        "מדריך אגנטים - סינתזה (איך כל האגנטים עובדים יחד)",
+        "מדריך סוכנים - סינתזה (איך כל הסוכנים עובדים יחד)",
         "שאלות ותשובות - פיתוח"
       ]
     },
