--- a/src/content/locale/he/guides/agents/intro-pm-analyst.json
+++ b/src/content/locale/he/guides/agents/intro-pm-analyst.json
@@ -467,7 +467,7 @@
       "type": "callout",
       "variant": "success",
       "title": "חלק 1א הושלם!",
-      "content": "חלק זה הוא התחלת המסע שלך עם אגנטי BMAD. המשך לחלק הבא להכיר את שאר האג'נטים!"
+      "content": "חלק זה הוא התחלת המסע שלך עם סוכןי BMAD. המשך לחלק הבא להכיר את שאר האג'נטים!"
     }
   ]
 }
