--- a/src/content/locale/he/guides/agents/synthesis.json
+++ b/src/content/locale/he/guides/agents/synthesis.json
@@ -1020,7 +1020,7 @@
         },
         {
           "id": "part3",
-          "title": "חלק 3: אגנטי משחקים",
+          "title": "חלק 3: סוכןי משחקים",
           "content": [
             {
               "type": "text",
@@ -1031,7 +1031,7 @@
         },
         {
           "id": "part4",
-          "title": "חלק 4א-ב: שילוב בין אגנטים (CIS)",
+          "title": "חלק 4א-ב: שילוב בין סוכנים (CIS)",
           "content": [
             {
               "type": "text",
@@ -1133,7 +1133,7 @@
     {
       "type": "callout",
       "variant": "success",
-      "title": "סיימתם את סדרת מדריכי האגנטים!",
+      "title": "סיימתם את סדרת מדריכי הסוכנים!",
       "content": "אתם כעת מומחי אג'נטים של BMAD. זמן לתרגל ולבנות דברים מדהימים!"
     }
   ],
