--- a/src/content/locale/he/guides/agents/techwriter-master.json
+++ b/src/content/locale/he/guides/agents/techwriter-master.json
@@ -2,14 +2,14 @@
   "metadata": {
     "id": "techwriter-master",
     "slug": "techwriter-master",
-    "title": "מדריך אגנטים - חלק 2ב: Tech Writer + BMAD Master",
+    "title": "מדריך סוכנים - חלק 2ב: Tech Writer + BMAD Master",
     "description": "הכירו את Paige (Technical Writer) - מומחית התיעוד והידע, ואת BMAD Master - המתזמר המרכזי של כל המערכת. תפקידם, וורקפלואים מיוחדים, ודוגמאות מעשיות.",
     "category": "agents",
     "difficulty": "intermediate",
     "estimatedMinutes": 30,
     "icon": "FileText",
     "tags": [
-      "אגנטים",
+      "סוכנים",
       "תיעוד",
       "Tech Writer",
       "BMAD Master",
@@ -22,7 +22,7 @@
   "tableOfContents": [
     {
       "id": "toc-1",
-      "title": "מבוא - אגנטים מיוחדים",
+      "title": "מבוא - סוכנים מיוחדים",
       "level": 2,
       "anchor": "intro"
     },
@@ -40,7 +40,7 @@
     },
     {
       "id": "toc-4",
-      "title": "עבודה משולבת עם כל האגנטים",
+      "title": "עבודה משולבת עם כל הסוכנים",
       "level": 2,
       "anchor": "all-agents"
     },
@@ -67,7 +67,7 @@
     {
       "type": "heading",
       "level": 1,
-      "text": "מדריך אגנטים - חלק 2ב: Tech Writer + BMAD Master",
+      "text": "מדריך סוכנים - חלק 2ב: Tech Writer + BMAD Master",
       "id": "main-title"
     },
     {
@@ -76,18 +76,18 @@
     {
       "type": "heading",
       "level": 2,
-      "text": "מבוא - אגנטים מיוחדים",
+      "text": "מבוא - סוכנים מיוחדים",
       "id": "intro"
     },
     {
       "type": "text",
       "markdown": true,
-      "content": "עד כה הכרנו את האגנטים שמנהלים את מחזור החיים של הפרויקט - מתכנון (John, Mary) דרך ארכיטקטורה ותהליכים (Winston, Bob) ועד מימוש ובדיקות (Amelia, Murat, Sally).\n\nעכשיו נכיר שני אגנטים **מיוחדים** שתפקידם שונה - הם לא חלק מתהליך הפיתוח הליניארי, אלא תומכים בו מהצד בתפקידים קריטיים: **תיעוד הידע** ו**תזמור כל המערכת**."
+      "content": "עד כה הכרנו את הסוכנים שמנהלים את מחזור החיים של הפרויקט - מתכנון (John, Mary) דרך ארכיטקטורה ותהליכים (Winston, Bob) ועד מימוש ובדיקות (Amelia, Murat, Sally).\n\nעכשיו נכיר שני סוכנים **מיוחדים** שתפקידם שונה - הם לא חלק מתהליך הפיתוח הליניארי, אלא תומכים בו מהצד בתפקידים קריטיים: **תיעוד הידע** ו**תזמור כל המערכת**."
     },
     {
       "type": "heading",
       "level": 3,
-      "text": "מי האגנטים בחלק זה?",
+      "text": "מי הסוכנים בחלק זה?",
       "id": "agents-overview"
     },
     {
@@ -98,15 +98,15 @@
           "content": "Paige (Technical Writer) - מתעדת ידע, יוצרת מדריכים, ומבטיחה שהכל מתועד ונגיש"
         },
         {
-          "content": "BMAD Master - המתזמר המרכזי - עוזר לכם לנווט בין כל האגנטים והוורקפלואים"
+          "content": "BMAD Master - המתזמר המרכזי - עוזר לכם לנווט בין כל הסוכנים והוורקפלואים"
         }
       ]
     },
     {
       "type": "callout",
       "variant": "info",
-      "title": "אגנטים מטא",
-      "content": "שני האגנטים האלה הם \"מטא-אגנטים\" - הם לא עובדים על התוכן של הפרויקט עצמו, אלא על התהליך והידע **סביב** הפרויקט.",
+      "title": "סוכנים מטא",
+      "content": "שני הסוכנים האלה הם \"מטא-סוכנים\" - הם לא עובדים על התוכן של הפרויקט עצמו, אלא על התהליך והידע **סביב** הפרויקט.",
       "markdown": true
     },
     {
@@ -392,7 +392,7 @@
     {
       "type": "text",
       "markdown": true,
-      "content": "**BMAD Master** הוא **אגנט מיוחד במינו** - הוא לא מתמחה בתחום ספציפי כמו כל האחרים, אלא **מכיר את כל המערכת**.\n\nתפקידו הוא לעזור לכם **לנווט** - איזה אגנט צריך עכשיו? איזה וורקפלואו להריץ? מה הסטטוס של הפרויקט? לאן ללכת הלאה?"
+      "content": "**BMAD Master** הוא **סוכן מיוחד במינו** - הוא לא מתמחה בתחום ספציפי כמו כל האחרים, אלא **מכיר את כל המערכת**.\n\nתפקידו הוא לעזור לכם **לנווט** - איזה סוכן צריך עכשיו? איזה וורקפלואו להריץ? מה הסטטוס של הפרויקט? לאן ללכת הלאה?"
     },
     {
       "type": "callout",
@@ -412,7 +412,7 @@
       "variant": "unordered",
       "items": [
         {
-          "content": "מכיר את כל 19 האגנטים - מה כל אחד עושה, מתי להזמין אותו"
+          "content": "מכיר את כל 19 הסוכנים - מה כל אחד עושה, מתי להזמין אותו"
         },
         {
           "content": "מכיר את כל 50+ הוורקפלואים - באיזה סדר להריץ, מה כל אחד מייצר"
@@ -454,10 +454,10 @@
           "content": "כאשר הפרויקט תקוע ולא ברור למה"
         },
         {
-          "content": "כאשר צריכים מידע על אגנט או וורקפלואו ספציפי"
+          "content": "כאשר צריכים מידע על סוכן או וורקפלואו ספציפי"
         },
         {
-          "content": "כאשר רוצים לדעת איזה אגנטים זמינים"
+          "content": "כאשר רוצים לדעת איזה סוכנים זמינים"
         }
       ]
     },
@@ -494,8 +494,8 @@
         ],
         [
           "*list-agents",
-          "רשימת כל האגנטים הזמינים",
-          "איזה אגנטים יש?"
+          "רשימת כל הסוכנים הזמינים",
+          "איזה סוכנים יש?"
         ],
         [
           "*list-workflows",
@@ -518,7 +518,7 @@
     {
       "type": "text",
       "markdown": true,
-      "content": "BMAD Master מתקשר בצורה **מנחה ותומכת**. הוא מבין שלפעמים זה מבלבל - יש המון אגנטים, המון וורקפלואים, ולא תמיד ברור מה לעשות.\n\nהוא **לא שופט** - אם טעיתם בסדר או דילגתם על שלב, הוא יגיד \"בסדר, בואו נתקן\" ולא \"למה לא עשית X?\" הוא פה כדי **לעזור**, לא ללמד אתכם לקח."
+      "content": "BMAD Master מתקשר בצורה **מנחה ותומכת**. הוא מבין שלפעמים זה מבלבל - יש המון סוכנים, המון וורקפלואים, ולא תמיד ברור מה לעשות.\n\nהוא **לא שופט** - אם טעיתם בסדר או דילגתם על שלב, הוא יגיד \"בסדר, בואו נתקן\" ולא \"למה לא עשית X?\" הוא פה כדי **לעזור**, לא ללמד אתכם לקח."
     },
     {
       "type": "callout",
@@ -583,7 +583,7 @@
       "type": "callout",
       "variant": "success",
       "title": "תוצאה",
-      "content": "מסלול התקדמות ברור! אתם יודעים בדיוק מה לעשות, באיזה סדר, ועם איזה אגנט. לא צריך לנחש או לקרוא מדריכים ארוכים."
+      "content": "מסלול התקדמות ברור! אתם יודעים בדיוק מה לעשות, באיזה סדר, ועם איזה סוכן. לא צריך לנחש או לקרוא מדריכים ארוכים."
     },
     {
       "type": "heading",
@@ -604,7 +604,7 @@
           "content": "מתחילים עם BMAD Master - הוא קובע את המסלול"
         },
         {
-          "content": "BMAD Master מפנה אתכם לאגנט ספציפי - \"עכשיו לך ל-John (PM) והרץ *prd\""
+          "content": "BMAD Master מפנה אתכם לסוכן ספציפי - \"עכשיו לך ל-John (PM) והרץ *prd\""
         },
         {
           "content": "אתם עובדים עם John"
@@ -629,25 +629,25 @@
     {
       "type": "heading",
       "level": 2,
-      "text": "עבודה משולבת עם כל האגנטים",
+      "text": "עבודה משולבת עם כל הסוכנים",
       "id": "all-agents"
     },
     {
       "type": "text",
       "markdown": true,
-      "content": "עכשיו שהכרנו את **כל 7 האגנטים המרכזיים** (ועוד Paige ו-BMAD Master), בואו נבין איך כולם עובדים ביחד במחזור חיים מלא של פרויקט."
+      "content": "עכשיו שהכרנו את **כל 7 הסוכנים המרכזיים** (ועוד Paige ו-BMAD Master), בואו נבין איך כולם עובדים ביחד במחזור חיים מלא של פרויקט."
     },
     {
       "type": "heading",
       "level": 3,
-      "text": "המפה המלאה - 9 האגנטים",
+      "text": "המפה המלאה - 9 הסוכנים",
       "id": "all-agents-map"
     },
     {
       "type": "table",
-      "caption": "כל האגנטים לפי תפקיד",
+      "caption": "כל הסוכנים לפי תפקיד",
       "headers": [
-        "אגנט",
+        "סוכן",
         "תפקיד",
         "שלב עיקרי",
         "תוצר מרכזי"
@@ -841,7 +841,7 @@
     {
       "type": "callout",
       "variant": "info",
-      "title": "האגנטים עובדים במקביל",
+      "title": "הסוכנים עובדים במקביל",
       "content": "לא צריך לחכות שאחד יסיים כדי להתחיל עם השני! למשל: Amelia יכולה לעבוד על סטורי אחד בזמן ש-Murat כותב בדיקות לסטורי אחר, ו-Paige מתעדת מה שכבר הושלם."
     },
     {
@@ -974,7 +974,7 @@
             {
               "type": "text",
               "markdown": true,
-              "content": "**לא חובה, אבל מומלץ מאוד!**\n\nBMAD Master נועד לעזור לכם לנווט - אם אתם כבר מכירים את המערכת ויודעים מה לעשות, אפשר לדלג עליו ולעבוד ישירות עם האגנטים.\n\nאבל אם אתם חדשים, או תקועים, או לא בטוחים - BMAD Master חוסך המון זמן ובלבול."
+              "content": "**לא חובה, אבל מומלץ מאוד!**\n\nBMAD Master נועד לעזור לכם לנווט - אם אתם כבר מכירים את המערכת ויודעים מה לעשות, אפשר לדלג עליו ולעבוד ישירות עם הסוכנים.\n\nאבל אם אתם חדשים, או תקועים, או לא בטוחים - BMAD Master חוסך המון זמן ובלבול."
             }
           ]
         },
@@ -1013,12 +1013,12 @@
         },
         {
           "id": "faq-5",
-          "title": "איך מעבירים מידע בין האגנטים כשעובדים עם הרבה מהם?",
+          "title": "איך מעבירים מידע בין הסוכנים כשעובדים עם הרבה מהם?",
           "content": [
             {
               "type": "text",
               "markdown": true,
-              "content": "**שלוש דרכים עיקריות:**\n\n1. **קבצי תיעוד:** כל אגנט יוצר קבצים ב-/docs. אגנטים אחרים יכולים לקרוא אותם\n   - דוגמה: Winston יוצר ARCHITECTURE.md, Amelia קוראת אותו\n\n2. **העתקה ידנית:** תעתיקו פלט של אגנט אחד לצ'אט של אגנט אחר\n   - דוגמה: העתק את ה-PRD של John והדבק בצ'אט של Winston\n\n3. **Party Mode:** הזמן מספר אגנטים לאותו צ'אט (מתקדם)\n\nהדרך הכי פשוטה: **שמרו הכל בקבצים** - ככה האגנטים יכולים לקרוא זה את זה."
+              "content": "**שלוש דרכים עיקריות:**\n\n1. **קבצי תיעוד:** כל סוכן יוצר קבצים ב-/docs. סוכנים אחרים יכולים לקרוא אותם\n   - דוגמה: Winston יוצר ARCHITECTURE.md, Amelia קוראת אותו\n\n2. **העתקה ידנית:** תעתיקו פלט של סוכן אחד לצ'אט של סוכן אחר\n   - דוגמה: העתק את ה-PRD של John והדבק בצ'אט של Winston\n\n3. **Party Mode:** הזמן מספר סוכנים לאותו צ'אט (מתקדם)\n\nהדרך הכי פשוטה: **שמרו הכל בקבצים** - ככה הסוכנים יכולים לקרוא זה את זה."
             }
           ]
         }
@@ -1036,20 +1036,20 @@
     {
       "type": "text",
       "markdown": true,
-      "content": "**מזל טוב!** סיימתם את סדרת מדריכי האגנטים!\n\nבמהלך 4 חלקים הכרנו את **כל 9 האגנטים המרכזיים** של BMAD:"
+      "content": "**מזל טוב!** סיימתם את סדרת מדריכי הסוכנים!\n\nבמהלך 4 חלקים הכרנו את **כל 9 הסוכנים המרכזיים** של BMAD:"
     },
     {
       "type": "heading",
       "level": 3,
-      "text": "ריקאפ: כל האגנטים",
+      "text": "ריקאפ: כל הסוכנים",
       "id": "recap"
     },
     {
       "type": "table",
-      "caption": "סיכום כל האגנטים שלמדנו",
+      "caption": "סיכום כל הסוכנים שלמדנו",
       "headers": [
         "חלק",
-        "אגנטים",
+        "סוכנים",
         "תחום"
       ],
       "rows": [
@@ -1079,7 +1079,7 @@
       "type": "callout",
       "variant": "success",
       "title": "אתם עכשיו מכירים את כל הליבה",
-      "content": "9 האגנטים האלה מכסים 95% מהצרכים של כל פרויקט טיפוסי. זה מספיק כדי להתחיל לעבוד ברצינות!"
+      "content": "9 הסוכנים האלה מכסים 95% מהצרכים של כל פרויקט טיפוסי. זה מספיק כדי להתחיל לעבוד ברצינות!"
     },
     {
       "type": "heading",
@@ -1090,8 +1090,8 @@
     {
       "type": "callout",
       "variant": "info",
-      "title": "יש עוד אגנטים?",
-      "content": "כן! יש עוד אגנטים מיוחדים - למשל אגנטי משחקים (Game Designer, Game Architect, Game Dev). אבל הם מתקדמים ולא חובה לכולם."
+      "title": "יש עוד סוכנים?",
+      "content": "כן! יש עוד סוכנים מיוחדים - למשל סוכןי משחקים (Game Designer, Game Architect, Game Dev). אבל הם מתקדמים ולא חובה לכולם."
     },
     {
       "type": "text",
@@ -1103,13 +1103,13 @@
       "variant": "unordered",
       "items": [
         {
-          "content": "אפליקציות Web/Mobile רגילות - 9 האגנטים מספיקים!"
+          "content": "אפליקציות Web/Mobile רגילות - 9 הסוכנים מספיקים!"
         },
         {
-          "content": "פיתוח משחקים - כדאי ללמוד את אגנטי המשחקים (חלק 3)"
+          "content": "פיתוח משחקים - כדאי ללמוד את סוכןי המשחקים (חלק 3)"
         },
         {
-          "content": "פרויקטים מורכבים מאוד - כדאי ללמוד על שילוב אגנטים (חלקים 4א-4ב)"
+          "content": "פרויקטים מורכבים מאוד - כדאי ללמוד על שילוב סוכנים (חלקים 4א-4ב)"
         }
       ]
     },
@@ -1144,7 +1144,7 @@
                   "content": "עקבו אחר המסלול שהוא מציע"
                 },
                 {
-                  "content": "עבדו עם 3-4 אגנטים בפרויקט"
+                  "content": "עבדו עם 3-4 סוכנים בפרויקט"
                 },
                 {
                   "content": "תעדו את החוויה - מה עבד, מה לא"
@@ -1161,7 +1161,7 @@
             {
               "type": "text",
               "markdown": true,
-              "content": "**עכשיו שאתם מכירים את האגנטים, הגיע הזמן ללמוד את הוורקפלואים!**"
+              "content": "**עכשיו שאתם מכירים את הסוכנים, הגיע הזמן ללמוד את הוורקפלואים!**"
             },
             {
               "type": "text",
@@ -1178,7 +1178,7 @@
             {
               "type": "text",
               "markdown": true,
-              "content": "**כל תפקיד משתמש באגנטים אחרים:**"
+              "content": "**כל תפקיד משתמש בסוכנים אחרים:**"
             },
             {
               "type": "list",
@@ -1211,8 +1211,8 @@
     {
       "type": "callout",
       "variant": "success",
-      "title": "סיום סדרת מדריכי האגנטים!",
-      "content": "אתם עכשיו מכירים את כל האגנטים המרכזיים של BMAD, איך כל אחד עובד, ואיך הם משתלבים יחד. אתם מוכנים לעבוד עם BMAD בפרויקטים אמיתיים!"
+      "title": "סיום סדרת מדריכי הסוכנים!",
+      "content": "אתם עכשיו מכירים את כל הסוכנים המרכזיים של BMAD, איך כל אחד עובד, ואיך הם משתלבים יחד. אתם מוכנים לעבוד עם BMAD בפרויקטים אמיתיים!"
     },
     {
       "type": "heading",
