--- a/src/content/locale/he/guides/faq/basics.json
+++ b/src/content/locale/he/guides/faq/basics.json
@@ -115,7 +115,7 @@
       "type": "callout",
       "variant": "tip",
       "title": "לא מצאתם תשובה?",
-      "content": "בדקו את חלקי ה-FAQ הנוספים (התקנה, אגנטים, וורקפלואים) או בקרו בקהילה לקבלת עזרה"
+      "content": "בדקו את חלקי ה-FAQ הנוספים (התקנה, סוכנים, וורקפלואים) או בקרו בקהילה לקבלת עזרה"
     },
     {
       "type": "divider"
@@ -131,7 +131,7 @@
       "items": [
         {
           "title": "מה זה BMAD במשפט אחד?",
-          "content": "**תשובה:** BMAD-METHOD היא מתודולוגיה לפיתוח תוכנה עם בינה מלאכותית. היא נותנת לכם \"צוות וירטואלי\" של אגנטים AI מומחים (מנהל מוצר, ארכיטקט, מפתח, ועוד) שעובדים איתכם בתהליכים מובנים.\n\n**דוגמה:** במקום לכתוב פרומפטים בעצמכם, אתם מפעילים אגנט PM שיודע לכתוב PRD מקצועי, או אגנט Architect שמתכנן ארכיטקטורה.\n\n**לפרטים נוספים:** [מדריך התחלה מהירה](/guides/quick-start)",
+          "content": "**תשובה:** BMAD-METHOD היא מתודולוגיה לפיתוח תוכנה עם בינה מלאכותית. היא נותנת לכם \"צוות וירטואלי\" של סוכנים AI מומחים (מנהל מוצר, ארכיטקט, מפתח, ועוד) שעובדים איתכם בתהליכים מובנים.\n\n**דוגמה:** במקום לכתוב פרומפטים בעצמכם, אתם מפעילים סוכן PM שיודע לכתוב PRD מקצועי, או סוכן Architect שמתכנן ארכיטקטורה.\n\n**לפרטים נוספים:** [מדריך התחלה מהירה](/guides/quick-start)",
           "markdown": true
         },
         {
@@ -141,7 +141,7 @@
         },
         {
           "title": "מי פיתח את BMAD?",
-          "content": "**תשובה:** BMAD פותח כמתודולוגיה קהילתית שמבוססת על שנים של ניסיון בפיתוח תוכנה עם AI. המטרה הייתה ליצור מסגרת עבודה סטנדרטית שמאפשרת לכולם לעבוד ביעילות עם כלי AI.\n\n**העיקרון:** מומחים רבים תרמו לבניית האגנטים, הוורקפלואים והפרקטיקות.",
+          "content": "**תשובה:** BMAD פותח כמתודולוגיה קהילתית שמבוססת על שנים של ניסיון בפיתוח תוכנה עם AI. המטרה הייתה ליצור מסגרת עבודה סטנדרטית שמאפשרת לכולם לעבוד ביעילות עם כלי AI.\n\n**העיקרון:** מומחים רבים תרמו לבניית הסוכנים, הוורקפלואים והפרקטיקות.",
           "markdown": true
         },
         {
@@ -151,12 +151,12 @@
         },
         {
           "title": "האם BMAD חינמי?",
-          "content": "**תשובה:** כן! BMAD עצמו (המתודולוגיה, האגנטים, הוורקפלואים) הוא **חינמי לחלוטין** וקוד פתוח. אתם יכולים להשתמש בו ללא הגבלה.\n\n**מה כן עולה כסף:** השירותי AI (Claude/ChatGPT) עליהם BMAD מסתמך - אבל אתם משלמים ישירות לספקי ה-AI, לא ל-BMAD.\n\n**לפרטים:** ראו סקציה \"כמה זה עולה?\" למטה",
+          "content": "**תשובה:** כן! BMAD עצמו (המתודולוגיה, הסוכנים, הוורקפלואים) הוא **חינמי לחלוטין** וקוד פתוח. אתם יכולים להשתמש בו ללא הגבלה.\n\n**מה כן עולה כסף:** השירותי AI (Claude/ChatGPT) עליהם BMAD מסתמך - אבל אתם משלמים ישירות לספקי ה-AI, לא ל-BMAD.\n\n**לפרטים:** ראו סקציה \"כמה זה עולה?\" למטה",
           "markdown": true
         },
         {
           "title": "מה ההבדל בין BMAD ל-ChatGPT רגיל?",
-          "content": "**תשובה:** BMAD זה לא תחליף ל-ChatGPT - זו **שיטת עבודה מעל ChatGPT/Claude**.\n\n**הבדלים עיקריים:**\n- ChatGPT רגיל: אתם כותבים פרומפטים חופשיים ← תוצאות לא עקביות\n- BMAD: אתם מפעילים אגנטים מומחים בוורקפלואים מובנים ← תוצאות מקצועיות ועקביות\n\n**אנלוגיה:** ChatGPT = שיחה חופשית | BMAD = תהליך עבודה מובנה עם מומחים",
+          "content": "**תשובה:** BMAD זה לא תחליף ל-ChatGPT - זו **שיטת עבודה מעל ChatGPT/Claude**.\n\n**הבדלים עיקריים:**\n- ChatGPT רגיל: אתם כותבים פרומפטים חופשיים ← תוצאות לא עקביות\n- BMAD: אתם מפעילים סוכנים מומחים בוורקפלואים מובנים ← תוצאות מקצועיות ועקביות\n\n**אנלוגיה:** ChatGPT = שיחה חופשית | BMAD = תהליך עבודה מובנה עם מומחים",
           "markdown": true
         },
         {
@@ -185,7 +185,7 @@
         },
         {
           "title": "האם BMAD מתאים למנהלי מוצר ואנליסטים?",
-          "content": "**תשובה:** כן! למעשה, מנהלי מוצר הם אחד מקהלי היעד המרכזיים:\n\n**מה אתם מרויחים:**\n- כתיבת PRDs מקצועיים תוך דקות\n- ניתוח שוק ותחרות\n- הגדרת Epics ו-Stories\n- תקשורת עם הצוות הטכני\n\n**אגנט מרכזי:** John (PM) ו-Mary (Analyst)\n\n**לפרטים:** [מדריך למנהלי מוצר](/guides/role-product-managers)",
+          "content": "**תשובה:** כן! למעשה, מנהלי מוצר הם אחד מקהלי היעד המרכזיים:\n\n**מה אתם מרויחים:**\n- כתיבת PRDs מקצועיים תוך דקות\n- ניתוח שוק ותחרות\n- הגדרת Epics ו-Stories\n- תקשורת עם הצוות הטכני\n\n**סוכן מרכזי:** John (PM) ו-Mary (Analyst)\n\n**לפרטים:** [מדריך למנהלי מוצר](/guides/role-product-managers)",
           "markdown": true
         },
         {
@@ -239,12 +239,12 @@
         },
         {
           "title": "האם צריך IDE מסוים?",
-          "content": "**תשובה:** כן, BMAD עובד הכי טוב עם **Cursor IDE**.\n\n**למה Cursor?**\n- תמיכה מובנית ב-AI (Claude)\n- הקלדת @ לטעינת אגנטים\n- Context management חזק\n- UI/UX מעולה לעבודה עם AI\n\n**חלופות:** ניתן להשתמש גם ב-VS Code + Claude API, אבל זה מסובך יותר\n\n**המלצה:** התחילו עם Cursor - זה הכי קל",
+          "content": "**תשובה:** כן, BMAD עובד הכי טוב עם **Cursor IDE**.\n\n**למה Cursor?**\n- תמיכה מובנית ב-AI (Claude)\n- הקלדת @ לטעינת סוכנים\n- Context management חזק\n- UI/UX מעולה לעבודה עם AI\n\n**חלופות:** ניתן להשתמש גם ב-VS Code + Claude API, אבל זה מסובך יותר\n\n**המלצה:** התחילו עם Cursor - זה הכי קל",
           "markdown": true
         },
         {
           "title": "מה זה Cursor ולמה צריך אותו?",
-          "content": "**תשובה:** Cursor הוא עורך קוד מבוסס VS Code עם יכולות AI מתקדמות.\n\n**מה הוא מאפשר:**\n- שיחה ישירה עם Claude/GPT בתוך הקוד\n- טעינת אגנטים BMAD עם @\n- Context management חכם\n- דיאלוג רציף עם ה-AI\n\n**למה צריך אותו:** BMAD משתמש בפיצ'רים הייחודיים של Cursor\n\n**חינמי?** יש גרסה חינמית + גרסאות בתשלום\n\n**הורדה:** [cursor.sh](https://cursor.sh)",
+          "content": "**תשובה:** Cursor הוא עורך קוד מבוסס VS Code עם יכולות AI מתקדמות.\n\n**מה הוא מאפשר:**\n- שיחה ישירה עם Claude/GPT בתוך הקוד\n- טעינת סוכנים BMAD עם @\n- Context management חכם\n- דיאלוג רציף עם ה-AI\n\n**למה צריך אותו:** BMAD משתמש בפיצ'רים הייחודיים של Cursor\n\n**חינמי?** יש גרסה חינמית + גרסאות בתשלום\n\n**הורדה:** [cursor.sh](https://cursor.sh)",
           "markdown": true
         },
         {
@@ -254,7 +254,7 @@
         },
         {
           "title": "כמה זמן לוקח ללמוד את BMAD?",
-          "content": "**תשובה:** תלוי ברמה שרוצים להגיע:\n\n**שימוש בסיסי:** 1-2 ימים\n- הפעלת אגנטים פשוטים\n- ריצת וורקפלואים בסיסיים\n- בניית דברים קטנים\n\n**שימוש ביניים:** 1-2 שבועות\n- הכרת כל האגנטים\n- שילוב וורקפלואים\n- פרויקטים בינוניים\n\n**שליטה מלאה:** חודש-חודשיים\n- פרויקטים מורכבים\n- התאמות אישיות\n- עבודה צוותית\n\n**טיפ:** למדו תוך כדי עבודה - זה הכי יעיל!",
+          "content": "**תשובה:** תלוי ברמה שרוצים להגיע:\n\n**שימוש בסיסי:** 1-2 ימים\n- הפעלת סוכנים פשוטים\n- ריצת וורקפלואים בסיסיים\n- בניית דברים קטנים\n\n**שימוש ביניים:** 1-2 שבועות\n- הכרת כל הסוכנים\n- שילוב וורקפלואים\n- פרויקטים בינוניים\n\n**שליטה מלאה:** חודש-חודשיים\n- פרויקטים מורכבים\n- התאמות אישיות\n- עבודה צוותית\n\n**טיפ:** למדו תוך כדי עבודה - זה הכי יעיל!",
           "markdown": true
         },
         {
@@ -283,7 +283,7 @@
       "items": [
         {
           "title": "האם BMAD חינמי?",
-          "content": "**תשובה:** כן! BMAD עצמו **חינמי לחלוטין וקוד פתוח**.\n\n**מה כלול בחינם:**\n- כל האגנטים (11 אגנטים מקצועיים)\n- כל הוורקפלואים (35+ וורקפלואים)\n- המתודולוגיה המלאה\n- כל המדריכים והתיעוד\n- עדכונים חינמיים\n\n**אין:** רישיונות, מנויים, הגבלות שימוש\n\n**מה כן עולה:** שירותי AI (Claude/GPT) שהאגנטים משתמשים בהם",
+          "content": "**תשובה:** כן! BMAD עצמו **חינמי לחלוטין וקוד פתוח**.\n\n**מה כלול בחינם:**\n- כל הסוכנים (11 סוכנים מקצועיים)\n- כל הוורקפלואים (35+ וורקפלואים)\n- המתודולוגיה המלאה\n- כל המדריכים והתיעוד\n- עדכונים חינמיים\n\n**אין:** רישיונות, מנויים, הגבלות שימוש\n\n**מה כן עולה:** שירותי AI (Claude/GPT) שהסוכנים משתמשים בהם",
           "markdown": true
         },
         {
@@ -303,7 +303,7 @@
         },
         {
           "title": "האם אפשר להשתמש עם ChatGPT במקום Claude?",
-          "content": "**תשובה:** כן, אבל עם הגבלות.\n\n**ChatGPT עובד:**\n- רוב האגנטים פועלים טוב\n- וורקפלואים בסיסיים עובדים\n\n**Claude עדיף:**\n- הקשר (context) גדול יותר\n- תשובות ארוכות יותר\n- פחות מגבלות\n- BMAD אופטימלי ל-Claude\n\n**המלצה:** אם יש אפשרות - Claude. אם לא - ChatGPT גם בסדר (במיוחד GPT-4)\n\n**טיפ:** אפשר להתחיל עם ChatGPT ולעבור ל-Claude אחר כך",
+          "content": "**תשובה:** כן, אבל עם הגבלות.\n\n**ChatGPT עובד:**\n- רוב הסוכנים פועלים טוב\n- וורקפלואים בסיסיים עובדים\n\n**Claude עדיף:**\n- הקשר (context) גדול יותר\n- תשובות ארוכות יותר\n- פחות מגבלות\n- BMAD אופטימלי ל-Claude\n\n**המלצה:** אם יש אפשרות - Claude. אם לא - ChatGPT גם בסדר (במיוחד GPT-4)\n\n**טיפ:** אפשר להתחיל עם ChatGPT ולעבור ל-Claude אחר כך",
           "markdown": true
         },
         {
@@ -342,7 +342,7 @@
         },
         {
           "title": "האם אפשר לבנות משחקים?",
-          "content": "**תשובה:** כן! ל-BMAD יש אגנטים מיוחדים לפיתוח משחקים:\n\n**אגנטי משחקים:**\n- **Game Designer** - עיצוב גיימפליי\n- **Game Architect** - ארכיטקטורת משחק\n- **Game Dev** - פיתוח\n\n**סוגי משחקים:**\n- משחקי דפדפן (HTML5)\n- משחקים 2D (Phaser, PixiJS)\n- משחקים 3D (Three.js, Babylon.js)\n- משחקים מובייל\n\n**לפרטים:** [מדריך למפתחי משחקים](/guides/role-game-developers)",
+          "content": "**תשובה:** כן! ל-BMAD יש סוכנים מיוחדים לפיתוח משחקים:\n\n**סוכןי משחקים:**\n- **Game Designer** - עיצוב גיימפליי\n- **Game Architect** - ארכיטקטורת משחק\n- **Game Dev** - פיתוח\n\n**סוגי משחקים:**\n- משחקי דפדפן (HTML5)\n- משחקים 2D (Phaser, PixiJS)\n- משחקים 3D (Three.js, Babylon.js)\n- משחקים מובייל\n\n**לפרטים:** [מדריך למפתחי משחקים](/guides/role-game-developers)",
           "markdown": true
         },
         {
@@ -380,8 +380,8 @@
           "markdown": true
         },
         {
-          "title": "לא מצליח להפעיל אגנט, למה?",
-          "content": "**תשובה:** בדקו את הדברים הבאים:\n\n**בדיקות:**\n1. **האם כתבתם @ לפני שם האגנט?** (לדוגמה: @pm)\n2. **האם האגנט קיים?** (בדקו רשימת אגנטים)\n3. **האם Cursor מחובר ל-AI?** (בדקו בהגדרות)\n4. **האם יש לכם מנוי פעיל?** (Claude/GPT)\n\n**פתרון מהיר:**\n- נסו לכתוב @pm ולבחור מהרשימה\n- אם לא עובד - עשו restart ל-Cursor\n\n**עזרה:** [מדריך אגנטים](/guides/agents-intro-pm-analyst)",
+          "title": "לא מצליח להפעיל סוכן, למה?",
+          "content": "**תשובה:** בדקו את הדברים הבאים:\n\n**בדיקות:**\n1. **האם כתבתם @ לפני שם הסוכן?** (לדוגמה: @pm)\n2. **האם הסוכן קיים?** (בדקו רשימת סוכנים)\n3. **האם Cursor מחובר ל-AI?** (בדקו בהגדרות)\n4. **האם יש לכם מנוי פעיל?** (Claude/GPT)\n\n**פתרון מהיר:**\n- נסו לכתוב @pm ולבחור מהרשימה\n- אם לא עובד - עשו restart ל-Cursor\n\n**עזרה:** [מדריך סוכנים](/guides/agents-intro-pm-analyst)",
           "markdown": true
         },
         {
@@ -401,7 +401,7 @@
         },
         {
           "title": "יש לי שאלה שלא מופיעה כאן",
-          "content": "**תשובה:** אם לא מצאתם תשובה, יש כמה אופציות:\n\n**1. בדקו FAQ אחרים:**\n- [FAQ: התקנה](/guides/faq-installation)\n- [FAQ: אגנטים](/guides/faq-agents)\n- [FAQ: וורקפלואים](/guides/faq-workflows)\n- [FAQ: פיתוח](/guides/faq-development)\n\n**2. חפשו במדריכים:**\n- השתמשו בחיפוש באתר\n- בדקו מדריך לפי תפקיד\n\n**3. שאלו בקהילה:** (בקרוב)\n- Discord\n- GitHub\n\n**טיפ:** אל תהססו לשאול - כולם התחילו כמתחילים!",
+          "content": "**תשובה:** אם לא מצאתם תשובה, יש כמה אופציות:\n\n**1. בדקו FAQ אחרים:**\n- [FAQ: התקנה](/guides/faq-installation)\n- [FAQ: סוכנים](/guides/faq-agents)\n- [FAQ: וורקפלואים](/guides/faq-workflows)\n- [FAQ: פיתוח](/guides/faq-development)\n\n**2. חפשו במדריכים:**\n- השתמשו בחיפוש באתר\n- בדקו מדריך לפי תפקיד\n\n**3. שאלו בקהילה:** (בקרוב)\n- Discord\n- GitHub\n\n**טיפ:** אל תהססו לשאול - כולם התחילו כמתחילים!",
           "markdown": true
         },
         {
@@ -430,7 +430,7 @@
       "items": [
         {
           "title": "מה ההבדל בין BMAD ל-ChatGPT?",
-          "content": "**תשובה:** הבדל משמעותי:\n\n**ChatGPT:**\n- שיחה חופשית עם AI\n- אתם כותבים פרומפטים\n- אין מבנה או תהליך\n- תוצאות משתנות\n\n**BMAD:**\n- מתודולוגיה מובנית\n- אגנטים מומחים בתפקידים\n- וורקפלואים ברורים\n- תוצאות עקביות\n\n**אנלוגיה:**\n- ChatGPT = שואלים חבר מומחה\n- BMAD = עובדים עם צוות מקצועי מלא\n\n**לפרטים:** [מה זה BMAD?](/guides/quick-start#what-is-bmad)",
+          "content": "**תשובה:** הבדל משמעותי:\n\n**ChatGPT:**\n- שיחה חופשית עם AI\n- אתם כותבים פרומפטים\n- אין מבנה או תהליך\n- תוצאות משתנות\n\n**BMAD:**\n- מתודולוגיה מובנית\n- סוכנים מומחים בתפקידים\n- וורקפלואים ברורים\n- תוצאות עקביות\n\n**אנלוגיה:**\n- ChatGPT = שואלים חבר מומחה\n- BMAD = עובדים עם צוות מקצועי מלא\n\n**לפרטים:** [מה זה BMAD?](/guides/quick-start#what-is-bmad)",
           "markdown": true
         },
         {
@@ -440,7 +440,7 @@
         },
         {
           "title": "מה ההבדל בין BMAD ל-Cursor AI רגיל?",
-          "content": "**תשובה:** BMAD **עובד דרך Cursor**, אבל מוסיף שכבה:\n\n**Cursor רגיל:**\n- תכתבו פרומפטים חופשיים\n- AI עונה לפי הבנתו\n- אין תהליך מובנה\n\n**BMAD בתוך Cursor:**\n- טוענים אגנטים מומחים (@pm, @architect)\n- עובדים לפי וורקפלואים\n- תוצרים סטנדרטיים\n\n**משמעות:** BMAD הופך את Cursor למקצועי יותר\n\n**אנלוגיה:** Cursor = הכלי | BMAD = שיטת העבודה",
+          "content": "**תשובה:** BMAD **עובד דרך Cursor**, אבל מוסיף שכבה:\n\n**Cursor רגיל:**\n- תכתבו פרומפטים חופשיים\n- AI עונה לפי הבנתו\n- אין תהליך מובנה\n\n**BMAD בתוך Cursor:**\n- טוענים סוכנים מומחים (@pm, @architect)\n- עובדים לפי וורקפלואים\n- תוצרים סטנדרטיים\n\n**משמעות:** BMAD הופך את Cursor למקצועי יותר\n\n**אנלוגיה:** Cursor = הכלי | BMAD = שיטת העבודה",
           "markdown": true
         },
         {
@@ -474,7 +474,7 @@
       "ordered": false,
       "items": [
         "**[FAQ חלק 1ב: התקנה](/guides/faq-installation)** - שאלות על התקנה והגדרה",
-        "**[FAQ חלק 2א: אגנטים](/guides/faq-agents)** - שאלות על אגנטים ספציפיים",
+        "**[FAQ חלק 2א: סוכנים](/guides/faq-agents)** - שאלות על סוכנים ספציפיים",
         "**[FAQ חלק 2ב: וורקפלואים](/guides/faq-workflows)** - שאלות על תהליכי עבודה",
         "**[FAQ חלק 3א: פיתוח](/guides/faq-development)** - שאלות על תהליך הפיתוח",
         "**[FAQ חלק 3ב: עבודה צוותית](/guides/faq-team)** - שאלות על שיתוף פעולה",
