--- a/src/content/locale/he/guides/faq/development.json
+++ b/src/content/locale/he/guides/faq/development.json
@@ -133,7 +133,7 @@
         },
         {
           "title": "מה לעשות אם תקעתי באמצע הפיתוח?",
-          "content": "**תשובה:** יש כמה אסטרטגיות:\n\n**1. בקשו עזרה מהאגנט**\n```\nתקעתי.\nאני מנסה לעשות X\nאבל קורה Y.\n\nמה יכול להיות הבעיה?\n```\n\n**2. פצלו את הבעיה**\n```\nהבעיה נראית מורכבת.\nבואי נפצל אותה לחלקים קטנים.\n```\n\n**3. חקרו דוגמאות**\n```\nתראי לי דוגמה איך לעשות X\nבקוד דומה בפרויקט.\n```\n\n**4. תקראו תיעוד**\n```\nאיפה אפשר למצוא תיעוד על\nAPI הזה?\n```\n\n**5. עברו לגישה אחרת**\n```\nהגישה הזו לא עובדת.\nמה אפשרויות אחרות?\n```\n\n**6. קחו הפסקה**\n- לפעמים המוח צריך מנוחה\n- חזרו עם ראש צלול\n\n**7. פנו לצוות**\n- תשאלו עמית\n- code review מוקדם\n- pair programming\n\n**טיפ:** לא לתקוע יותר מ-30 דקות - שאלו עזרה!",
+          "content": "**תשובה:** יש כמה אסטרטגיות:\n\n**1. בקשו עזרה מהסוכן**\n```\nתקעתי.\nאני מנסה לעשות X\nאבל קורה Y.\n\nמה יכול להיות הבעיה?\n```\n\n**2. פצלו את הבעיה**\n```\nהבעיה נראית מורכבת.\nבואי נפצל אותה לחלקים קטנים.\n```\n\n**3. חקרו דוגמאות**\n```\nתראי לי דוגמה איך לעשות X\nבקוד דומה בפרויקט.\n```\n\n**4. תקראו תיעוד**\n```\nאיפה אפשר למצוא תיעוד על\nAPI הזה?\n```\n\n**5. עברו לגישה אחרת**\n```\nהגישה הזו לא עובדת.\nמה אפשרויות אחרות?\n```\n\n**6. קחו הפסקה**\n- לפעמים המוח צריך מנוחה\n- חזרו עם ראש צלול\n\n**7. פנו לצוות**\n- תשאלו עמית\n- code review מוקדם\n- pair programming\n\n**טיפ:** לא לתקוע יותר מ-30 דקות - שאלו עזרה!",
           "markdown": true
         },
         {
@@ -276,7 +276,7 @@
         "**[Development Flow](/guides/workflows-development)** - תהליך הפיתוח המלא",
         "**[Best Practices](/guides/best-practices)** - שיטות עבודה מומלצות",
         "**[FAQ וורקפלואים](/guides/faq-workflows)** - שאלות על workflows",
-        "**[FAQ אגנטים](/guides/faq-agents)** - שאלות על אגנטים",
+        "**[FAQ סוכנים](/guides/faq-agents)** - שאלות על סוכנים",
         "**[מדריך למפתחים](/guides/role-developers)** - מדריך מלא למפתחים",
         "**[Testing & Quality](/guides/workflows-testing)** - מדריך בדיקות מקיף"
       ]
