--- a/src/content/locale/he/guides/faq/workflows.json
+++ b/src/content/locale/he/guides/faq/workflows.json
@@ -83,7 +83,7 @@
       "items": [
         {
           "title": "מה זה וורקפלו?",
-          "content": "**תשובה:** וורקפלו הוא **תהליך עבודה מובנה** שאגנט מריץ צעד אחר צעד.\n\n**הבדל מפרומפט רגיל:**\n- **פרומפט רגיל:** \"תכתוב PRD\" ← תשובה חופשית\n- **וורקפלו:** תהליך מובנה עם שלבים מוגדרים, שאלות, validation\n\n**מה וורקפלו כולל:**\n1. **שלבים ברורים** - מה לעשות בכל שלב\n2. **שאלות הבהרה** - האגנט שואל מה שצריך\n3. **תבניות** - פורמט סטנדרטי לתוצר\n4. **בדיקות** - validation שהכל תקין\n5. **תיעוד** - שמירת התוצאות\n\n**דוגמה:**\nהוורקפלו `prd` יוביל אתכם דרך:\n- הבנת הצורך העסקי\n- זיהוי משתמשי יעד\n- הגדרת דרישות\n- תעדוף פיצ'רים\n- כתיבת PRD מלא\n\n**לפרטים:** [מבוא לוורקפלואים](/guides/workflows-intro-critical)",
+          "content": "**תשובה:** וורקפלו הוא **תהליך עבודה מובנה** שסוכן מריץ צעד אחר צעד.\n\n**הבדל מפרומפט רגיל:**\n- **פרומפט רגיל:** \"תכתוב PRD\" ← תשובה חופשית\n- **וורקפלו:** תהליך מובנה עם שלבים מוגדרים, שאלות, validation\n\n**מה וורקפלו כולל:**\n1. **שלבים ברורים** - מה לעשות בכל שלב\n2. **שאלות הבהרה** - הסוכן שואל מה שצריך\n3. **תבניות** - פורמט סטנדרטי לתוצר\n4. **בדיקות** - validation שהכל תקין\n5. **תיעוד** - שמירת התוצאות\n\n**דוגמה:**\nהוורקפלו `prd` יוביל אתכם דרך:\n- הבנת הצורך העסקי\n- זיהוי משתמשי יעד\n- הגדרת דרישות\n- תעדוף פיצ'רים\n- כתיבת PRD מלא\n\n**לפרטים:** [מבוא לוורקפלואים](/guides/workflows-intro-critical)",
           "markdown": true
         },
         {
@@ -93,7 +93,7 @@
         },
         {
           "title": "איך מריצים וורקפלו?",
-          "content": "**תשובה:** יש שתי דרכים:\n\n**דרך 1: דרך תפריט האגנט (מומלץ למתחילים)**\n1. טענו את האגנט הרלוונטי\n2. האגנט יציג תפריט\n3. בחרו את הוורקפלו מהתפריט (מספר או שם)\n4. עקבו אחרי ההוראות\n\n**דוגמה:**\n```\n@pm\n\n[תפריט מופיע]\n\n2 - prd\n\n[הוורקפלו מתחיל]\n```\n\n**דרך 2: בקשה ישירה (למתקדמים)**\n```\n@pm\n\nהרץ את הוורקפלו prd עבור\nאפליקציית Todo management\n```\n\n**טיפ:** התפריט הכי פשוט - השתמשו בו בהתחלה!\n\n**לפרטים:** [מבוא לאגנטים](/guides/agents-intro-pm-analyst)",
+          "content": "**תשובה:** יש שתי דרכים:\n\n**דרך 1: דרך תפריט הסוכן (מומלץ למתחילים)**\n1. טענו את הסוכן הרלוונטי\n2. הסוכן יציג תפריט\n3. בחרו את הוורקפלו מהתפריט (מספר או שם)\n4. עקבו אחרי ההוראות\n\n**דוגמה:**\n```\n@pm\n\n[תפריט מופיע]\n\n2 - prd\n\n[הוורקפלו מתחיל]\n```\n\n**דרך 2: בקשה ישירה (למתקדמים)**\n```\n@pm\n\nהרץ את הוורקפלו prd עבור\nאפליקציית Todo management\n```\n\n**טיפ:** התפריט הכי פשוט - השתמשו בו בהתחלה!\n\n**לפרטים:** [מבוא לסוכנים](/guides/agents-intro-pm-analyst)",
           "markdown": true
         },
         {
@@ -118,7 +118,7 @@
         },
         {
           "title": "האם אפשר להפסיק וורקפלו באמצע ולחזור אליו?",
-          "content": "**תשובה:** כן! זה אחד היתרונות של BMAD.\n\n**איך עוצרים:**\n1. פשוט תעצרו לכתוב\n2. סגרו את הצ'אט\n3. תעשו מה שאתם צריכים\n\n**איך חוזרים:**\n1. פתחו את אותו צ'אט\n2. האגנט זוכר את הקונטקסט\n3. תמשיכו מהמקום שעצרתם\n\n**טיפ חשוב:**\nלפני שעוצרים, בקשו סיכום:\n```\nתסכם לי מה עשינו עד עכשיו\nומה נשאר לעשות.\n```\n\n**יתרון:** אפשר לעשות הפסקות, לחשוב, לחקור\n\n**חיסרון:** אם הצ'אט יהיה ארוך מדי - אולי עדיף להתחיל חדש עם סיכום",
+          "content": "**תשובה:** כן! זה אחד היתרונות של BMAD.\n\n**איך עוצרים:**\n1. פשוט תעצרו לכתוב\n2. סגרו את הצ'אט\n3. תעשו מה שאתם צריכים\n\n**איך חוזרים:**\n1. פתחו את אותו צ'אט\n2. הסוכן זוכר את הקונטקסט\n3. תמשיכו מהמקום שעצרתם\n\n**טיפ חשוב:**\nלפני שעוצרים, בקשו סיכום:\n```\nתסכם לי מה עשינו עד עכשיו\nומה נשאר לעשות.\n```\n\n**יתרון:** אפשר לעשות הפסקות, לחשוב, לחקור\n\n**חיסרון:** אם הצ'אט יהיה ארוך מדי - אולי עדיף להתחיל חדש עם סיכום",
           "markdown": true
         }
       ]
@@ -137,32 +137,32 @@
       "items": [
         {
           "title": "מה זה הוורקפלו brainstorming ומתי להשתמש בו?",
-          "content": "**תשובה:** `brainstorming` הוא הוורקפלו **הראשון בתהליך** - פיתוח רעיונות.\n\n**מה הוא עושה:**\n- מוציא את הרעיון הגולמי מהראש\n- שואל שאלות חודרניות\n- עוזר לזהות צרכים\n- מפתח את הרעיון לכיוונים\n- מייצר רשימת אפשרויות\n\n**מתי להשתמש:**\n- יש רעיון מעורפל\n- לא בטוחים מה לבנות\n- צריכים כיוונים חדשים\n- מחפשים אינספירציה\n\n**עם איזה אגנט:**\n- @analyst (Mary) - הכי מתאים\n- @pm (John) - גם טוב\n\n**דוגמה:**\n```\n@analyst\n\nהרצי brainstorming.\n\nיש לי רעיון לאפליקציה\nשעוזרת לאנשים ללמוד שפות.\n```\n\n**תוצר:** רשימת כיוונים אפשריים + המלצות\n\n**הבא:** `product-brief` או `research`\n\n**לפרטים:** [Phase 0-1](/guides/workflows-phase0-1)",
+          "content": "**תשובה:** `brainstorming` הוא הוורקפלו **הראשון בתהליך** - פיתוח רעיונות.\n\n**מה הוא עושה:**\n- מוציא את הרעיון הגולמי מהראש\n- שואל שאלות חודרניות\n- עוזר לזהות צרכים\n- מפתח את הרעיון לכיוונים\n- מייצר רשימת אפשרויות\n\n**מתי להשתמש:**\n- יש רעיון מעורפל\n- לא בטוחים מה לבנות\n- צריכים כיוונים חדשים\n- מחפשים אינספירציה\n\n**עם איזה סוכן:**\n- @analyst (Mary) - הכי מתאים\n- @pm (John) - גם טוב\n\n**דוגמה:**\n```\n@analyst\n\nהרצי brainstorming.\n\nיש לי רעיון לאפליקציה\nשעוזרת לאנשים ללמוד שפות.\n```\n\n**תוצר:** רשימת כיוונים אפשריים + המלצות\n\n**הבא:** `product-brief` או `research`\n\n**לפרטים:** [Phase 0-1](/guides/workflows-phase0-1)",
           "markdown": true
         },
         {
           "title": "מה זה הוורקפלו prd ומתי להשתמש בו?",
-          "content": "**תשובה:** `prd` (Product Requirements Document) הוא אחד הוורקפלואים **המרכזיים והחשובים**.\n\n**מה הוא עושה:**\n- כותב מסמך דרישות מפורט\n- מגדיר מה לבנות ולמה\n- מפרט תכונות ופונקציונליות\n- קובע קריטריוני הצלחה\n- מייצר תשתית לכל הפרויקט\n\n**מתי להשתמש:**\n- אחרי `product-brief`\n- כשהרעיון ברור\n- לפני התחלת פיתוח\n- צריך מפרט מקיף\n\n**דרישות מוקדמות:**\n- רעיון ברור\n- בריף ראשוני (רצוי)\n- הבנת קהל יעד\n\n**עם איזה אגנט:**\n- @pm (John) - זה התפקיד שלו!\n\n**דוגמה:**\n```\n@pm\n\nהרץ prd עבור אפליקציית\nניהול משימות לצוותים קטנים.\n```\n\n**תוצר:** מסמך PRD מלא (10-20 עמודים)\n\n**הבא:** `architecture`, `tech-spec`, `create-ux-design`\n\n**לפרטים:** [Phase 2 Core](/guides/workflows-phase2-core)",
+          "content": "**תשובה:** `prd` (Product Requirements Document) הוא אחד הוורקפלואים **המרכזיים והחשובים**.\n\n**מה הוא עושה:**\n- כותב מסמך דרישות מפורט\n- מגדיר מה לבנות ולמה\n- מפרט תכונות ופונקציונליות\n- קובע קריטריוני הצלחה\n- מייצר תשתית לכל הפרויקט\n\n**מתי להשתמש:**\n- אחרי `product-brief`\n- כשהרעיון ברור\n- לפני התחלת פיתוח\n- צריך מפרט מקיף\n\n**דרישות מוקדמות:**\n- רעיון ברור\n- בריף ראשוני (רצוי)\n- הבנת קהל יעד\n\n**עם איזה סוכן:**\n- @pm (John) - זה התפקיד שלו!\n\n**דוגמה:**\n```\n@pm\n\nהרץ prd עבור אפליקציית\nניהול משימות לצוותים קטנים.\n```\n\n**תוצר:** מסמך PRD מלא (10-20 עמודים)\n\n**הבא:** `architecture`, `tech-spec`, `create-ux-design`\n\n**לפרטים:** [Phase 2 Core](/guides/workflows-phase2-core)",
           "markdown": true
         },
         {
           "title": "מה זה הוורקפלו architecture ומתי להשתמש בו?",
-          "content": "**תשובה:** `architecture` הוא הוורקפלו לתכנון **הארכיטקטורה הטכנית** של המערכת.\n\n**מה הוא עושה:**\n- מתכנן את מבנה המערכת\n- בוחר טכנולוגיות\n- מגדיר components ו-modules\n- מתכנן תקשורת בין חלקים\n- יוצר דיאגרמות ארכיטקטורה\n\n**מתי להשתמש:**\n- אחרי שיש PRD\n- לפני התחלת פיתוח\n- כשצריך תכנון טכני\n- לפרויקטים מורכבים\n\n**דרישות מוקדמות:**\n- PRD מוכן\n- הבנת הדרישות\n- ידע על האילוצים\n\n**עם איזה אגנט:**\n- @architect (Sarah) - היא המומחית!\n\n**דוגמה:**\n```\n@architect\n\nהרצי architecture.\n\nהנה ה-PRD שלנו:\n[מדביקים את ה-PRD]\n\nתתכנני ארכיטקטורה.\n```\n\n**תוצר:** מסמך ארכיטקטורה + דיאגרמות\n\n**הבא:** `tech-spec`, `create-epics-and-stories`\n\n**לפרטים:** [Phase 2 Core](/guides/workflows-phase2-core)",
+          "content": "**תשובה:** `architecture` הוא הוורקפלו לתכנון **הארכיטקטורה הטכנית** של המערכת.\n\n**מה הוא עושה:**\n- מתכנן את מבנה המערכת\n- בוחר טכנולוגיות\n- מגדיר components ו-modules\n- מתכנן תקשורת בין חלקים\n- יוצר דיאגרמות ארכיטקטורה\n\n**מתי להשתמש:**\n- אחרי שיש PRD\n- לפני התחלת פיתוח\n- כשצריך תכנון טכני\n- לפרויקטים מורכבים\n\n**דרישות מוקדמות:**\n- PRD מוכן\n- הבנת הדרישות\n- ידע על האילוצים\n\n**עם איזה סוכן:**\n- @architect (Sarah) - היא המומחית!\n\n**דוגמה:**\n```\n@architect\n\nהרצי architecture.\n\nהנה ה-PRD שלנו:\n[מדביקים את ה-PRD]\n\nתתכנני ארכיטקטורה.\n```\n\n**תוצר:** מסמך ארכיטקטורה + דיאגרמות\n\n**הבא:** `tech-spec`, `create-epics-and-stories`\n\n**לפרטים:** [Phase 2 Core](/guides/workflows-phase2-core)",
           "markdown": true
         },
         {
           "title": "מה זה הוורקפלו dev-story ומתי להשתמש בו?",
-          "content": "**תשובה:** `dev-story` הוא הוורקפלו **למימוש Story** - כתיבת הקוד.\n\n**מה הוא עושה:**\n- מבין את הדרישות של ה-Story\n- מתכנן את המימוש\n- כותב את הקוד\n- מריץ בדיקות\n- מתעד את העבודה\n\n**מתי להשתמש:**\n- כשיש Story מוכנה לפיתוח\n- אחרי `story-context`\n- בתוך הספרינט\n- כשהכל מוכן להתחיל\n\n**דרישות מוקדמות:**\n- Story מוכנה (Definition of Ready)\n- Story Context ברור\n- סביבת פיתוח מוכנה\n\n**עם איזה אגנט:**\n- @dev (Amelia) - המפתחת!\n\n**דוגמה:**\n```\n@dev\n\nהרצי dev-story.\n\nStory: הוספת כפתור login\nContext: [קישור/העתקה]\n\nבואי נפתח.\n```\n\n**תוצר:** קוד עובד + תיעוד\n\n**הבא:** `code-review`, `story-done`\n\n**לפרטים:** [Development Flow](/guides/workflows-development)",
+          "content": "**תשובה:** `dev-story` הוא הוורקפלו **למימוש Story** - כתיבת הקוד.\n\n**מה הוא עושה:**\n- מבין את הדרישות של ה-Story\n- מתכנן את המימוש\n- כותב את הקוד\n- מריץ בדיקות\n- מתעד את העבודה\n\n**מתי להשתמש:**\n- כשיש Story מוכנה לפיתוח\n- אחרי `story-context`\n- בתוך הספרינט\n- כשהכל מוכן להתחיל\n\n**דרישות מוקדמות:**\n- Story מוכנה (Definition of Ready)\n- Story Context ברור\n- סביבת פיתוח מוכנה\n\n**עם איזה סוכן:**\n- @dev (Amelia) - המפתחת!\n\n**דוגמה:**\n```\n@dev\n\nהרצי dev-story.\n\nStory: הוספת כפתור login\nContext: [קישור/העתקה]\n\nבואי נפתח.\n```\n\n**תוצר:** קוד עובד + תיעוד\n\n**הבא:** `code-review`, `story-done`\n\n**לפרטים:** [Development Flow](/guides/workflows-development)",
           "markdown": true
         },
         {
           "title": "מה זה הוורקפלו sprint-planning ומתי להשתמש בו?",
-          "content": "**תשובה:** `sprint-planning` הוא הוורקפלו **לתכנון ספרינט** חדש.\n\n**מה הוא עושה:**\n- בוחר Stories לספרינט\n- מעריך עומס עבודה\n- מחלק משימות\n- קובע יעדי ספרינט\n- יוצר תוכנית ספרינט\n\n**מתי להשתמש:**\n- בתחילת כל ספרינט\n- אחרי retrospective\n- כשיש backlog מוכן\n- לפני התחלת עבודה\n\n**דרישות מוקדמות:**\n- Backlog עם Stories מוכנות\n- הבנת קצב הצוות (velocity)\n- זמינות הצוות\n\n**עם איזה אגנט:**\n- @sm (Bob) - סקראם מאסטר!\n\n**דוגמה:**\n```\n@sm\n\nהרץ sprint-planning.\n\nספרינט חדש - שבועיים.\nהצוות: 3 מפתחים.\nBacklog: [קישור]\n```\n\n**תוצר:** תוכנית ספרינט מלאה\n\n**הבא:** `dev-story` (לכל Story)\n\n**לפרטים:** [Sprint Setup](/guides/workflows-sprint-setup)",
+          "content": "**תשובה:** `sprint-planning` הוא הוורקפלו **לתכנון ספרינט** חדש.\n\n**מה הוא עושה:**\n- בוחר Stories לספרינט\n- מעריך עומס עבודה\n- מחלק משימות\n- קובע יעדי ספרינט\n- יוצר תוכנית ספרינט\n\n**מתי להשתמש:**\n- בתחילת כל ספרינט\n- אחרי retrospective\n- כשיש backlog מוכן\n- לפני התחלת עבודה\n\n**דרישות מוקדמות:**\n- Backlog עם Stories מוכנות\n- הבנת קצב הצוות (velocity)\n- זמינות הצוות\n\n**עם איזה סוכן:**\n- @sm (Bob) - סקראם מאסטר!\n\n**דוגמה:**\n```\n@sm\n\nהרץ sprint-planning.\n\nספרינט חדש - שבועיים.\nהצוות: 3 מפתחים.\nBacklog: [קישור]\n```\n\n**תוצר:** תוכנית ספרינט מלאה\n\n**הבא:** `dev-story` (לכל Story)\n\n**לפרטים:** [Sprint Setup](/guides/workflows-sprint-setup)",
           "markdown": true
         },
         {
           "title": "מה זה הוורקפלו code-review ומתי להשתמש בו?",
-          "content": "**תשובה:** `code-review` הוא הוורקפלו **לבדיקת איכות קוד**.\n\n**מה הוא עושה:**\n- בודק את הקוד שנכתב\n- מזהה באגים ובעיות\n- בודק best practices\n- מציע שיפורים\n- מאשר או דוחה\n\n**מתי להשתמש:**\n- אחרי `dev-story`\n- לפני merge ל-main\n- כשצריך ביקורת\n- לשיפור איכות\n\n**דרישות מוקדמות:**\n- קוד שנכתב\n- הבנת ה-Story\n- הקוד רץ בלי שגיאות\n\n**עם איזה אגנט:**\n- @dev (Amelia) - לביקורת עצמית\n- @architect (Sarah) - לביקורת ארכיטקטונית\n- @tea (Murat) - לזווית הבדיקות\n\n**דוגמה:**\n```\n@dev\n\nהרצי code-review.\n\nעבור הקוד ב-src/components/Login.tsx\n\nStory: הוספת אימות משתמשים\n```\n\n**תוצר:** דו\"ח ביקורת + המלצות\n\n**הבא:** תיקונים ואז `story-done`\n\n**לפרטים:** [Development Flow](/guides/workflows-development)",
+          "content": "**תשובה:** `code-review` הוא הוורקפלו **לבדיקת איכות קוד**.\n\n**מה הוא עושה:**\n- בודק את הקוד שנכתב\n- מזהה באגים ובעיות\n- בודק best practices\n- מציע שיפורים\n- מאשר או דוחה\n\n**מתי להשתמש:**\n- אחרי `dev-story`\n- לפני merge ל-main\n- כשצריך ביקורת\n- לשיפור איכות\n\n**דרישות מוקדמות:**\n- קוד שנכתב\n- הבנת ה-Story\n- הקוד רץ בלי שגיאות\n\n**עם איזה סוכן:**\n- @dev (Amelia) - לביקורת עצמית\n- @architect (Sarah) - לביקורת ארכיטקטונית\n- @tea (Murat) - לזווית הבדיקות\n\n**דוגמה:**\n```\n@dev\n\nהרצי code-review.\n\nעבור הקוד ב-src/components/Login.tsx\n\nStory: הוספת אימות משתמשים\n```\n\n**תוצר:** דו\"ח ביקורת + המלצות\n\n**הבא:** תיקונים ואז `story-done`\n\n**לפרטים:** [Development Flow](/guides/workflows-development)",
           "markdown": true
         },
         {
@@ -191,7 +191,7 @@
       "items": [
         {
           "title": "הוורקפלו לא מתחיל, מה לעשות?",
-          "content": "**תשובה:** בדקו את הדברים הבאים:\n\n**בעיה 1: האגנט לא נטען**\n- וודאו ש-@ בתחילת שם האגנט\n- נסו שוב לטעון את האגנט\n\n**בעיה 2: שם וורקפלו לא נכון**\n- בדקו שכתבתם את השם נכון\n- נסו דרך התפריט (הקלידו `*help`)\n\n**בעיה 3: דרישות מוקדמות חסרות**\n- הוורקפלו צריך מידע שאין\n- ספקו את המידע החסר\n\n**בעיה 4: הבעיה בשירות AI**\n- Claude/GPT לא זמין\n- המתינו ונסו שוב\n\n**פתרון מהיר:**\n```\n@pm\n\n*help\n\n[בחרו מהתפריט]\n```\n\n**אם עדיין לא עובד:** פתחו צ'אט חדש",
+          "content": "**תשובה:** בדקו את הדברים הבאים:\n\n**בעיה 1: הסוכן לא נטען**\n- וודאו ש-@ בתחילת שם הסוכן\n- נסו שוב לטעון את הסוכן\n\n**בעיה 2: שם וורקפלו לא נכון**\n- בדקו שכתבתם את השם נכון\n- נסו דרך התפריט (הקלידו `*help`)\n\n**בעיה 3: דרישות מוקדמות חסרות**\n- הוורקפלו צריך מידע שאין\n- ספקו את המידע החסר\n\n**בעיה 4: הבעיה בשירות AI**\n- Claude/GPT לא זמין\n- המתינו ונסו שוב\n\n**פתרון מהיר:**\n```\n@pm\n\n*help\n\n[בחרו מהתפריט]\n```\n\n**אם עדיין לא עובד:** פתחו צ'אט חדש",
           "markdown": true
         },
         {
@@ -206,7 +206,7 @@
         },
         {
           "title": "התוצר מהוורקפלו לא מספיק טוב, מה לעשות?",
-          "content": "**תשובה:** אפשר תמיד לשפר!\n\n**אופציה 1: ביקשו שיפורים**\n```\nהתוצר טוב, אבל:\n- חסר פירוט בחלק X\n- צריך להוסיף Y\n- לא ברור Z\n\nתשפר את אלה.\n```\n\n**אופציה 2: הריצו שוב עם יותר פרטים**\nלפעמים שווה להריץ את הוורקפלו מחדש עם:\n- יותר context\n- דוגמאות\n- הנחיות ברורות\n\n**אופציה 3: הריצו איטרציה נוספת**\n```\nעכשיו שיש לנו V1,\nבואו נעשה V2 משופרת.\n\nמה שנדרש:\n[רשימת שיפורים]\n```\n\n**אופציה 4: שנו אגנט**\nאולי אגנט אחר יעשה טוב יותר?\n\n**זכרו:** תוצרי AI הם **נקודת התחלה**, לא סוף",
+          "content": "**תשובה:** אפשר תמיד לשפר!\n\n**אופציה 1: ביקשו שיפורים**\n```\nהתוצר טוב, אבל:\n- חסר פירוט בחלק X\n- צריך להוסיף Y\n- לא ברור Z\n\nתשפר את אלה.\n```\n\n**אופציה 2: הריצו שוב עם יותר פרטים**\nלפעמים שווה להריץ את הוורקפלו מחדש עם:\n- יותר context\n- דוגמאות\n- הנחיות ברורות\n\n**אופציה 3: הריצו איטרציה נוספת**\n```\nעכשיו שיש לנו V1,\nבואו נעשה V2 משופרת.\n\nמה שנדרש:\n[רשימת שיפורים]\n```\n\n**אופציה 4: שנו סוכן**\nאולי סוכן אחר יעשה טוב יותר?\n\n**זכרו:** תוצרי AI הם **נקודת התחלה**, לא סוף",
           "markdown": true
         },
         {
@@ -226,7 +226,7 @@
         },
         {
           "title": "איפה התוצרים מהוורקפלו נשמרים?",
-          "content": "**תשובה:** הם **לא נשמרים אוטומטית** - אתם צריכים לשמור!\n\n**איך לשמור:**\n\n**אופציה 1: Copy-Paste לקובץ**\n1. העתיקו את התוצר מהצ'אט\n2. שמרו בקובץ בפרויקט\n3. תנו שם ברור\n\n**דוגמה:**\n```\ndocs/\n├── prd/\n│   └── user-management-prd.md\n├── architecture/\n│   └── system-architecture.md\n└── stories/\n    └── story-123.md\n```\n\n**אופציה 2: בקשו מהאגנט לשמור**\n```\nשמור את ה-PRD בקובץ:\ndocs/prd/my-product.md\n```\n\n**אופציה 3: Export**\n```\nייצא את כל התוצרים שיצרנו\nלקבצי markdown בתיקיית docs/\n```\n\n**טיפ חשוב:** שמרו בגרסאות (Git)!\n\n**המלצה:** שמרו אחרי כל וורקפלו חשוב",
+          "content": "**תשובה:** הם **לא נשמרים אוטומטית** - אתם צריכים לשמור!\n\n**איך לשמור:**\n\n**אופציה 1: Copy-Paste לקובץ**\n1. העתיקו את התוצר מהצ'אט\n2. שמרו בקובץ בפרויקט\n3. תנו שם ברור\n\n**דוגמה:**\n```\ndocs/\n├── prd/\n│   └── user-management-prd.md\n├── architecture/\n│   └── system-architecture.md\n└── stories/\n    └── story-123.md\n```\n\n**אופציה 2: בקשו מהסוכן לשמור**\n```\nשמור את ה-PRD בקובץ:\ndocs/prd/my-product.md\n```\n\n**אופציה 3: Export**\n```\nייצא את כל התוצרים שיצרנו\nלקבצי markdown בתיקיית docs/\n```\n\n**טיפ חשוב:** שמרו בגרסאות (Git)!\n\n**המלצה:** שמרו אחרי כל וורקפלו חשוב",
           "markdown": true
         }
       ]
@@ -254,8 +254,8 @@
           "markdown": true
         },
         {
-          "title": "איך משלבים וורקפלו משלי עם האגנטים?",
-          "content": "**תשובה:** וורקפלו מותאם צריך **להיות מקושר לאגנט**.\n\n**תהליך:**\n\n**1. צרו את הוורקפלו**\nקובץ YAML עם השלבים\n\n**2. הוסיפו לתפריט האגנט**\nערכו את קובץ האגנט:\n```yaml\nmenu:\n  - name: \"my-custom-workflow\"\n    description: \"התהליך המיוחד שלי\"\n    workflow: \"{project-root}/workflows/my-custom.yaml\"\n```\n\n**3. בדקו שזה עובד**\n```\n@pm\n\n*help\n\n[הוורקפלו החדש צריך להופיע]\n```\n\n**4. הריצו**\n```\n@pm\n\nmy-custom-workflow\n```\n\n**טיפ:** התחילו עם אגנט אחד, אחר כך הרחיבו\n\n**לפרטים:** [מדריך התאמה אישית](/guides/customization-guide)",
+          "title": "איך משלבים וורקפלו משלי עם הסוכנים?",
+          "content": "**תשובה:** וורקפלו מותאם צריך **להיות מקושר לסוכן**.\n\n**תהליך:**\n\n**1. צרו את הוורקפלו**\nקובץ YAML עם השלבים\n\n**2. הוסיפו לתפריט הסוכן**\nערכו את קובץ הסוכן:\n```yaml\nmenu:\n  - name: \"my-custom-workflow\"\n    description: \"התהליך המיוחד שלי\"\n    workflow: \"{project-root}/workflows/my-custom.yaml\"\n```\n\n**3. בדקו שזה עובד**\n```\n@pm\n\n*help\n\n[הוורקפלו החדש צריך להופיע]\n```\n\n**4. הריצו**\n```\n@pm\n\nmy-custom-workflow\n```\n\n**טיפ:** התחילו עם סוכן אחד, אחר כך הרחיבו\n\n**לפרטים:** [מדריך התאמה אישית](/guides/customization-guide)",
           "markdown": true
         },
         {
@@ -334,7 +334,7 @@
       "items": [
         "**[מבוא לוורקפלואים](/guides/workflows-intro-critical)** - הסבר מפורט על וורקפלואים",
         "**[מדריכי וורקפלואים](/guides/workflows-phase0-1)** - כל הוורקפלואים לפי phases",
-        "**[FAQ אגנטים](/guides/faq-agents)** - שאלות על אגנטים",
+        "**[FAQ סוכנים](/guides/faq-agents)** - שאלות על סוכנים",
         "**[FAQ יסודות](/guides/faq-basics)** - שאלות בסיסיות על BMAD",
         "**[שיטות עבודה מומלצות](/guides/best-practices)** - טיפים לעבודה יעילה",
         "**[מילון מונחים](/guides/glossary)** - הסבר על כל המושגים"
