--- a/src/content/locale/he/guides/index.json
+++ b/src/content/locale/he/guides/index.json
@@ -25,7 +25,7 @@
   {
     "id": "glossary",
     "title": "מילון מונחים מלא",
-    "description": "מילון מקיף של כל המונחים והמושגים ב-BMAD-METHOD. מסביר בצורה ברורה מה זה אגנטים, וורקפלואים, Story Context, והמונחים החשובים האחרים.",
+    "description": "מילון מקיף של כל המונחים והמושגים ב-BMAD-METHOD. מסביר בצורה ברורה מה זה סוכנים, וורקפלואים, Story Context, והמונחים החשובים האחרים.",
     "category": "core",
     "difficulty": "beginner",
     "estimatedMinutes": 30,
@@ -58,18 +58,18 @@
   {
     "id": "onboarding-week1",
     "title": "הדרכה לשבוע הראשון",
-    "description": "תוכנית שבועית מובנית להתנסות ראשונית עם BMAD. תוך שבוע תכירו 3-5 אגנטים, תריצו 5-7 וורקפלואים, ותבנו פרויקט קטן מקצה לקצה!",
+    "description": "תוכנית שבועית מובנית להתנסות ראשונית עם BMAD. תוך שבוע תכירו 3-5 סוכנים, תריצו 5-7 וורקפלואים, ותבנו פרויקט קטן מקצה לקצה!",
     "category": "onboarding",
     "difficulty": "beginner",
     "estimatedMinutes": 45,
     "icon": "IconCalendar",
-    "tags": ["הדרכה", "שבוע-ראשון", "onboarding", "למידה", "אגנטים", "וורקפלואים"],
+    "tags": ["הדרכה", "שבוע-ראשון", "onboarding", "למידה", "סוכנים", "וורקפלואים"],
     "path": "onboarding/week1.json"
   },
   {
     "id": "role-developers",
     "title": "מדריך למפתחים ומפתחות",
-    "description": "מסלול למידה מלא למפתחים - Junior, Senior, Full-Stack. שליטה באגנטים והוורקפלואים הרלוונטיים, תרחישים מעשיים מהעבודה, והתאמה אישית לצרכים שלכם.",
+    "description": "מסלול למידה מלא למפתחים - Junior, Senior, Full-Stack. שליטה בסוכנים והוורקפלואים הרלוונטיים, תרחישים מעשיים מהעבודה, והתאמה אישית לצרכים שלכם.",
     "category": "roles",
     "difficulty": "intermediate",
     "estimatedMinutes": 45,
@@ -80,7 +80,7 @@
   {
     "id": "role-product-managers",
     "title": "מדריך למנהלי מוצר ואנליסטים",
-    "description": "איך להשתמש ב-BMAD לניהול מוצר מקצועי - PRDs, Epics, Stories, מחקר משתמשים, והגדרת דרישות. בונים מוצרים טובים יותר עם אגנט PM מקצועי.",
+    "description": "איך להשתמש ב-BMAD לניהול מוצר מקצועי - PRDs, Epics, Stories, מחקר משתמשים, והגדרת דרישות. בונים מוצרים טובים יותר עם סוכן PM מקצועי.",
     "category": "roles",
     "difficulty": "intermediate",
     "estimatedMinutes": 40,
@@ -91,7 +91,7 @@
   {
     "id": "role-architects",
     "title": "מדריך לארכיטקטים טכנולוגיים",
-    "description": "תכנון ארכיטקטורות מערכת עם אגנט Architect. איך לתכנן מערכות מורכבות, לבחור טכנולוגיות, לתעד החלטות ארכיטקטוניות, ולשמור על איכות טכנית.",
+    "description": "תכנון ארכיטקטורות מערכת עם סוכן Architect. איך לתכנן מערכות מורכבות, לבחור טכנולוגיות, לתעד החלטות ארכיטקטוניות, ולשמור על איכות טכנית.",
     "category": "roles",
     "difficulty": "advanced",
     "estimatedMinutes": 50,
@@ -102,7 +102,7 @@
   {
     "id": "role-qa-testers",
     "title": "מדריך לבודקי תוכנה",
-    "description": "בדיקות מקצועיות עם אגנט TEA - תכנון מאסטר טסט, כתיבת תוכניות בדיקה, יצירת תרחישי בדיקה, ואוטומציה. הבטחת איכות בכל שלב של הפיתוח.",
+    "description": "בדיקות מקצועיות עם סוכן TEA - תכנון מאסטר טסט, כתיבת תוכניות בדיקה, יצירת תרחישי בדיקה, ואוטומציה. הבטחת איכות בכל שלב של הפיתוח.",
     "category": "roles",
     "difficulty": "intermediate",
     "estimatedMinutes": 40,
@@ -113,7 +113,7 @@
   {
     "id": "role-ux-designers",
     "title": "מדריך למעצבי UX/UI",
-    "description": "עיצוב חוויית משתמש עם אגנט UX Designer. מחקר משתמשים, wireframes, prototypes, design systems, ומסירת מפרט עיצובי למפתחים.",
+    "description": "עיצוב חוויית משתמש עם סוכן UX Designer. מחקר משתמשים, wireframes, prototypes, design systems, ומסירת מפרט עיצובי למפתחים.",
     "category": "roles",
     "difficulty": "intermediate",
     "estimatedMinutes": 40,
@@ -124,7 +124,7 @@
   {
     "id": "role-project-managers",
     "title": "מדריך למנהלי פרויקטים וסקראם מאסטרים",
-    "description": "ניהול פרויקטים אג'ילי עם אגנט SM. תכנון ספרינטים, ניהול backlog, הרמת חסמים, רטרוספקטיבות, ומעקב אחר התקדמות הצוות.",
+    "description": "ניהול פרויקטים אג'ילי עם סוכן SM. תכנון ספרינטים, ניהול backlog, הרמת חסמים, רטרוספקטיבות, ומעקב אחר התקדמות הצוות.",
     "category": "roles",
     "difficulty": "intermediate",
     "estimatedMinutes": 35,
@@ -135,7 +135,7 @@
   {
     "id": "role-game-developers",
     "title": "מדריך למפתחי משחקים",
-    "description": "פיתוח משחקים עם אגנטים מיוחדים - Game Designer, Game Architect, Game Dev. תכנון גיימפליי, ארכיטקטורת משחק, ומימוש פיצ'רים מורכבים.",
+    "description": "פיתוח משחקים עם סוכנים מיוחדים - Game Designer, Game Architect, Game Dev. תכנון גיימפליי, ארכיטקטורת משחק, ומימוש פיצ'רים מורכבים.",
     "category": "roles",
     "difficulty": "advanced",
     "estimatedMinutes": 50,
@@ -157,7 +157,7 @@
   {
     "id": "role-non-technical",
     "title": "מדריך לתפקידים לא טכניים",
-    "description": "BMAD לכולם - Marketing, Sales, HR, Operations. איך להשתמש באגנטים לשיפור תהליכים, יצירת תוכן, ניהול פרויקטים וניתוח נתונים.",
+    "description": "BMAD לכולם - Marketing, Sales, HR, Operations. איך להשתמש בסוכנים לשיפור תהליכים, יצירת תוכן, ניהול פרויקטים וניתוח נתונים.",
     "category": "roles",
     "difficulty": "beginner",
     "estimatedMinutes": 25,
@@ -167,84 +167,84 @@
   },
   {
     "id": "agents-intro-pm-analyst",
-    "title": "מדריך אגנטים - חלק 1א: מבוא + PM + Analyst",
-    "description": "מבוא לאגנטים ב-BMAD. הכירו את John (מנהל המוצר) ואת Mary (האנליסטית) - מה הם עושים, איך עובדים איתם, והוורקפלואים שלהם.",
+    "title": "מדריך סוכנים - חלק 1א: מבוא + PM + Analyst",
+    "description": "מבוא לסוכנים ב-BMAD. הכירו את John (מנהל המוצר) ואת Mary (האנליסטית) - מה הם עושים, איך עובדים איתם, והוורקפלואים שלהם.",
     "category": "agents",
     "difficulty": "beginner",
     "estimatedMinutes": 35,
     "icon": "IconRobot",
-    "tags": ["אגנטים", "PM", "אנליסט", "מבוא"],
+    "tags": ["סוכנים", "PM", "אנליסט", "מבוא"],
     "path": "agents/intro-pm-analyst.json"
   },
   {
     "id": "agents-architect-sm-dev",
-    "title": "מדריך אגנטים - חלק 1ב: Architect + SM + Dev",
+    "title": "מדריך סוכנים - חלק 1ב: Architect + SM + Dev",
     "description": "הכירו את Sarah (הארכיטקטית), Bob (סקראם מאסטר) ואת Amelia (המפתחת). תפקידם, עקרונות העבודה, והוורקפלואים החשובים ביותר.",
     "category": "agents",
     "difficulty": "intermediate",
     "estimatedMinutes": 40,
     "icon": "IconRobot",
-    "tags": ["אגנטים", "ארכיטקט", "סקראם", "מפתח"],
+    "tags": ["סוכנים", "ארכיטקט", "סקראם", "מפתח"],
     "path": "agents/architect-sm-dev.json"
   },
   {
     "id": "agents-tea-ux",
-    "title": "מדריך אגנטים - חלק 2א: TEA + UX Designer",
+    "title": "מדריך סוכנים - חלק 2א: TEA + UX Designer",
     "description": "הכירו את Murat (Test Architect Expert) ו-Sally (UX Designer). תכנון אסטרטגיית בדיקות, יצירת תוכניות בדיקה, מחקר משתמשים, ועיצוב חוויית משתמש מקצועית.",
     "category": "agents",
     "difficulty": "intermediate",
     "estimatedMinutes": 35,
     "icon": "IconRobot",
-    "tags": ["אגנטים", "בדיקות", "UX", "עיצוב", "Murat", "Sally"],
+    "tags": ["סוכנים", "בדיקות", "UX", "עיצוב", "Murat", "Sally"],
     "path": "agents/tea-ux.json"
   },
   {
     "id": "agents-techwriter-master",
-    "title": "מדריך אגנטים - חלק 2ב: Tech Writer + BMAD Master",
+    "title": "מדריך סוכנים - חלק 2ב: Tech Writer + BMAD Master",
     "description": "הכירו את Mike (כותב טכני) ואת BMAD Master (מדריך המערכת). תיעוד מקצועי והדרכה למערכת - הכלים ליצירת תיעוד איכותי.",
     "category": "agents",
     "difficulty": "intermediate",
     "estimatedMinutes": 30,
     "icon": "IconRobot",
-    "tags": ["אגנטים", "תיעוד", "כתיבה-טכנית", "מדריך"],
+    "tags": ["סוכנים", "תיעוד", "כתיבה-טכנית", "מדריך"],
     "path": "agents/techwriter-master.json"
   },
   {
     "id": "agents-game-agents",
-    "title": "מדריך אגנטים - חלק 3: אגנטי משחקים",
-    "description": "אגנטים מיוחדים לפיתוח משחקים - Game Designer, Game Architect, Game Dev. תכנון, עיצוב, ופיתוח משחקים מקצה לקצה.",
+    "title": "מדריך סוכנים - חלק 3: סוכןי משחקים",
+    "description": "סוכנים מיוחדים לפיתוח משחקים - Game Designer, Game Architect, Game Dev. תכנון, עיצוב, ופיתוח משחקים מקצה לקצה.",
     "category": "agents",
     "difficulty": "advanced",
     "estimatedMinutes": 45,
     "icon": "IconRobot",
-    "tags": ["אגנטים", "משחקים", "גיימדב", "game-design"],
+    "tags": ["סוכנים", "משחקים", "גיימדב", "game-design"],
     "path": "agents/game-agents.json"
   },
   {
     "id": "agents-cis-first3",
-    "title": "מדריך אגנטים - חלק 4א: שילוב בין אגנטים (3 ראשונים)",
-    "description": "איך לעבוד עם מספר אגנטים יחד. תרחישי שיתוף פעולה בין PM, Architect ו-Dev - החלפת קונטקסט, העברת מידע, ושמירה על עקביות.",
+    "title": "מדריך סוכנים - חלק 4א: שילוב בין סוכנים (3 ראשונים)",
+    "description": "איך לעבוד עם מספר סוכנים יחד. תרחישי שיתוף פעולה בין PM, Architect ו-Dev - החלפת קונטקסט, העברת מידע, ושמירה על עקביות.",
     "category": "agents",
     "difficulty": "advanced",
     "estimatedMinutes": 40,
     "icon": "IconRobot",
-    "tags": ["אגנטים", "שיתוף-פעולה", "אינטגרציה", "תיאום"],
+    "tags": ["סוכנים", "שיתוף-פעולה", "אינטגרציה", "תיאום"],
     "path": "agents/cis-first3.json"
   },
   {
     "id": "agents-cis-last2",
-    "title": "מדריך אגנטים - חלק 4ב: שילוב בין אגנטים (2 אחרונים)",
+    "title": "מדריך סוכנים - חלק 4ב: שילוב בין סוכנים (2 אחרונים)",
     "description": "המשך תרחישי CIS מתקדמים - שיתוף פעולה בין TEA, UX Designer ו-Tech Writer. אופטימיזציה, פתרון בעיות, וטיפים מקצועיים לעבודה עם מספר אג'נטים.",
     "category": "agents",
     "difficulty": "advanced",
     "estimatedMinutes": 35,
     "icon": "Users",
-    "tags": ["אגנטים", "CIS", "party-mode", "שיתוף-פעולה", "TEA", "UX", "Tech-Writer"],
+    "tags": ["סוכנים", "CIS", "party-mode", "שיתוף-פעולה", "TEA", "UX", "Tech-Writer"],
     "path": "agents/cis-last2.json"
   },
   {
     "id": "agents-synthesis",
-    "title": "מדריך אגנטים - חלק 5: סינתזה ותמונה כוללת",
+    "title": "מדריך סוכנים - חלק 5: סינתזה ותמונה כוללת",
     "description": "הסיכום המקיף של כל מדריכי האג'נטים - איך כל 11 האג'נטים עובדים יחד במחזור חיים שלם של פרויקט. מתי להשתמש במי, תרחישים מורכבים, והמלצות למומחים.",
     "category": "agents",
     "difficulty": "advanced",
@@ -377,7 +377,7 @@
   {
     "id": "best-practices",
     "title": "שיטות עבודה מומלצות",
-    "description": "Best practices לעבודה עם BMAD - ארגון קבצים, ניהול גרסאות, שימוש נכון באגנטים, שמירה על איכות, ועוד טיפים מהשטח.",
+    "description": "Best practices לעבודה עם BMAD - ארגון קבצים, ניהול גרסאות, שימוש נכון בסוכנים, שמירה על איכות, ועוד טיפים מהשטח.",
     "category": "practical",
     "difficulty": "intermediate",
     "estimatedMinutes": 35,
@@ -388,12 +388,12 @@
   {
     "id": "customization-guide",
     "title": "מדריך התאמה אישית",
-    "description": "איך להתאים את BMAD לצרכים שלכם - יצירת אגנטים מותאמים, וורקפלואים ייחודיים, תבניות פרויקט, וכללי עבודה ארגוניים.",
+    "description": "איך להתאים את BMAD לצרכים שלכם - יצירת סוכנים מותאמים, וורקפלואים ייחודיים, תבניות פרויקט, וכללי עבודה ארגוניים.",
     "category": "practical",
     "difficulty": "advanced",
     "estimatedMinutes": 45,
     "icon": "IconWand",
-    "tags": ["התאמה-אישית", "קונפיגורציה", "אגנטים", "וורקפלואים"],
+    "tags": ["התאמה-אישית", "קונפיגורציה", "סוכנים", "וורקפלואים"],
     "path": "practical/customization-guide.json"
   },
   {
@@ -454,7 +454,7 @@
   {
     "id": "configuration-management",
     "title": "ניהול תצורה ו-Version Control",
-    "description": "ניהול קבצי תצורה, גרסאות של אגנטים ווורקפלואים, עבודה צוותית עם Git, ושמירה על עקביות בין סביבות עבודה.",
+    "description": "ניהול קבצי תצורה, גרסאות של סוכנים ווורקפלואים, עבודה צוותית עם Git, ושמירה על עקביות בין סביבות עבודה.",
     "category": "practical",
     "difficulty": "intermediate",
     "estimatedMinutes": 35,
@@ -475,13 +475,13 @@
   },
   {
     "id": "faq-agents",
-    "title": "שאלות ותשובות - אגנטים",
-    "description": "שאלות נפוצות על אגנטים ב-BMAD - איזה אגנט להשתמש מתי, איך להחליף בין אגנטים, שילוב אגנטים, Party Mode, CIS, ותפקידי האגנטים. כל התשובות במקום אחד!",
+    "title": "שאלות ותשובות - סוכנים",
+    "description": "שאלות נפוצות על סוכנים ב-BMAD - איזה סוכן להשתמש מתי, איך להחליף בין סוכנים, שילוב סוכנים, Party Mode, CIS, ותפקידי הסוכנים. כל התשובות במקום אחד!",
     "category": "faq",
     "difficulty": "intermediate",
     "estimatedMinutes": 25,
     "icon": "IconQuestionMark",
-    "tags": ["שאלות", "אגנטים", "שימוש", "טיפים", "party-mode", "CIS"],
+    "tags": ["שאלות", "סוכנים", "שימוש", "טיפים", "party-mode", "CIS"],
     "path": "faq/agents.json"
   },
   {
@@ -509,7 +509,7 @@
   {
     "id": "faq-team",
     "title": "שאלות ותשובות - חלק 3ב: עבודה צוותית",
-    "description": "שאלות נפוצות על עבודה צוותית - שיתוף קבצים, ניהול פרויקטים משותפים, תקשורת בין חברי צוות, ותיאום אגנטים.",
+    "description": "שאלות נפוצות על עבודה צוותית - שיתוף קבצים, ניהול פרויקטים משותפים, תקשורת בין חברי צוות, ותיאום סוכנים.",
     "category": "faq",
     "difficulty": "intermediate",
     "estimatedMinutes": 25,
@@ -520,7 +520,7 @@
   {
     "id": "onboarding-month1",
     "title": "הדרכה לחודש הראשון",
-    "description": "תוכנית החודש הראשון - מעבר מהתנסות לשימוש מקצועי. שליטה בכל האגנטים, הרצת פרויקטים אמיתיים, והפיכה למומחה BMAD.",
+    "description": "תוכנית החודש הראשון - מעבר מהתנסות לשימוש מקצועי. שליטה בכל הסוכנים, הרצת פרויקטים אמיתיים, והפיכה למומחה BMAD.",
     "category": "onboarding",
     "difficulty": "intermediate",
     "estimatedMinutes": 60,
