--- a/src/content/locale/he/guides/onboarding/day1.json
+++ b/src/content/locale/he/guides/onboarding/day1.json
@@ -198,7 +198,7 @@
       "id": "step-1-intro-text",
       "type": "text",
       "markdown": true,
-      "content": "**BMAD-METHOD** הוא מערכת של קבצים, אגנטים, ווורקפלואים שעוזרים לכם לבנות תוכנה באיכות גבוהה עם עזרת AI.\n\nכדי להשתמש בזה, צריך \"להתקין\" - כלומר להוריד את הקבצים האלה לפרויקט שלכם."
+      "content": "**BMAD-METHOD** הוא מערכת של קבצים, סוכנים, ווורקפלואים שעוזרים לכם לבנות תוכנה באיכות גבוהה עם עזרת AI.\n\nכדי להשתמש בזה, צריך \"להתקין\" - כלומר להוריד את הקבצים האלה לפרויקט שלכם."
     },
     {
       "id": "step-1-commands",
@@ -244,7 +244,7 @@
       "type": "callout",
       "variant": "info",
       "title": "מה קורה עכשיו?",
-      "content": "המערכת תשאל אתכם כמה שאלות:\n- איזה מודולים להתקין? (בחרו 'BMM' לעבודה רגילה, או 'All' להכל)\n- מה השם שלכם? (כדי שהאגנטים יפנו אליכם בשם)\n- באיזו שפה לתקשר? (עברית או אנגלית)\n- איזה IDE? (Cursor או VS Code)\n\nפשוט עקבו אחרי ההוראות על המסך!"
+      "content": "המערכת תשאל אתכם כמה שאלות:\n- איזה מודולים להתקין? (בחרו 'BMM' לעבודה רגילה, או 'All' להכל)\n- מה השם שלכם? (כדי שהסוכנים יפנו אליכם בשם)\n- באיזו שפה לתקשר? (עברית או אנגלית)\n- איזה IDE? (Cursor או VS Code)\n\nפשוט עקבו אחרי ההוראות על המסך!"
     },
     {
       "id": "step-1-verify",
@@ -344,7 +344,7 @@
       "variant": "unordered",
       "items": [
         {
-          "content": "bmad/ - כל קבצי BMAD (אגנטים, וורקפלואים, משימות)"
+          "content": "bmad/ - כל קבצי BMAD (סוכנים, וורקפלואים, משימות)"
         },
         {
           "content": "bmad/_cfg/ - קונפיגורציות ראשיות"
@@ -385,7 +385,7 @@
       "type": "callout",
       "variant": "info",
       "title": "למה זה חשוב?",
-      "content": "כל אגנט ב-BMAD קורא את הקובץ הזה וקוסם לכם בשם, מדבר בשפה שבחרתם, ושומר קבצים במקום שהגדרתם!"
+      "content": "כל סוכן ב-BMAD קורא את הקובץ הזה וקוסם לכם בשם, מדבר בשפה שבחרתם, ושומר קבצים במקום שהגדרתם!"
     },
     {
       "id": "step-2-success",
@@ -409,7 +409,7 @@
       "id": "step-3-intro",
       "type": "text",
       "markdown": true,
-      "content": "**הגיע הרגע! בואו נריץ את הפקודה הראשונה ונדבר עם אגנט!**"
+      "content": "**הגיע הרגע! בואו נריץ את הפקודה הראשונה ונדבר עם סוכן!**"
     },
     {
       "id": "step-3-open-agent",
@@ -422,7 +422,7 @@
       "id": "step-3-open-text",
       "type": "text",
       "markdown": true,
-      "content": "**BMAD Master** הוא האגנט הראשי שמדריך אתכם בכל המערכת."
+      "content": "**BMAD Master** הוא הסוכן הראשי שמדריך אתכם בכל המערכת."
     },
     {
       "id": "step-3-open-steps",
@@ -439,7 +439,7 @@
           "content": "בצד ימין, לחצו על כפתור 'Chat' (או Cmd/Ctrl + L)"
         },
         {
-          "content": "הקובץ יתווסף לצ'אט, וה-AI יזהה את האגנט אוטומטית"
+          "content": "הקובץ יתווסף לצ'אט, וה-AI יזהה את הסוכן אוטומטית"
         }
       ]
     },
@@ -473,7 +473,7 @@
       "id": "step-3-menu-text",
       "type": "text",
       "markdown": true,
-      "content": "האגנט מציג לכם **תפריט** של דברים שאפשר לעשות.\n\nכל פריט מתחיל ב-`*` (כוכבית) - זה הטריגר שלו."
+      "content": "הסוכן מציג לכם **תפריט** של דברים שאפשר לעשות.\n\nכל פריט מתחיל ב-`*` (כוכבית) - זה הטריגר שלו."
     },
     {
       "id": "step-3-try-help",
@@ -498,7 +498,7 @@
       "type": "callout",
       "variant": "success",
       "title": "מזל טוב!",
-      "content": "הרצתם את הפקודה הראשונה שלכם! אתם רשמית מדברים עם אגנט BMAD!"
+      "content": "הרצתם את הפקודה הראשונה שלכם! אתם רשמית מדברים עם סוכן BMAD!"
     },
     {
       "id": "divider-6",
@@ -555,7 +555,7 @@
           "content": "כתבו: *workflow-init"
         },
         {
-          "content": "עקבו אחרי השאלות שהאגנט שואל"
+          "content": "עקבו אחרי השאלות שהסוכן שואל"
         },
         {
           "content": "ענו בכנות ובפשטות"
@@ -632,7 +632,7 @@
           "content": "✅ הכרתם את מבנה התיקיות והקבצים"
         },
         {
-          "content": "✅ דיברתם עם האגנט הראשון - BMAD Master"
+          "content": "✅ דיברתם עם הסוכן הראשון - BMAD Master"
         },
         {
           "content": "✅ הרצתם את הפקודה הראשונה - *help"
@@ -650,7 +650,7 @@
       "type": "callout",
       "variant": "success",
       "title": "אתם כבר לא מתחילים!",
-      "content": "יש לכם BMAD מותקן, אתם יודעים להריץ אגנטים, ויש לכם תוכנית פעולה!\n\nזה הישג אמיתי! כל הכבוד!"
+      "content": "יש לכם BMAD מותקן, אתם יודעים להריץ סוכנים, ויש לכם תוכנית פעולה!\n\nזה הישג אמיתי! כל הכבוד!"
     },
     {
       "id": "divider-8",
@@ -684,7 +684,7 @@
           "content": "קראו את 'הדרכה לשבוע הראשון' - התוכנית המלאה ל-7 ימים"
         },
         {
-          "content": "התנסו באגנטים נוספים - PM, Analyst, Architect"
+          "content": "התנסו בסוכנים נוספים - PM, Analyst, Architect"
         },
         {
           "content": "הריצו עוד וורקפלואים - product-brief, brainstorming"
@@ -710,7 +710,7 @@
           "content": "מילון מונחים - להבין את כל המושגים"
         },
         {
-          "content": "מדריך אגנטים - חלק 1 - להכיר את האגנטים"
+          "content": "מדריך סוכנים - חלק 1 - להכיר את הסוכנים"
         },
         {
           "content": "מדריך לפי התפקיד שלכם - מפתחים, מנהלי מוצר, וכו'"
@@ -800,7 +800,7 @@
               "id": "faq-4-text",
               "type": "text",
               "markdown": true,
-              "content": "**אין בעיה! אי אפשר לשבור משהו!**\n\n- האגנטים לא משנים קבצים בלי שאתם מסכימים\n- כל פלט נשמר בתיקייה נפרדת (output/)\n- אפשר תמיד להריץ שוב\n- אפשר לבטל ולהתחיל מחדש\n\n**הטיפ שלנו:** נסו! טעויות זה חלק מהלמידה.\n\nכל טעות מלמדת אתכם משהו חדש."
+              "content": "**אין בעיה! אי אפשר לשבור משהו!**\n\n- הסוכנים לא משנים קבצים בלי שאתם מסכימים\n- כל פלט נשמר בתיקייה נפרדת (output/)\n- אפשר תמיד להריץ שוב\n- אפשר לבטל ולהתחיל מחדש\n\n**הטיפ שלנו:** נסו! טעויות זה חלק מהלמידה.\n\nכל טעות מלמדת אתכם משהו חדש."
             }
           ]
         },
@@ -824,7 +824,7 @@
               "id": "faq-6-text",
               "type": "text",
               "markdown": true,
-              "content": "**אל תלחץ! זה קורה לכולם.**\n\n**צעדים:**\n\n1. **קראו את הודעת השגיאה** - לפעמים יש בה את הפתרון\n2. **חפשו במילון המונחים** - אולי לא הבנתם מושג\n3. **שאלו את האגנט שוב** - הסבירו מה לא ברור\n4. **חפשו ב-FAQ** - אולי מישהו כבר שאל את זה\n5. **Discord** - הקהילה תמיד עוזרת\n\n**זכרו:** כולם נתקעים. זה חלק מהתהליך!"
+              "content": "**אל תלחץ! זה קורה לכולם.**\n\n**צעדים:**\n\n1. **קראו את הודעת השגיאה** - לפעמים יש בה את הפתרון\n2. **חפשו במילון המונחים** - אולי לא הבנתם מושג\n3. **שאלו את הסוכן שוב** - הסבירו מה לא ברור\n4. **חפשו ב-FAQ** - אולי מישהו כבר שאל את זה\n5. **Discord** - הקהילה תמיד עוזרת\n\n**זכרו:** כולם נתקעים. זה חלק מהתהליך!"
             }
           ]
         }
