--- a/src/content/locale/he/guides/onboarding/month1.json
+++ b/src/content/locale/he/guides/onboarding/month1.json
@@ -3,7 +3,7 @@
     "id": "onboarding-month1",
     "slug": "onboarding-month1",
     "title": "הדרכה לחודש הראשון",
-    "description": "תוכנית חודשית מקיפה להפיכה למומחי BMAD. תוך חודש אחד תכירו את כל 19 האגנטים, תשלטו ב-30+ וורקפלואים, ותבנו פרויקט מלא מקצה לקצה!",
+    "description": "תוכנית חודשית מקיפה להפיכה למומחי BMAD. תוך חודש אחד תכירו את כל 19 הסוכנים, תשלטו ב-30+ וורקפלואים, ותבנו פרויקט מלא מקצה לקצה!",
     "category": "onboarding",
     "difficulty": "intermediate",
     "estimatedMinutes": 60,
@@ -12,7 +12,7 @@
       "הדרכה",
       "חודש-ראשון",
       "onboarding",
-      "אגנטים",
+      "סוכנים",
       "וורקפלואים",
       "מתקדם"
     ],
@@ -28,7 +28,7 @@
     },
     {
       "id": "toc-2",
-      "title": "שבוע 2: כל האגנטים העיקריים",
+      "title": "שבוע 2: כל הסוכנים העיקריים",
       "level": 2,
       "anchor": "week-2"
     },
@@ -111,14 +111,14 @@
       "id": "month-intro",
       "type": "text",
       "markdown": true,
-      "content": "החודש הראשון הוא **מסע הלמידה המרכזי** שבו תעברו ממשתמשים בסיסיים ל**מומחים אמיתיים** ב-BMAD.\n\nבסוף החודש תדעו:\n- איך לעבוד עם **כל 19 האגנטים**\n- איך להריץ **30+ וורקפלואים**\n- איך לנהל **פרויקט מלא מקצה לקצה**\n- איך לשלב BMAD **בעבודה היום-יומית**\n- איך **ללמד אחרים** להשתמש ב-BMAD"
+      "content": "החודש הראשון הוא **מסע הלמידה המרכזי** שבו תעברו ממשתמשים בסיסיים ל**מומחים אמיתיים** ב-BMAD.\n\nבסוף החודש תדעו:\n- איך לעבוד עם **כל 19 הסוכנים**\n- איך להריץ **30+ וורקפלואים**\n- איך לנהל **פרויקט מלא מקצה לקצה**\n- איך לשלב BMAD **בעבודה היום-יומית**\n- איך **ללמד אחרים** להשתמש ב-BMAD"
     },
     {
       "id": "month-plan-callout",
       "type": "callout",
       "variant": "info",
       "title": "תוכנית החודש",
-      "content": "שבוע 1: ✅ יסודות (הושלם!)\n\nשבוע 2: כל האגנטים העיקריים\n- יום 1: BMM Core Agents (5 אגנטים)\n- יום 2: BMM Extended (4 אגנטים)\n- יום 3: Game Agents (3 אגנטים)\n- יום 4-5: תרגול מעשי\n\nשבוע 3: וורקפלואים מתקדמים\n- Phase 0-1: Ideation to Brief\n- Phase 2: Solutioning\n- Phase 3: Planning\n- Phase 4: Implementation\n- Phase 5: Management\n\nשבוע 4: פרויקט מלא + תרומה\n- ימים 1-2: Phase 0-2 (Ideation to Architecture)\n- ימים 3-4: Phase 3-4 (Planning to Implementation)\n- יום 5: סיום ו-Retrospective\n\nכל שבוע: 3-5 שעות עבודה"
+      "content": "שבוע 1: ✅ יסודות (הושלם!)\n\nשבוע 2: כל הסוכנים העיקריים\n- יום 1: BMM Core Agents (5 סוכנים)\n- יום 2: BMM Extended (4 סוכנים)\n- יום 3: Game Agents (3 סוכנים)\n- יום 4-5: תרגול מעשי\n\nשבוע 3: וורקפלואים מתקדמים\n- Phase 0-1: Ideation to Brief\n- Phase 2: Solutioning\n- Phase 3: Planning\n- Phase 4: Implementation\n- Phase 5: Management\n\nשבוע 4: פרויקט מלא + תרומה\n- ימים 1-2: Phase 0-2 (Ideation to Architecture)\n- ימים 3-4: Phase 3-4 (Planning to Implementation)\n- יום 5: סיום ו-Retrospective\n\nכל שבוע: 3-5 שעות עבודה"
     },
     {
       "id": "flexible-callout",
@@ -135,14 +135,14 @@
       "id": "week-2",
       "type": "heading",
       "level": 2,
-      "content": "שבוע 2: כל האגנטים העיקריים",
+      "content": "שבוע 2: כל הסוכנים העיקריים",
       "anchor": "week-2"
     },
     {
       "id": "week-2-intro",
       "type": "text",
       "markdown": true,
-      "content": "השבוע השני מוקדש ל**הכרת כל האגנטים**. יש 19 אגנטים שונים ב-BMAD, וכל אחד מומחה בתחום אחר.\n\nהאגנטים מחולקים ל-3 קבוצות:\n- **BMM Core Agents** (5 אגנטים) - הליבה הראשית\n- **BMM Extended Agents** (4 אגנטים) - הרחבות חשובות\n- **Game Agents** (3 אגנטים) - מתמחים במשחקים"
+      "content": "השבוע השני מוקדש ל**הכרת כל הסוכנים**. יש 19 סוכנים שונים ב-BMAD, וכל אחד מומחה בתחום אחר.\n\nהסוכנים מחולקים ל-3 קבוצות:\n- **BMM Core Agents** (5 סוכנים) - הליבה הראשית\n- **BMM Extended Agents** (4 סוכנים) - הרחבות חשובות\n- **Game Agents** (3 סוכנים) - מתמחים במשחקים"
     },
     {
       "id": "week-2-goal",
@@ -155,20 +155,20 @@
       "id": "week-2-goal-text",
       "type": "text",
       "markdown": true,
-      "content": "**להכיר את כל האגנטים העיקריים** ולהבין מתי להשתמש בכל אחד.\n\nלא צריך להיות מומחים בכולם - רק להכיר ולדעת שהם קיימים!"
+      "content": "**להכיר את כל הסוכנים העיקריים** ולהבין מתי להשתמש בכל אחד.\n\nלא צריך להיות מומחים בכולם - רק להכיר ולדעת שהם קיימים!"
     },
     {
       "id": "week-2-day1",
       "type": "heading",
       "level": 3,
-      "content": "יום 1: BMM Core Agents (5 אגנטים)",
+      "content": "יום 1: BMM Core Agents (5 סוכנים)",
       "anchor": "week-2-day1"
     },
     {
       "id": "week-2-day1-intro",
       "type": "text",
       "markdown": true,
-      "content": "האגנטים הבסיסיים ביותר - אלו שתשתמשו בהם הכי הרבה!"
+      "content": "הסוכנים הבסיסיים ביותר - אלו שתשתמשו בהם הכי הרבה!"
     },
     {
       "id": "week-2-day1-agents",
@@ -242,20 +242,20 @@
       "type": "callout",
       "variant": "success",
       "title": "תרגיל יום 1: היכרות עם ה-5",
-      "content": "1. פתחו כל אחד מ-5 האגנטים\n2. כתבו *help וקראו את התפריט\n3. נסו פקודה אחת מכל אגנט\n4. תעדו לעצמכם: מה כל אגנט עושה?\n\nזמן מוערך: 60-90 דקות\n\nאל תנסו לשלוט בכולם ביום אחד - רק היכרות ראשונית!"
+      "content": "1. פתחו כל אחד מ-5 הסוכנים\n2. כתבו *help וקראו את התפריט\n3. נסו פקודה אחת מכל סוכן\n4. תעדו לעצמכם: מה כל סוכן עושה?\n\nזמן מוערך: 60-90 דקות\n\nאל תנסו לשלוט בכולם ביום אחד - רק היכרות ראשונית!"
     },
     {
       "id": "week-2-day2",
       "type": "heading",
       "level": 3,
-      "content": "יום 2: BMM Extended (4 אגנטים)",
+      "content": "יום 2: BMM Extended (4 סוכנים)",
       "anchor": "week-2-day2"
     },
     {
       "id": "week-2-day2-intro",
       "type": "text",
       "markdown": true,
-      "content": "אגנטים מתקדמים שמוסיפים יכולות חשובות למערכת."
+      "content": "סוכנים מתקדמים שמוסיפים יכולות חשובות למערכת."
     },
     {
       "id": "week-2-day2-agents",
@@ -306,7 +306,7 @@
               "id": "agent-master-text",
               "type": "text",
               "markdown": true,
-              "content": "**BMAD Master - The Guide**\n\n**מה הוא עושה:**\n- מדריך ומארגן\n- עוזר לנווט במערכת\n- מריץ וורקפלואים כלליים\n- מנהל את המצב\n- מתאם בין אגנטים\n\n**וורקפלואים עיקריים:**\n- `*workflow-init` - אתחול פרויקט\n- `*workflow-status` - מצב נוכחי\n- `*help` - עזרה כללית\n- `*party-mode` - עבודה עם מספר אגנטים\n\n**איך פותחים:**\n1. פתחו: `bmad/core/agents/bmad-master.md`\n2. לחצו Chat / Cmd+L\n3. BMAD Master מברך אתכם!\n\n**מתי להשתמש:**\nכשאתם מתחילים פרויקט, לא בטוחים מה לעשות, או צריכים תיאום"
+              "content": "**BMAD Master - The Guide**\n\n**מה הוא עושה:**\n- מדריך ומארגן\n- עוזר לנווט במערכת\n- מריץ וורקפלואים כלליים\n- מנהל את המצב\n- מתאם בין סוכנים\n\n**וורקפלואים עיקריים:**\n- `*workflow-init` - אתחול פרויקט\n- `*workflow-status` - מצב נוכחי\n- `*help` - עזרה כללית\n- `*party-mode` - עבודה עם מספר סוכנים\n\n**איך פותחים:**\n1. פתחו: `bmad/core/agents/bmad-master.md`\n2. לחצו Chat / Cmd+L\n3. BMAD Master מברך אתכם!\n\n**מתי להשתמש:**\nכשאתם מתחילים פרויקט, לא בטוחים מה לעשות, או צריכים תיאום"
             }
           ]
         }
@@ -317,27 +317,27 @@
       "type": "callout",
       "variant": "success",
       "title": "תרגיל יום 2: העמקה ב-Extended",
-      "content": "1. פתחו כל אחד מ-4 האגנטים\n2. קראו את התיאור המפורט\n3. נסו וורקפלואו אחד מכל אגנט\n4. השוו: מה ההבדל בין האגנטים?\n\nזמן מוערך: 45-60 דקות\n\nשימו לב איך כל אגנט משלים את האחרים!"
+      "content": "1. פתחו כל אחד מ-4 הסוכנים\n2. קראו את התיאור המפורט\n3. נסו וורקפלואו אחד מכל סוכן\n4. השוו: מה ההבדל בין הסוכנים?\n\nזמן מוערך: 45-60 דקות\n\nשימו לב איך כל סוכן משלים את האחרים!"
     },
     {
       "id": "week-2-day3",
       "type": "heading",
       "level": 3,
-      "content": "יום 3: Game Agents (3 אגנטים)",
+      "content": "יום 3: Game Agents (3 סוכנים)",
       "anchor": "week-2-day3"
     },
     {
       "id": "week-2-day3-intro",
       "type": "text",
       "markdown": true,
-      "content": "אגנטים מיוחדים לפיתוח משחקים. גם אם אתם לא מפתחי משחקים - כדאי להכיר!"
+      "content": "סוכנים מיוחדים לפיתוח משחקים. גם אם אתם לא מפתחי משחקים - כדאי להכיר!"
     },
     {
       "id": "week-2-day3-callout",
       "type": "callout",
       "variant": "info",
       "title": "למי זה מיועד?",
-      "content": "אמנם אגנטים אלו מיועדים למפתחי משחקים, אבל:\n\n- העקרונות רלוונטיים לכל פרויקט\n- מושגי Game Design שימושיים ב-UX\n- הגישה המתודולוגית מועילה לכולם\n\nלכן כדאי להכיר, גם אם לא תשתמשו בהם!"
+      "content": "אמנם סוכנים אלו מיועדים למפתחי משחקים, אבל:\n\n- העקרונות רלוונטיים לכל פרויקט\n- מושגי Game Design שימושיים ב-UX\n- הגישה המתודולוגית מועילה לכולם\n\nלכן כדאי להכיר, גם אם לא תשתמשו בהם!"
     },
     {
       "id": "week-2-day3-agents",
@@ -387,7 +387,7 @@
       "type": "callout",
       "variant": "success",
       "title": "תרגיל יום 3: היכרות עם Game Agents",
-      "content": "1. פתחו כל אחד מ-3 אגנטי המשחקים\n2. קראו את התיאורים\n3. אם אתם מפתחי משחקים - נסו game-brief!\n4. אם לא - חשבו איך העקרונות רלוונטיים לפרויקט שלכם\n\nזמן מוערך: 30 דקות\n\nלא חובה להעמיק - רק להכיר!"
+      "content": "1. פתחו כל אחד מ-3 סוכןי המשחקים\n2. קראו את התיאורים\n3. אם אתם מפתחי משחקים - נסו game-brief!\n4. אם לא - חשבו איך העקרונות רלוונטיים לפרויקט שלכם\n\nזמן מוערך: 30 דקות\n\nלא חובה להעמיק - רק להכיר!"
     },
     {
       "id": "week-2-day45",
@@ -400,7 +400,7 @@
       "id": "week-2-day45-intro",
       "type": "text",
       "markdown": true,
-      "content": "עכשיו שהכרתם את כל האגנטים - הגיע הזמן לתרגל!"
+      "content": "עכשיו שהכרתם את כל הסוכנים - הגיע הזמן לתרגל!"
     },
     {
       "id": "week-2-day45-exercises",
@@ -434,7 +434,7 @@
       "type": "callout",
       "variant": "tip",
       "title": "טיפ לתרגול",
-      "content": "אל תנסו לבנות פרויקט אמיתי עדיין!\n\nהמטרה של ימים 4-5 היא **לתרגל עבודה עם האגנטים**, לא לבנות משהו מוגמר.\n\nזה בסדר אם לא מסיימים - החשוב הוא התהליך!",
+      "content": "אל תנסו לבנות פרויקט אמיתי עדיין!\n\nהמטרה של ימים 4-5 היא **לתרגל עבודה עם הסוכנים**, לא לבנות משהו מוגמר.\n\nזה בסדר אם לא מסיימים - החשוב הוא התהליך!",
       "markdown": true
     },
     {
@@ -442,7 +442,7 @@
       "type": "callout",
       "variant": "info",
       "title": "סיכום שבוע 2",
-      "content": "הכרתם את כל האגנטים העיקריים:\n✅ 5 BMM Core Agents\n✅ 4 BMM Extended Agents\n✅ 3 Game Agents\n✅ תרגול מעשי\n\nכל הכבוד! אתם מכירים עכשיו את כל הצוות!"
+      "content": "הכרתם את כל הסוכנים העיקריים:\n✅ 5 BMM Core Agents\n✅ 4 BMM Extended Agents\n✅ 3 Game Agents\n✅ תרגול מעשי\n\nכל הכבוד! אתם מכירים עכשיו את כל הצוות!"
     },
     {
       "id": "divider-3",
@@ -577,7 +577,7 @@
       "id": "week-4-intro",
       "type": "text",
       "markdown": true,
-      "content": "**השבוע הרביעי והאחרון - הזמן להפגין את כל מה שלמדתם!**\n\nהשבוע נבנה **פרויקט אמיתי ומורכב** מקצה לקצה, תוך שימוש בכל האגנטים והוורקפלואים."
+      "content": "**השבוע הרביעי והאחרון - הזמן להפגין את כל מה שלמדתם!**\n\nהשבוע נבנה **פרויקט אמיתי ומורכב** מקצה לקצה, תוך שימוש בכל הסוכנים והוורקפלואים."
     },
     {
       "id": "week-4-project",
@@ -783,13 +783,13 @@
       "items": [
         {
           "id": "party-mode",
-          "title": "Party Mode - עבודה עם מספר אגנטים",
+          "title": "Party Mode - עבודה עם מספר סוכנים",
           "content": [
             {
               "id": "party-mode-text",
               "type": "text",
               "markdown": true,
-              "content": "**Party Mode** מאפשר לכם לעבוד עם **מספר אגנטים במקביל**.\n\n**מתי להשתמש:**\n- כשצריך תשומות מכמה אגנטים\n- כשרוצים דיון בין אגנטים\n- כשצריך פרספקטיבות שונות\n\n**איך זה עובד:**\n1. פתחו את BMAD Master\n2. כתבו: `*party-mode`\n3. בחרו את האגנטים שרוצים להזמין\n4. הם יעבדו ביחד!\n\n**דוגמה:**\nהזמנת John (PM), Winston (Architect), ו-Amelia (Dev) לדון על פיצ'ר חדש."
+              "content": "**Party Mode** מאפשר לכם לעבוד עם **מספר סוכנים במקביל**.\n\n**מתי להשתמש:**\n- כשצריך תשומות מכמה סוכנים\n- כשרוצים דיון בין סוכנים\n- כשצריך פרספקטיבות שונות\n\n**איך זה עובד:**\n1. פתחו את BMAD Master\n2. כתבו: `*party-mode`\n3. בחרו את הסוכנים שרוצים להזמין\n4. הם יעבדו ביחד!\n\n**דוגמה:**\nהזמנת John (PM), Winston (Architect), ו-Amelia (Dev) לדון על פיצ'ר חדש."
             }
           ]
         },
@@ -801,7 +801,7 @@
               "id": "context-management-text",
               "type": "text",
               "markdown": true,
-              "content": "**Context** הוא המידע שהאגנט יודע.\n\n**למה זה חשוב:**\n- ל-AI יש מגבלת זיכרון\n- צריך לתת לו המידע הרלוונטי\n- אי אפשר לשים הכל\n\n**טיפים לניהול Context:**\n\n1. **התחל עם סיכום** - תנו לאגנט סיכום של הפרויקט\n2. **הוסיפו מסמכים רלוונטיים** - רק מה שצריך עכשיו\n3. **השתמשו ב-workflow-status** - מעדכן את האגנט על המצב\n4. **פצלו לסשנים** - אל תנסו לעשות הכל בשיחה אחת\n\n**דוגמה טובה:**\n\"שלום Amelia! אני עובד על פרויקט Dashboard. יש לי Brief מוכן ו-Tech Spec. רוצה לפתח את הסטורי של Authentication. קובץ ה-Brief: [...]\""
+              "content": "**Context** הוא המידע שהסוכן יודע.\n\n**למה זה חשוב:**\n- ל-AI יש מגבלת זיכרון\n- צריך לתת לו המידע הרלוונטי\n- אי אפשר לשים הכל\n\n**טיפים לניהול Context:**\n\n1. **התחל עם סיכום** - תנו לסוכן סיכום של הפרויקט\n2. **הוסיפו מסמכים רלוונטיים** - רק מה שצריך עכשיו\n3. **השתמשו ב-workflow-status** - מעדכן את הסוכן על המצב\n4. **פצלו לסשנים** - אל תנסו לעשות הכל בשיחה אחת\n\n**דוגמה טובה:**\n\"שלום Amelia! אני עובד על פרויקט Dashboard. יש לי Brief מוכן ו-Tech Spec. רוצה לפתח את הסטורי של Authentication. קובץ ה-Brief: [...]\""
             }
           ]
         },
@@ -813,7 +813,7 @@
               "id": "custom-workflows-text",
               "type": "text",
               "markdown": true,
-              "content": "**אפשר ליצור וורקפלואים משלכם!**\n\n**מתי ליצור:**\n- תהליך שחוזר על עצמו\n- תהליך ייחודי לארגון שלכם\n- צירוף של כמה וורקפלואים\n\n**איך ליצור:**\n1. זהו תהליך שחוזר\n2. תעדו את השלבים\n3. צרו YAML workflow\n4. שמרו ב-`bmad/custom/workflows/`\n5. האגנטים יזהו אותו!\n\n**דוגמה:**\nוורקפלואו מותאם לכל feature חדש שעובר דרך PM → Architect → 3 Devs → TEA"
+              "content": "**אפשר ליצור וורקפלואים משלכם!**\n\n**מתי ליצור:**\n- תהליך שחוזר על עצמו\n- תהליך ייחודי לארגון שלכם\n- צירוף של כמה וורקפלואים\n\n**איך ליצור:**\n1. זהו תהליך שחוזר\n2. תעדו את השלבים\n3. צרו YAML workflow\n4. שמרו ב-`bmad/custom/workflows/`\n5. הסוכנים יזהו אותו!\n\n**דוגמה:**\nוורקפלואו מותאם לכל feature חדש שעובר דרך PM → Architect → 3 Devs → TEA"
             }
           ]
         },
@@ -1079,7 +1079,7 @@
               "id": "path-pm-text",
               "type": "text",
               "markdown": true,
-              "content": "**מסלול מומלץ למנהלי מוצר:**\n\n**חודש 2:**\n- העמקה ב-PM Agent (John)\n- למידת PRD מתקדם\n- research ו-brainstorming\n- אסטרטגיית מוצר\n\n**חודש 3:**\n- עבודה צוותית עם אגנטים\n- ניהול roadmap\n- data-driven decisions\n- stakeholder management\n\n**חודש 4+:**\n- הובלת מוצר עם BMAD\n- חונכות ל-PMs אחרים\n- תרומה לקהילה"
+              "content": "**מסלול מומלץ למנהלי מוצר:**\n\n**חודש 2:**\n- העמקה ב-PM Agent (John)\n- למידת PRD מתקדם\n- research ו-brainstorming\n- אסטרטגיית מוצר\n\n**חודש 3:**\n- עבודה צוותית עם סוכנים\n- ניהול roadmap\n- data-driven decisions\n- stakeholder management\n\n**חודש 4+:**\n- הובלת מוצר עם BMAD\n- חונכות ל-PMs אחרים\n- תרומה לקהילה"
             }
           ]
         },
@@ -1134,8 +1134,8 @@
         {
           "id": "summary-agents",
           "type": "card",
-          "title": "כל האגנטים",
-          "content": "הכרתם ועבדתם עם כל 19 האגנטים:\n✅ 5 BMM Core\n✅ 4 BMM Extended\n✅ 3 Game Agents\n\nאתם יודעים מתי להשתמש בכל אחד!"
+          "title": "כל הסוכנים",
+          "content": "הכרתם ועבדתם עם כל 19 הסוכנים:\n✅ 5 BMM Core\n✅ 4 BMM Extended\n✅ 3 Game Agents\n\nאתם יודעים מתי להשתמש בכל אחד!"
         },
         {
           "id": "summary-workflows",
@@ -1201,7 +1201,7 @@
               "id": "faq-2-text",
               "type": "text",
               "markdown": true,
-              "content": "**אתם מוכנים אם:**\n\n✅ אתם מכירים את 5-7 האגנטים העיקריים\n✅ אתם יודעים להריץ 10+ וורקפלואים\n✅ בניתם פרויקט קטן אחד (גם אם לא מושלם)\n✅ אתם מבינים את זרימת הפאזות\n\n**לא צריך:**\n❌ לדעת את כל האגנטים\n❌ לדעת את כל הוורקפלואים\n❌ להיות מומחים\n\n**הטיפ שלנו:** פשוט תתחילו!\n\nתלמדו תוך כדי, ותשאלו אם אתם תקועים."
+              "content": "**אתם מוכנים אם:**\n\n✅ אתם מכירים את 5-7 הסוכנים העיקריים\n✅ אתם יודעים להריץ 10+ וורקפלואים\n✅ בניתם פרויקט קטן אחד (גם אם לא מושלם)\n✅ אתם מבינים את זרימת הפאזות\n\n**לא צריך:**\n❌ לדעת את כל הסוכנים\n❌ לדעת את כל הוורקפלואים\n❌ להיות מומחים\n\n**הטיפ שלנו:** פשוט תתחילו!\n\nתלמדו תוך כדי, ותשאלו אם אתם תקועים."
             }
           ]
         },
@@ -1213,7 +1213,7 @@
               "id": "faq-3-text",
               "type": "text",
               "markdown": true,
-              "content": "**מצוין! זה בדיוק הרעיון!**\n\nBMAD הוא **framework גמיש** - הוא מתאים לכל סוג פרויקט:\n\n- Web Apps\n- Mobile Apps\n- Desktop Apps\n- Backend Services\n- APIs\n- משחקים\n- כלים\n- ספריות\n\n**ואפילו:**\n- מסמכים\n- מחקרים\n- תהליכים\n\n**השתמשו בפאזות והאגנטים הרלוונטיים לפרויקט שלכם.**\n\nאין \"דרך נכונה\" אחת!"
+              "content": "**מצוין! זה בדיוק הרעיון!**\n\nBMAD הוא **framework גמיש** - הוא מתאים לכל סוג פרויקט:\n\n- Web Apps\n- Mobile Apps\n- Desktop Apps\n- Backend Services\n- APIs\n- משחקים\n- כלים\n- ספריות\n\n**ואפילו:**\n- מסמכים\n- מחקרים\n- תהליכים\n\n**השתמשו בפאזות והסוכנים הרלוונטיים לפרויקט שלכם.**\n\nאין \"דרך נכונה\" אחת!"
             }
           ]
         },
@@ -1261,7 +1261,7 @@
               "id": "faq-7-text",
               "type": "text",
               "markdown": true,
-              "content": "**מסלולי העמקה:**\n\n**1. מדריכים מתקדמים**\n- קראו את כל מדריכי האגנטים\n- קראו את כל מדריכי הוורקפלואים\n- למדו Best Practices מתקדמים\n\n**2. קוד ה-BMAD עצמו**\n- צללו לקוד\n- הבינו את המנגנונים\n- תרמו שיפורים\n\n**3. תרומה לקהילה**\n- כתבו מדריכים\n- עזרו לאחרים\n- שתפו ניסיון\n\n**4. פרויקטים מורכבים**\n- בנו משהו גדול\n- תעדו את התהליך\n- שתפו case study\n\n**העמקה = למידה + תרומה + תרגול**"
+              "content": "**מסלולי העמקה:**\n\n**1. מדריכים מתקדמים**\n- קראו את כל מדריכי הסוכנים\n- קראו את כל מדריכי הוורקפלואים\n- למדו Best Practices מתקדמים\n\n**2. קוד ה-BMAD עצמו**\n- צללו לקוד\n- הבינו את המנגנונים\n- תרמו שיפורים\n\n**3. תרומה לקהילה**\n- כתבו מדריכים\n- עזרו לאחרים\n- שתפו ניסיון\n\n**4. פרויקטים מורכבים**\n- בנו משהו גדול\n- תעדו את התהליך\n- שתפו case study\n\n**העמקה = למידה + תרומה + תרגול**"
             }
           ]
         },
@@ -1273,7 +1273,7 @@
               "id": "faq-8-text",
               "type": "text",
               "markdown": true,
-              "content": "**תלוי ברמת המומחיות:**\n\n**משתמש יעיל:** חודש אחד (הושלם!)\n- שולט באגנטים עיקריים\n- מריץ וורקפלואים שוטפים\n- בונה פרויקטים בהצלחה\n\n**משתמש מתקדם:** 2-3 חודשים\n- מכיר את כל המערכת\n- משתמש בטכניקות מתקדמות\n- מותאם BMAD לצרכים\n\n**מומחה:** 6+ חודשים\n- שולט בכל פינה\n- תורם לקהילה\n- מדריך אחרים\n- יוצר תוכן\n\n**אבל:** כבר אחרי חודש אחד אתם **מסוגלים** לעבוד בצורה מקצועית עם BMAD!\n\nהשאר זה פשוט חידוד."
+              "content": "**תלוי ברמת המומחיות:**\n\n**משתמש יעיל:** חודש אחד (הושלם!)\n- שולט בסוכנים עיקריים\n- מריץ וורקפלואים שוטפים\n- בונה פרויקטים בהצלחה\n\n**משתמש מתקדם:** 2-3 חודשים\n- מכיר את כל המערכת\n- משתמש בטכניקות מתקדמות\n- מותאם BMAD לצרכים\n\n**מומחה:** 6+ חודשים\n- שולט בכל פינה\n- תורם לקהילה\n- מדריך אחרים\n- יוצר תוכן\n\n**אבל:** כבר אחרי חודש אחד אתם **מסוגלים** לעבוד בצורה מקצועית עם BMAD!\n\nהשאר זה פשוט חידוד."
             }
           ]
         }
