--- a/src/content/locale/he/guides/onboarding/week1.json
+++ b/src/content/locale/he/guides/onboarding/week1.json
@@ -3,12 +3,12 @@
     "id": "onboarding-week1",
     "slug": "onboarding-week1",
     "title": "הדרכה לשבוע הראשון",
-    "description": "תוכנית שבועית מובנית להתנסות ראשונית עם BMAD. תוך שבוע תכירו 3-5 אגנטים, תריצו 5-7 וורקפלואים, ותבנו פרויקט קטן מקצה לקצה!",
+    "description": "תוכנית שבועית מובנית להתנסות ראשונית עם BMAD. תוך שבוע תכירו 3-5 סוכנים, תריצו 5-7 וורקפלואים, ותבנו פרויקט קטן מקצה לקצה!",
     "category": "onboarding",
     "difficulty": "beginner",
     "estimatedMinutes": 45,
     "icon": "IconCalendar",
-    "tags": ["הדרכה", "שבוע-ראשון", "onboarding", "למידה", "אגנטים", "וורקפלואים"],
+    "tags": ["הדרכה", "שבוע-ראשון", "onboarding", "למידה", "סוכנים", "וורקפלואים"],
     "author": "צוות BMAD",
     "version": "1.0"
   },
@@ -21,7 +21,7 @@
     },
     {
       "id": "toc-2",
-      "title": "יום 2: הכרת האגנטים הראשונים",
+      "title": "יום 2: הכרת הסוכנים הראשונים",
       "level": 2,
       "anchor": "day-2"
     },
@@ -98,14 +98,14 @@
       "id": "week-intro",
       "type": "text",
       "markdown": true,
-      "content": "השבוע הראשון הוא **השבוע המכריע** שבו תעברו מלדעת מה זה BMAD ל**להשתמש** ב-BMAD.\n\nבסוף השבוע תדעו:\n- איך לעבוד עם 3-5 אגנטים שונים\n- איך להריץ 5-7 וורקפלואים עיקריים\n- איך לבנות פרויקט קטן מקצה לקצה\n- איך BMAD עובד בפרויקט אמיתי"
+      "content": "השבוע הראשון הוא **השבוע המכריע** שבו תעברו מלדעת מה זה BMAD ל**להשתמש** ב-BMAD.\n\nבסוף השבוע תדעו:\n- איך לעבוד עם 3-5 סוכנים שונים\n- איך להריץ 5-7 וורקפלואים עיקריים\n- איך לבנות פרויקט קטן מקצה לקצה\n- איך BMAD עובד בפרויקט אמיתי"
     },
     {
       "id": "week-plan-callout",
       "type": "callout",
       "variant": "info",
       "title": "תוכנית השבוע",
-      "content": "יום 1: ✅ הושלם! (התקנה + פקודה ראשונה)\nיום 2: הכרת האגנטים הראשונים (PM, Architect, Dev)\nיום 3: וורקפלואים בסיסיים (workflow-status, product-brief, tech-spec)\nיום 4: פרויקט קטן - תכנון\nיום 5: פרויקט קטן - פיתוח\nסוף שבוע: תרגול חופשי\n\nכל יום: 30-60 דקות עבודה"
+      "content": "יום 1: ✅ הושלם! (התקנה + פקודה ראשונה)\nיום 2: הכרת הסוכנים הראשונים (PM, Architect, Dev)\nיום 3: וורקפלואים בסיסיים (workflow-status, product-brief, tech-spec)\nיום 4: פרויקט קטן - תכנון\nיום 5: פרויקט קטן - פיתוח\nסוף שבוע: תרגול חופשי\n\nכל יום: 30-60 דקות עבודה"
     },
     {
       "id": "flexible-callout",
@@ -122,7 +122,7 @@
       "id": "day-2",
       "type": "heading",
       "level": 2,
-      "content": "יום 2: הכרת האגנטים הראשונים",
+      "content": "יום 2: הכרת הסוכנים הראשונים",
       "anchor": "day-2"
     },
     {
@@ -136,20 +136,20 @@
       "id": "day-2-goal-text",
       "type": "text",
       "markdown": true,
-      "content": "**להכיר 3 אגנטים מרכזיים** - PM, Architect, ו-Dev.\n\nאלו האגנטים שתשתמשו בהם הכי הרבה!"
+      "content": "**להכיר 3 סוכנים מרכזיים** - PM, Architect, ו-Dev.\n\nאלו הסוכנים שתשתמשו בהם הכי הרבה!"
     },
     {
       "id": "day-2-agent-1",
       "type": "heading",
       "level": 3,
-      "content": "אגנט 1: PM (John) - מנהל המוצר",
+      "content": "סוכן 1: PM (John) - מנהל המוצר",
       "anchor": "day-2-agent-1"
     },
     {
       "id": "day-2-agent-1-text",
       "type": "text",
       "markdown": true,
-      "content": "**John (PM - Product Manager)** הוא האגנט שעוזר לכם להבין **מה** לבנות.\n\nהוא מומחה ב:\n- הגדרת דרישות מוצר (PRD)\n- ניתוח משתמשים\n- יצירת Epics ו-Stories\n- מחקר שוק\n- הגדרת MVP"
+      "content": "**John (PM - Product Manager)** הוא הסוכן שעוזר לכם להבין **מה** לבנות.\n\nהוא מומחה ב:\n- הגדרת דרישות מוצר (PRD)\n- ניתוח משתמשים\n- יצירת Epics ו-Stories\n- מחקר שוק\n- הגדרת MVP"
     },
     {
       "id": "day-2-agent-1-code",
@@ -186,14 +186,14 @@
       "id": "day-2-agent-2",
       "type": "heading",
       "level": 3,
-      "content": "אגנט 2: Architect (Winston) - הארכיטקט",
+      "content": "סוכן 2: Architect (Winston) - הארכיטקט",
       "anchor": "day-2-agent-2"
     },
     {
       "id": "day-2-agent-2-text",
       "type": "text",
       "markdown": true,
-      "content": "**Winston (Architect)** הוא האגנט שעוזר לכם להבין **איך** לבנות.\n\nהוא מומחה ב:\n- תכנון ארכיטקטורה\n- בחירת טכנולוגיות\n- תיעוד החלטות טכניות (ADR)\n- תכנון מבנה מערכת\n- הערכת סיכונים טכניים"
+      "content": "**Winston (Architect)** הוא הסוכן שעוזר לכם להבין **איך** לבנות.\n\nהוא מומחה ב:\n- תכנון ארכיטקטורה\n- בחירת טכנולוגיות\n- תיעוד החלטות טכניות (ADR)\n- תכנון מבנה מערכת\n- הערכת סיכונים טכניים"
     },
     {
       "id": "day-2-agent-2-code",
@@ -229,14 +229,14 @@
       "id": "day-2-agent-3",
       "type": "heading",
       "level": 3,
-      "content": "אגנט 3: Dev (Amelia) - המפתחת",
+      "content": "סוכן 3: Dev (Amelia) - המפתחת",
       "anchor": "day-2-agent-3"
     },
     {
       "id": "day-2-agent-3-text",
       "type": "text",
       "markdown": true,
-      "content": "**Amelia (Dev - Developer)** היא האגנטית שעוזרת לכם **לכתוב קוד**.\n\nהיא מומחית ב:\n- כתיבת קוד איכותי\n- ביצוע Stories\n- Code Reviews\n- פתרון באגים\n- רפקטורינג"
+      "content": "**Amelia (Dev - Developer)** היא הסוכןית שעוזרת לכם **לכתוב קוד**.\n\nהיא מומחית ב:\n- כתיבת קוד איכותי\n- ביצוע Stories\n- Code Reviews\n- פתרון באגים\n- רפקטורינג"
     },
     {
       "id": "day-2-agent-3-code",
@@ -273,7 +273,7 @@
       "type": "callout",
       "variant": "info",
       "title": "סיכום יום 2",
-      "content": "הכרתם 3 אגנטים מרכזיים:\n✅ John (PM) - מה לבנות\n✅ Winston (Architect) - איך לבנות\n✅ Amelia (Dev) - כתיבת הקוד\n\nמחר נלמד איך לעבוד עם וורקפלואים!"
+      "content": "הכרתם 3 סוכנים מרכזיים:\n✅ John (PM) - מה לבנות\n✅ Winston (Architect) - איך לבנות\n✅ Amelia (Dev) - כתיבת הקוד\n\nמחר נלמד איך לעבוד עם וורקפלואים!"
     },
     {
       "id": "divider-3",
@@ -297,7 +297,7 @@
       "id": "day-3-goal-text",
       "type": "text",
       "markdown": true,
-      "content": "**להבין איך וורקפלואים עובדים** ולהריץ 3 וורקפלואים עיקריים.\n\nמה ההבדל בין אגנט לוורקפלואו?\n- **אגנט** = מומחה עם תפקיד (כמו PM, Dev)\n- **וורקפלואו** = תהליך מובנה שאגנט מריץ (כמו product-brief, dev-story)"
+      "content": "**להבין איך וורקפלואים עובדים** ולהריץ 3 וורקפלואים עיקריים.\n\nמה ההבדל בין סוכן לוורקפלואו?\n- **סוכן** = מומחה עם תפקיד (כמו PM, Dev)\n- **וורקפלואו** = תהליך מובנה שסוכן מריץ (כמו product-brief, dev-story)"
     },
     {
       "id": "day-3-workflow-1",
@@ -343,7 +343,7 @@
       "id": "day-3-workflow-2-what-happens",
       "type": "text",
       "markdown": true,
-      "content": "**מה קורה כשמריצים product-brief:**\n\n1. האגנט (בדרך כלל PM) שואל שאלות\n2. אתם עונים על השאלות\n3. האגנט יוצר מסמך Brief מסודר\n4. המסמך נשמר ב-output/"
+      "content": "**מה קורה כשמריצים product-brief:**\n\n1. הסוכן (בדרך כלל PM) שואל שאלות\n2. אתם עונים על השאלות\n3. הסוכן יוצר מסמך Brief מסודר\n4. המסמך נשמר ב-output/"
     },
     {
       "id": "day-3-workflow-2-callout",
@@ -615,7 +615,7 @@
       "type": "callout",
       "variant": "success",
       "title": "הצעות לתרגול",
-      "content": "1. בנו פרויקט משלכם - משהו שאתם רוצים באמת\n2. נסו אגנטים נוספים - TEA, UX Designer, Tech Writer\n3. הריצו עוד וורקפלואים - research, gdd, retrospective\n4. קראו מדריכים מתקדמים לפי התפקיד שלכם\n5. הצטרפו לקהילה - שתפו את הפרויקט שלכם!"
+      "content": "1. בנו פרויקט משלכם - משהו שאתם רוצים באמת\n2. נסו סוכנים נוספים - TEA, UX Designer, Tech Writer\n3. הריצו עוד וורקפלואים - research, gdd, retrospective\n4. קראו מדריכים מתקדמים לפי התפקיד שלכם\n5. הצטרפו לקהילה - שתפו את הפרויקט שלכם!"
     },
     {
       "id": "weekend-guides",
@@ -630,7 +630,7 @@
       "variant": "unordered",
       "items": [
         { "content": "מילון מונחים - לרענן את כל המושגים" },
-        { "content": "מדריך אגנטים - חלק 1 - לעומק על האגנטים" },
+        { "content": "מדריך סוכנים - חלק 1 - לעומק על הסוכנים" },
         { "content": "מדריך וורקפלואים - להבין את כל התהליכים" },
         { "content": "מדריך לפי התפקיד שלכם - התאמה אישית" },
         { "content": "Best Practices - טיפים מתקדמים" }
@@ -658,7 +658,7 @@
       "type": "list",
       "variant": "unordered",
       "items": [
-        { "content": "✅ הכרנו 3 אגנטים מרכזיים - PM, Architect, Dev" },
+        { "content": "✅ הכרנו 3 סוכנים מרכזיים - PM, Architect, Dev" },
         { "content": "✅ הרצנו 5+ וורקפלואים - workflow-status, product-brief, tech-spec, architecture, dev-story" },
         { "content": "✅ בנינו פרויקט קטן מקצה לקצה - מרעיון ועד קוד" },
         { "content": "✅ הבנו את מחזור החיים של BMAD - איך כל החלקים מתחברים" },
@@ -737,7 +737,7 @@
               "id": "path-more-text",
               "type": "text",
               "markdown": true,
-              "content": "**מסלול מומלץ להמשך למידה:**\n\n1. קראו: **הדרכה לחודש הראשון**\n2. למדו את כל האגנטים (19 אגנטים!)\n3. הכירו את כל הוורקפלואים (50+ וורקפלואים!)\n4. בנו פרויקט גדול ומורכב\n5. הפכו למומחי BMAD!"
+              "content": "**מסלול מומלץ להמשך למידה:**\n\n1. קראו: **הדרכה לחודש הראשון**\n2. למדו את כל הסוכנים (19 סוכנים!)\n3. הכירו את כל הוורקפלואים (50+ וורקפלואים!)\n4. בנו פרויקט גדול ומורכב\n5. הפכו למומחי BMAD!"
             }
           ]
         }
@@ -773,7 +773,7 @@
         },
         {
           "id": "faq-2",
-          "title": "איזה אגנטים הכי חשובים ללמוד?",
+          "title": "איזה סוכנים הכי חשובים ללמוד?",
           "content": [
             {
               "id": "faq-2-text",
@@ -803,7 +803,7 @@
               "id": "faq-4-text",
               "type": "text",
               "markdown": true,
-              "content": "**אתם מוכנים אם:**\n\n✅ אתם יודעים להפעיל 3 אגנטים\n✅ אתם יודעים להריץ 5 וורקפלואים\n✅ בניתם פרויקט קטן אחד (גם אם לא מושלם)\n✅ אתם מבינים את זרימת העבודה: תכנון → פיתוח → סיום\n\n**לא צריך:**\n❌ לדעת את כל האגנטים\n❌ לדעת את כל הוורקפלואים\n❌ להיות מומחים\n\n**פשוט תתחילו!** תלמדו תוך כדי."
+              "content": "**אתם מוכנים אם:**\n\n✅ אתם יודעים להפעיל 3 סוכנים\n✅ אתם יודעים להריץ 5 וורקפלואים\n✅ בניתם פרויקט קטן אחד (גם אם לא מושלם)\n✅ אתם מבינים את זרימת העבודה: תכנון → פיתוח → סיום\n\n**לא צריך:**\n❌ לדעת את כל הסוכנים\n❌ לדעת את כל הוורקפלואים\n❌ להיות מומחים\n\n**פשוט תתחילו!** תלמדו תוך כדי."
             }
           ]
         },
@@ -815,7 +815,7 @@
               "id": "faq-5-text",
               "type": "text",
               "markdown": true,
-              "content": "**זה קורה לכולם! הנה מה לעשות:**\n\n**צעד 1:** קראו שוב את ההוראות\n- לפעמים פספסנו משהו קטן\n\n**צעד 2:** חפשו במילון המונחים\n- אולי לא הבנתם מושג\n\n**צעד 3:** שאלו את האגנט שוב\n- הסבירו מה לא ברור\n- האגנטים כאן כדי לעזור!\n\n**צעד 4:** קראו את FAQ\n- אולי מישהו כבר שאל את זה\n\n**צעד 5:** Discord / GitHub\n- הקהילה תמיד עוזרת\n\n**אל תוותרו! נתקעות זה חלק מהלמידה.**"
+              "content": "**זה קורה לכולם! הנה מה לעשות:**\n\n**צעד 1:** קראו שוב את ההוראות\n- לפעמים פספסנו משהו קטן\n\n**צעד 2:** חפשו במילון המונחים\n- אולי לא הבנתם מושג\n\n**צעד 3:** שאלו את הסוכן שוב\n- הסבירו מה לא ברור\n- הסוכנים כאן כדי לעזור!\n\n**צעד 4:** קראו את FAQ\n- אולי מישהו כבר שאל את זה\n\n**צעד 5:** Discord / GitHub\n- הקהילה תמיד עוזרת\n\n**אל תוותרו! נתקעות זה חלק מהלמידה.**"
             }
           ]
         },
@@ -827,7 +827,7 @@
               "id": "faq-6-text",
               "type": "text",
               "markdown": true,
-              "content": "**תלוי ברמת השליטה:**\n\n**שימוש בסיסי:** שבוע אחד (הושלם!)\n- יודעים להשתמש באגנטים בסיסיים\n- יודעים להריץ וורקפלואים\n- יכולים לבנות פרויקט פשוט\n\n**שליטה טובה:** חודש אחד\n- מכירים את רוב האגנטים\n- שולטים ברוב הוורקפלואים\n- בונים פרויקטים מורכבים\n\n**מומחיות:** 2-3 חודשים\n- מכירים את כל המערכת\n- יוצרים וורקפלואים מותאמים\n- מדריכים אחרים\n\n**אבל:** כבר עכשיו אתם יכולים להשתמש ב-BMAD!"
+              "content": "**תלוי ברמת השליטה:**\n\n**שימוש בסיסי:** שבוע אחד (הושלם!)\n- יודעים להשתמש בסוכנים בסיסיים\n- יודעים להריץ וורקפלואים\n- יכולים לבנות פרויקט פשוט\n\n**שליטה טובה:** חודש אחד\n- מכירים את רוב הסוכנים\n- שולטים ברוב הוורקפלואים\n- בונים פרויקטים מורכבים\n\n**מומחיות:** 2-3 חודשים\n- מכירים את כל המערכת\n- יוצרים וורקפלואים מותאמים\n- מדריכים אחרים\n\n**אבל:** כבר עכשיו אתם יכולים להשתמש ב-BMAD!"
             }
           ]
         },
@@ -839,7 +839,7 @@
               "id": "faq-7-text",
               "type": "text",
               "markdown": true,
-              "content": "**מקורות עזרה:**\n\n**1. במערכת:**\n- מילון מונחים\n- מדריכי FAQ\n- מדריכים מתקדמים\n\n**2. קהילה:**\n- Discord - שאלות ותשובות מהירות\n- GitHub Discussions - דיונים טכניים\n- GitHub Issues - דיווח על באגים\n\n**3. מדריכים:**\n- מדריך לפי התפקיד שלכם\n- מדריכי אגנטים\n- מדריכי וורקפלואים\n\n**אל תתביישו לשאול!** כולם התחילו מאפס."
+              "content": "**מקורות עזרה:**\n\n**1. במערכת:**\n- מילון מונחים\n- מדריכי FAQ\n- מדריכים מתקדמים\n\n**2. קהילה:**\n- Discord - שאלות ותשובות מהירות\n- GitHub Discussions - דיונים טכניים\n- GitHub Issues - דיווח על באגים\n\n**3. מדריכים:**\n- מדריך לפי התפקיד שלכם\n- מדריכי סוכנים\n- מדריכי וורקפלואים\n\n**אל תתביישו לשאול!** כולם התחילו מאפס."
             }
           ]
         },
@@ -851,7 +851,7 @@
               "id": "faq-8-text",
               "type": "text",
               "markdown": true,
-              "content": "**מספר אפשרויות:**\n\n**אופציה 1: העמקה**\n- קראו את המדריך לתפקיד שלכם\n- למדו אגנטים נוספים\n- התנסו בוורקפלואים מתקדמים\n\n**אופציה 2: תרגול**\n- בנו פרויקט משלכם\n- תרגלו את מה שלמדתם\n- נסו דברים חדשים\n\n**אופציה 3: המשך מובנה**\n- קראו: הדרכה לחודש הראשון\n- עקבו אחרי תוכנית למידה\n- התקדמו שלב אחרי שלב\n\n**המלצה שלנו:** שילוב של תרגול + העמקה"
+              "content": "**מספר אפשרויות:**\n\n**אופציה 1: העמקה**\n- קראו את המדריך לתפקיד שלכם\n- למדו סוכנים נוספים\n- התנסו בוורקפלואים מתקדמים\n\n**אופציה 2: תרגול**\n- בנו פרויקט משלכם\n- תרגלו את מה שלמדתם\n- נסו דברים חדשים\n\n**אופציה 3: המשך מובנה**\n- קראו: הדרכה לחודש הראשון\n- עקבו אחרי תוכנית למידה\n- התקדמו שלב אחרי שלב\n\n**המלצה שלנו:** שילוב של תרגול + העמקה"
             }
           ]
         }
