--- a/src/content/locale/he/guides/practical/best-practices.json
+++ b/src/content/locale/he/guides/practical/best-practices.json
@@ -33,7 +33,7 @@
     },
     {
       "id": "toc-3",
-      "title": "Best Practices לעבודה עם אגנטים",
+      "title": "Best Practices לעבודה עם סוכנים",
       "level": 2,
       "anchor": "agents-best-practices"
     },
@@ -343,25 +343,25 @@
     {
       "type": "heading",
       "level": 2,
-      "text": "Best Practices לעבודה עם אגנטים",
+      "text": "Best Practices לעבודה עם סוכנים",
       "id": "agents-best-practices"
     },
     {
       "type": "heading",
       "level": 3,
-      "text": "בחירת האגנט הנכון",
+      "text": "בחירת הסוכן הנכון",
       "id": "choosing-right-agent"
     },
     {
       "type": "text",
-      "content": "**כלל פשוט:** השתמשו באגנט המומחה למשימה.\n\nאל תבקשו מ-Dev לעשות עבודה של Architect, ולהפך.",
+      "content": "**כלל פשוט:** השתמשו בסוכן המומחה למשימה.\n\nאל תבקשו מ-Dev לעשות עבודה של Architect, ולהפך.",
       "markdown": true
     },
     {
       "type": "table",
       "headers": [
         "משימה",
-        "אגנט נכון",
+        "סוכן נכון",
         "למה?"
       ],
       "rows": [
@@ -405,7 +405,7 @@
     },
     {
       "type": "text",
-      "content": "**אגנטים עובדים טוב רק עם Context טוב!**\n\n**Context מלא כולל:**",
+      "content": "**סוכנים עובדים טוב רק עם Context טוב!**\n\n**Context מלא כולל:**",
       "markdown": true
     },
     {
@@ -428,12 +428,12 @@
     {
       "type": "heading",
       "level": 3,
-      "text": "העברת מידע בין אגנטים",
+      "text": "העברת מידע בין סוכנים",
       "id": "passing-info-between-agents"
     },
     {
       "type": "text",
-      "content": "**כשעוברים מאגנט לאגנט - העבירו את המידע!**\n\n**Workflow נכון:**",
+      "content": "**כשעוברים מסוכן לסוכן - העבירו את המידע!**\n\n**Workflow נכון:**",
       "markdown": true
     },
     {
@@ -445,18 +445,18 @@
       "type": "callout",
       "variant": "warning",
       "title": "טעות נפוצה",
-      "content": "**אגנטים לא קוראים מחשבות!** אם לא תגידו להם על PRD או Tech Spec קיים - הם לא ידעו. תמיד תציינו מה כבר קיים ואיפה למצוא אותו.",
+      "content": "**סוכנים לא קוראים מחשבות!** אם לא תגידו להם על PRD או Tech Spec קיים - הם לא ידעו. תמיד תציינו מה כבר קיים ואיפה למצוא אותו.",
       "markdown": true
     },
     {
       "type": "heading",
       "level": 3,
-      "text": "אל תמיקרו-מנג'רו את האגנטים",
+      "text": "אל תמיקרו-מנג'רו את הסוכנים",
       "id": "dont-micromanage"
     },
     {
       "type": "text",
-      "content": "**תנו לאגנטים לעשות את העבודה שלהם!**\n\nהם מומחים בתחום שלהם.",
+      "content": "**תנו לסוכנים לעשות את העבודה שלהם!**\n\nהם מומחים בתחום שלהם.",
       "markdown": true
     },
     {
@@ -521,7 +521,7 @@
       "items": [
         "**1 וורקפלו:** אופטימלי לרוב המקרים",
         "**2-3 וורקפלואים:** אם הם באמת בלתי-תלויים",
-        "**4+ וורקפלואים:** רק אם יש מספר אנשים/אגנטים"
+        "**4+ וורקפלואים:** רק אם יש מספר אנשים/סוכנים"
       ]
     },
     {
@@ -539,7 +539,7 @@
       "type": "list",
       "ordered": true,
       "items": [
-        "**Context לאגנטים הבאים** - הם צריכים לדעת מה קרה קודם",
+        "**Context לסוכנים הבאים** - הם צריכים לדעת מה קרה קודם",
         "**תיעוד** - מחזורים עתידיים יודו לכם",
         "**Traceability** - איך הגענו להחלטה הזו?",
         "**Onboarding** - חברי צוות חדשים יכולים לקרוא ולהבין"
@@ -749,7 +749,7 @@
     },
     {
       "type": "text",
-      "content": "**Context = כל המידע שהאגנט צריך כדי לעשות עבודה טובה.**\n\n**Context כולל:**",
+      "content": "**Context = כל המידע שהסוכן צריך כדי לעשות עבודה טובה.**\n\n**Context כולל:**",
       "markdown": true
     },
     {
@@ -767,7 +767,7 @@
       "type": "callout",
       "variant": "success",
       "title": "Context טוב = פלט פי 3 יותר טוב",
-      "content": "אגנט עם Context מלא מייצר תוצאות משמעותית טובות יותר. השקיעו בContext!"
+      "content": "סוכן עם Context מלא מייצר תוצאות משמעותית טובות יותר. השקיעו בContext!"
     },
     {
       "type": "heading",
@@ -815,7 +815,7 @@
     },
     {
       "type": "text",
-      "content": "**כלל:** אגנט צריך גישה לכל השכבות הרלוונטיות לעבודה שלו.",
+      "content": "**כלל:** סוכן צריך גישה לכל השכבות הרלוונטיות לעבודה שלו.",
       "markdown": true
     },
     {
@@ -977,7 +977,7 @@
         },
         {
           "title": "❌ טעות 9: Context לא מעודכן",
-          "content": "**הטעות:** האגנט לא יודע מה השתנה\n\n**למה זה רע:** החלטות מבוססות על מידע ישן\n\n**הפתרון:** עדכנו Context אחרי כל שינוי משמעותי.",
+          "content": "**הטעות:** הסוכן לא יודע מה השתנה\n\n**למה זה רע:** החלטות מבוססות על מידע ישן\n\n**הפתרון:** עדכנו Context אחרי כל שינוי משמעותי.",
           "markdown": true
         },
         {
