--- a/src/content/locale/he/guides/practical/creativity-innovation.json
+++ b/src/content/locale/he/guides/practical/creativity-innovation.json
@@ -109,7 +109,7 @@
       "type": "callout",
       "variant": "tip",
       "title": "המפתח: פרספקטיבות מגוונות",
-      "content": "כל אגנט מביא זווית ראייה שונה. זה בדיוק מה שצריך לחדשנות אמיתית!"
+      "content": "כל סוכן מביא זווית ראייה שונה. זה בדיוק מה שצריך לחדשנות אמיתית!"
     },
     {
       "type": "divider"
@@ -152,7 +152,7 @@
       "type": "table",
       "headers": [
         "שלב",
-        "אגנט רלוונטי",
+        "סוכן רלוונטי",
         "וורקפלואו"
       ],
       "rows": [
@@ -187,7 +187,7 @@
       "type": "callout",
       "variant": "success",
       "title": "BMAD מכסה את כל התהליך",
-      "content": "כל שלב ב-Design Thinking יש לו אגנט ווורקפלואו מתאימים!"
+      "content": "כל שלב ב-Design Thinking יש לו סוכן ווורקפלואו מתאימים!"
     },
     {
       "type": "heading",
@@ -215,7 +215,7 @@
         },
         {
           "title": "שלב 3: Ideate - יצירת רעיונות",
-          "content": "הפעילו Party Mode עם מספר אגנטים:\n\n```bash\n@bmad-master.mdc\n*party-mode\n```\n\nשלבו:\n- John (PM) - זווית עסקית\n- Sarah (Architect) - זווית טכנולוגית\n- Sally (UX) - זווית חווית משתמש\n- Amelia (Dev) - זווית מימוש\n\nכל אחד יציע רעיונות מהתחום שלו!",
+          "content": "הפעילו Party Mode עם מספר סוכנים:\n\n```bash\n@bmad-master.mdc\n*party-mode\n```\n\nשלבו:\n- John (PM) - זווית עסקית\n- Sarah (Architect) - זווית טכנולוגית\n- Sally (UX) - זווית חווית משתמש\n- Amelia (Dev) - זווית מימוש\n\nכל אחד יציע רעיונות מהתחום שלו!",
           "markdown": true
         },
         {
@@ -266,9 +266,9 @@
       "ordered": true,
       "items": [
         "הגדרת נושא - מה התחום שרוצים לחקור",
-        "בחירת אגנטים - אילו פרספקטיבות צריכים",
-        "סבב רעיונות - כל אגנט מציע רעיונות",
-        "הצלבה - שילוב רעיונות משני אגנטים או יותר",
+        "בחירת סוכנים - אילו פרספקטיבות צריכים",
+        "סבב רעיונות - כל סוכן מציע רעיונות",
+        "הצלבה - שילוב רעיונות משני סוכנים או יותר",
         "הערכה - בחירת הרעיונות הטובים ביותר",
         "תיעוד - שמירת התוצאות"
       ]
@@ -284,19 +284,19 @@
       "items": [
         {
           "label": "Divergent Thinking",
-          "content": "**יצירת כמות גדולה של רעיונות**\n\nטכניקה:\n1. הפעילו 3-4 אגנטים יחד\n2. תנו להם אותה בעיה\n3. בקשו מכל אחד 10 רעיונות\n4. **אל** תשפטו - רק תאספו\n\nמתאים ל:\n- תחילת פרויקט\n- חקר אפשרויות\n- חשיבה out-of-the-box"
+          "content": "**יצירת כמות גדולה של רעיונות**\n\nטכניקה:\n1. הפעילו 3-4 סוכנים יחד\n2. תנו להם אותה בעיה\n3. בקשו מכל אחד 10 רעיונות\n4. **אל** תשפטו - רק תאספו\n\nמתאים ל:\n- תחילת פרויקט\n- חקר אפשרויות\n- חשיבה out-of-the-box"
         },
         {
           "label": "Convergent Thinking",
-          "content": "**בחירה והעמקה ברעיונות הטובים**\n\nטכניקה:\n1. קחו את הרעיונות מהשלב הקודם\n2. העבירו אותם לאגנטים שונים להערכה\n3. בקשו ניתוח לעומק של כל רעיון\n4. דרגו לפי קריטריונים\n\nמתאים ל:\n- בחירת פתרון\n- תעדוף רעיונות\n- החלטות אסטרטגיות"
+          "content": "**בחירה והעמקה ברעיונות הטובים**\n\nטכניקה:\n1. קחו את הרעיונות מהשלב הקודם\n2. העבירו אותם לסוכנים שונים להערכה\n3. בקשו ניתוח לעומק של כל רעיון\n4. דרגו לפי קריטריונים\n\nמתאים ל:\n- בחירת פתרון\n- תעדוף רעיונות\n- החלטות אסטרטגיות"
         },
         {
           "label": "SCAMPER",
-          "content": "**שיטת SCAMPER לחדשנות**\n\nS - Substitute (החלף)\nC - Combine (שלב)\nA - Adapt (התאם)\nM - Modify (שנה)\nP - Put to other use (שימוש אחר)\nE - Eliminate (הסר)\nR - Reverse (הפוך)\n\nאיך להשתמש:\n- שאלו כל אגנט שאלת SCAMPER אחרת\n- John - \"מה אפשר להחליף?\"\n- Sarah - \"איך אפשר לשלב?\"\n- Sally - \"לאיזה שימוש אחר?\""
+          "content": "**שיטת SCAMPER לחדשנות**\n\nS - Substitute (החלף)\nC - Combine (שלב)\nA - Adapt (התאם)\nM - Modify (שנה)\nP - Put to other use (שימוש אחר)\nE - Eliminate (הסר)\nR - Reverse (הפוך)\n\nאיך להשתמש:\n- שאלו כל סוכן שאלת SCAMPER אחרת\n- John - \"מה אפשר להחליף?\"\n- Sarah - \"איך אפשר לשלב?\"\n- Sally - \"לאיזה שימוש אחר?\""
         },
         {
           "label": "Six Thinking Hats",
-          "content": "**6 כובעי חשיבה של דה בונו**\n\nכל אגנט מקבל \"כובע\" (זווית ראייה):\n\n- **כובע לבן** (עובדות) - Mary (Analyst)\n- **כובע אדום** (רגשות) - Sally (UX)\n- **כובע שחור** (ביקורת) - Murat (TEA)\n- **כובע צהוב** (אופטימיות) - John (PM)\n- **כובע ירוק** (יצירתיות) - CIS\n- **כובע כחול** (ניהול) - Bob (SM)"
+          "content": "**6 כובעי חשיבה של דה בונו**\n\nכל סוכן מקבל \"כובע\" (זווית ראייה):\n\n- **כובע לבן** (עובדות) - Mary (Analyst)\n- **כובע אדום** (רגשות) - Sally (UX)\n- **כובע שחור** (ביקורת) - Murat (TEA)\n- **כובע צהוב** (אופטימיות) - John (PM)\n- **כובע ירוק** (יצירתיות) - CIS\n- **כובע כחול** (ניהול) - Bob (SM)"
         }
       ]
     },
@@ -323,7 +323,7 @@
     },
     {
       "type": "text",
-      "content": "**CIS = Collaboration and Innovation System**\n\nזו מערכת ב-BMAD שמאפשרת לכמה אגנטים לעבוד יחד במקביל על אותה בעיה. זה כמו brainstorming session עם צוות מומחים.",
+      "content": "**CIS = Collaboration and Innovation System**\n\nזו מערכת ב-BMAD שמאפשרת לכמה סוכנים לעבוד יחד במקביל על אותה בעיה. זה כמו brainstorming session עם צוות מומחים.",
       "markdown": true
     },
     {
@@ -352,7 +352,7 @@
       "ordered": false,
       "items": [
         "מהי המשימה או הבעיה?",
-        "אילו אגנטים תרצו להזמין?",
+        "אילו סוכנים תרצו להזמין?",
         "מה סגנון העבודה (structured/free-flow)?"
       ]
     },
@@ -401,13 +401,13 @@
     {
       "type": "code",
       "language": "bash",
-      "code": "# הפעלת Party Mode\n@bmad-master.mdc\n*party-mode\n\n# הזמנת אגנטים\nAgents: Sarah, Amelia, Murat\n\n# הגדרת הבעיה\nProblem: \"יש לנו Bug שקורה רק בפרודקשן ורק ב-10% מהמקרים\"\n\n# תהליך:\n1. Sarah מנתחת את הארכיטקטורה - איפה זה יכול לקרות?\n2. Amelia בודקת את הקוד - איפה עלולה להיות הבעיה?\n3. Murat מתכנן איך לשחזר - איך נוכל לבדוק?\n\n# תוצאה:\nפתרון משולב שמתחשב בכל הזוויות!"
+      "code": "# הפעלת Party Mode\n@bmad-master.mdc\n*party-mode\n\n# הזמנת סוכנים\nAgents: Sarah, Amelia, Murat\n\n# הגדרת הבעיה\nProblem: \"יש לנו Bug שקורה רק בפרודקשן ורק ב-10% מהמקרים\"\n\n# תהליך:\n1. Sarah מנתחת את הארכיטקטורה - איפה זה יכול לקרות?\n2. Amelia בודקת את הקוד - איפה עלולה להיות הבעיה?\n3. Murat מתכנן איך לשחזר - איך נוכל לבדוק?\n\n# תוצאה:\nפתרון משולב שמתחשב בכל הזוויות!"
     },
     {
       "type": "callout",
       "variant": "success",
       "title": "כוח ה-CIS",
-      "content": "כשכמה אגנטים עובדים יחד, אתם מקבלים פתרונות שאף אגנט בודד לא היה מגיע אליהם לבד!"
+      "content": "כשכמה סוכנים עובדים יחד, אתם מקבלים פתרונות שאף סוכן בודד לא היה מגיע אליהם לבד!"
     },
     {
       "type": "divider"
@@ -480,7 +480,7 @@
       "items": [
         {
           "title": "שלב 1: Ideation - יצירת רעיונות (1-2 שעות)",
-          "content": "**וורקפלואו:** brainstorming\n\nמה קורה:\n- בוחרים נושא רחב (למשל: \"AI in Education\")\n- מזמינים 3-4 אגנטים\n- כל אחד מציע 5-10 רעיונות\n- מצלבים רעיונות\n- מדרגים לפי פוטנציאל\n\n**פלט:** 3-5 רעיונות מבטיחים",
+          "content": "**וורקפלואו:** brainstorming\n\nמה קורה:\n- בוחרים נושא רחב (למשל: \"AI in Education\")\n- מזמינים 3-4 סוכנים\n- כל אחד מציע 5-10 רעיונות\n- מצלבים רעיונות\n- מדרגים לפי פוטנציאל\n\n**פלט:** 3-5 רעיונות מבטיחים",
           "markdown": true
         },
         {
@@ -571,7 +571,7 @@
     {
       "type": "code",
       "language": "bash",
-      "code": "# שלב 1: הגדרת הבעיה\n@analyst.mdc\n\n\"נתחי את בעיית הביצועים - איפה הצוואר, מה הסיבות, מה כבר נוסה\"\n\n# שלב 2: Brainstorming פתרונות\n@bmad-master.mdc\n*brainstorming\n\nTopic: \"פתרונות יצירתיים לבעיית ביצועים\"\nAgents: Sarah (ארכיטקטורה), Amelia (קוד), Murat (בדיקות)\n\n# שלב 3: הערכת פתרונות\n# CIS עם כל האגנטים\n@bmad-master.mdc\n*party-mode\n\n\"נעריך כל פתרון לפי: מורכבות, זמן, סיכון, תועלת\"\n\n# שלב 4: בחירה ומימוש\n@architect.mdc\n*tech-spec\n\n\"תכנני את הפתרון שבחרנו בפירוט\""
+      "code": "# שלב 1: הגדרת הבעיה\n@analyst.mdc\n\n\"נתחי את בעיית הביצועים - איפה הצוואר, מה הסיבות, מה כבר נוסה\"\n\n# שלב 2: Brainstorming פתרונות\n@bmad-master.mdc\n*brainstorming\n\nTopic: \"פתרונות יצירתיים לבעיית ביצועים\"\nAgents: Sarah (ארכיטקטורה), Amelia (קוד), Murat (בדיקות)\n\n# שלב 3: הערכת פתרונות\n# CIS עם כל הסוכנים\n@bmad-master.mdc\n*party-mode\n\n\"נעריך כל פתרון לפי: מורכבות, זמן, סיכון, תועלת\"\n\n# שלב 4: בחירה ומימוש\n@architect.mdc\n*tech-spec\n\n\"תכנני את הפתרון שבחרנו בפירוט\""
     },
     {
       "type": "divider"
@@ -593,11 +593,11 @@
       "items": [
         {
           "label": "עשה",
-          "content": "**עשו את זה:**\n\n- **תנו חופש יצירה** - אל תדחו רעיונות מהר מדי\n- **שלבו אגנטים** - פרספקטיבות מגוונות = רעיונות טובים יותר\n- **תעדו הכל** - גם רעיונות \"רעים\" יכולים להיות שימושיים מאוחר יותר\n- **תנסו כל טכניקה** - SCAMPER, Six Hats, Design Thinking\n- **תתנו זמן** - חדשנות דורשת זמן לחשיבה\n- **תשאלו \"מה אם?\"** - שאלות פתוחות מובילות לרעיונות חדשים"
+          "content": "**עשו את זה:**\n\n- **תנו חופש יצירה** - אל תדחו רעיונות מהר מדי\n- **שלבו סוכנים** - פרספקטיבות מגוונות = רעיונות טובים יותר\n- **תעדו הכל** - גם רעיונות \"רעים\" יכולים להיות שימושיים מאוחר יותר\n- **תנסו כל טכניקה** - SCAMPER, Six Hats, Design Thinking\n- **תתנו זמן** - חדשנות דורשת זמן לחשיבה\n- **תשאלו \"מה אם?\"** - שאלות פתוחות מובילות לרעיונות חדשים"
         },
         {
           "label": "אל תעשה",
-          "content": "**אל תעשו את זה:**\n\n- **לא לשפוט מוקדם** - \"זה לא יעבוד\" הורג יצירתיות\n- **לא להישאר עם אגנט אחד** - אתם מפסידים פרספקטיבות\n- **לא לדלג על מחקר** - רעיונות צריכים להיות מבוססי מציאות\n- **לא להיות מושלמים** - פרוטוטייפ לא צריך להיות מושלם\n- **לא לוותר מהר** - הרעיון הראשון לא תמיד הטוב ביותר\n- **לא לעבוד לבד** - השתמשו ב-CIS!"
+          "content": "**אל תעשו את זה:**\n\n- **לא לשפוט מוקדם** - \"זה לא יעבוד\" הורג יצירתיות\n- **לא להישאר עם סוכן אחד** - אתם מפסידים פרספקטיבות\n- **לא לדלג על מחקר** - רעיונות צריכים להיות מבוססי מציאות\n- **לא להיות מושלמים** - פרוטוטייפ לא צריך להיות מושלם\n- **לא לוותר מהר** - הרעיון הראשון לא תמיד הטוב ביותר\n- **לא לעבוד לבד** - השתמשו ב-CIS!"
         }
       ]
     },
@@ -611,7 +611,7 @@
       "type": "list",
       "ordered": true,
       "items": [
-        "**פרספקטיבות מגוונות** - תמיד שלבו לפחות 3 אגנטים מתחומים שונים",
+        "**פרספקטיבות מגוונות** - תמיד שלבו לפחות 3 סוכנים מתחומים שונים",
         "**תהליך מובנה** - השתמשו בוורקפלואים, אל תאלתרו",
         "**תיעוד מתמיד** - כל רעיון, כל שיחה - תעדו",
         "**איטרציות מהירות** - בנו מהר, בדקו מהר, למדו מהר",
@@ -634,7 +634,7 @@
       "type": "list",
       "ordered": false,
       "items": [
-        "**מדריך אגנטים - CIS** - למדו עוד על שיתוף פעולה בין אגנטים",
+        "**מדריך סוכנים - CIS** - למדו עוד על שיתוף פעולה בין סוכנים",
         "**מדריך וורקפלואים - Brainstorming** - פירוט מלא על הוורקפלואו",
         "**מדריך למנהלי מוצר** - איך להשתמש ב-BMAD לחדשנות עסקית",
         "**מקרי מבחן** - תרגילים מעשיים בחדשנות"
@@ -664,7 +664,7 @@
       "type": "list",
       "ordered": false,
       "items": [
-        "מדריך אגנטים - CIS - שיתוף פעולה מתקדם",
+        "מדריך סוכנים - CIS - שיתוף פעולה מתקדם",
         "מדריך וורקפלואים - Brainstorming",
         "מקרי מבחן ותרגילים - תרגול מעשי"
       ]
