--- a/src/content/locale/he/guides/practical/learning-paths.json
+++ b/src/content/locale/he/guides/practical/learning-paths.json
@@ -115,7 +115,7 @@
     },
     {
       "type": "text",
-      "content": "BMAD-METHOD הוא מערכת ענקית - 11 אגנטים, 50+ וורקפלואים, עשרות מדריכים. זה יכול להיות **מכריע** אם לא יודעים מאיפה להתחיל.",
+      "content": "BMAD-METHOD הוא מערכת ענקית - 11 סוכנים, 50+ וורקפלואים, עשרות מדריכים. זה יכול להיות **מכריע** אם לא יודעים מאיפה להתחיל.",
       "markdown": true
     },
     {
@@ -133,7 +133,7 @@
       "type": "callout",
       "variant": "warning",
       "title": "אל תלמדו הכל בבת אחת!",
-      "content": "אתם לא צריכים להכיר את כל האגנטים והוורקפלואים. רק את אלה שרלוונטיים לתפקיד שלכם."
+      "content": "אתם לא צריכים להכיר את כל הסוכנים והוורקפלואים. רק את אלה שרלוונטיים לתפקיד שלכם."
     },
     {
       "type": "heading",
@@ -268,7 +268,7 @@
       "items": [
         {
           "title": "שלב 1: יסודות (3 ימים)",
-          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו את BMAD\n- הריצו את workflow-init\n\n**יום 2:**\n- קראו: מילון מונחים\n- קראו: מדריך אגנטים - חלק 1א (מבוא)\n- הכירו את BMAD Master\n\n**יום 3:**\n- קראו: מדריך למפתחים (חלק 1)\n- הכירו את Amelia (Dev Agent)\n- נסו פקודה פשוטה: *create-story",
+          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו את BMAD\n- הריצו את workflow-init\n\n**יום 2:**\n- קראו: מילון מונחים\n- קראו: מדריך סוכנים - חלק 1א (מבוא)\n- הכירו את BMAD Master\n\n**יום 3:**\n- קראו: מדריך למפתחים (חלק 1)\n- הכירו את Amelia (Dev Agent)\n- נסו פקודה פשוטה: *create-story",
           "markdown": true
         },
         {
@@ -329,7 +329,7 @@
       "type": "callout",
       "variant": "success",
       "title": "תוצאה מצופה",
-      "content": "תוך שבועיים תדעו לעבוד באופן עצמאי עם BMAD, להוביל Stories מורכבות, ולשתף פעולה עם אגנטים אחרים."
+      "content": "תוך שבועיים תדעו לעבוד באופן עצמאי עם BMAD, להוביל Stories מורכבות, ולשתף פעולה עם סוכנים אחרים."
     },
     {
       "type": "heading",
@@ -356,7 +356,7 @@
         },
         {
           "title": "שלב 2: ממוקד Leadership (3 ימים)",
-          "content": "**ימים 1-3:**\n- למדו: Architecture workflow\n- למדו: Tech Spec workflow\n- למדו: Solutioning Gate Check\n- למדו: Code Review מקצועי\n- למדו: CIS - שילוב אגנטים",
+          "content": "**ימים 1-3:**\n- למדו: Architecture workflow\n- למדו: Tech Spec workflow\n- למדו: Solutioning Gate Check\n- למדו: Code Review מקצועי\n- למדו: CIS - שילוב סוכנים",
           "markdown": true
         },
         {
@@ -391,7 +391,7 @@
       "items": [
         {
           "title": "שלב 1: יסודות (2 ימים)",
-          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n- הריצו workflow-init\n\n**יום 2:**\n- קראו: מילון מונחים\n- קראו: מדריך אגנטים - מבוא + PM\n- הכירו את John (PM Agent)",
+          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n- הריצו workflow-init\n\n**יום 2:**\n- קראו: מילון מונחים\n- קראו: מדריך סוכנים - מבוא + PM\n- הכירו את John (PM Agent)",
           "markdown": true
         },
         {
@@ -431,7 +431,7 @@
       "items": [
         {
           "title": "שלב 1: יסודות (2 ימים)",
-          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך אגנטים - Architect\n- הכירו את Sarah (Architect Agent)\n- הריצו workflow-init",
+          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך סוכנים - Architect\n- הכירו את Sarah (Architect Agent)\n- הריצו workflow-init",
           "markdown": true
         },
         {
@@ -471,7 +471,7 @@
       "items": [
         {
           "title": "שלב 1: יסודות (2 ימים)",
-          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך אגנטים - UX Designer\n- הכירו את Sally (UX Designer Agent)\n- הריצו workflow-init",
+          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך סוכנים - UX Designer\n- הכירו את Sally (UX Designer Agent)\n- הריצו workflow-init",
           "markdown": true
         },
         {
@@ -511,7 +511,7 @@
       "items": [
         {
           "title": "שלב 1: יסודות (2 ימים)",
-          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך אגנטים - TEA\n- הכירו את Murat (Test Architect Expert)\n- הריצו workflow-init",
+          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך סוכנים - TEA\n- הכירו את Murat (Test Architect Expert)\n- הריצו workflow-init",
           "markdown": true
         },
         {
@@ -551,7 +551,7 @@
       "items": [
         {
           "title": "שלב 1: יסודות (2 ימים)",
-          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך אגנטים - SM\n- הכירו את Bob (Scrum Master Agent)\n- הריצו workflow-init",
+          "content": "**יום 1:**\n- קראו: התחלה מהירה ל-BMAD\n- קראו: הדרכה ליום הראשון\n- התקינו BMAD\n\n**יום 2:**\n- קראו: מדריך סוכנים - SM\n- הכירו את Bob (Scrum Master Agent)\n- הריצו workflow-init",
           "markdown": true
         },
         {
@@ -675,8 +675,8 @@
           "content": "- קראו: התחלה מהירה ל-BMAD (15 דק')\n- קראו: מדריך למנהלים בכירים\n- הבינו את ROI של BMAD\n- הבינו את התהליך מקצה לקצה"
         },
         {
-          "title": "יום 2-3: הכרת האגנטים והוורקפלואים",
-          "content": "- קראו: מדריך אגנטים - סינתזה\n- קראו: מדריך וורקפלואים - סינתזה\n- הבינו איך הכל מתחבר\n- ראו דוגמאות"
+          "title": "יום 2-3: הכרת הסוכנים והוורקפלואים",
+          "content": "- קראו: מדריך סוכנים - סינתזה\n- קראו: מדריך וורקפלואים - סינתזה\n- הבינו איך הכל מתחבר\n- ראו דוגמאות"
         },
         {
           "title": "יום 4: אסטרטגיית אימוץ",
@@ -785,7 +785,7 @@
       "rows": [
         [
           "שלב 1 הושלם",
-          "אתם מבינים מה זה אגנטים ווורקפלואים"
+          "אתם מבינים מה זה סוכנים ווורקפלואים"
         ],
         [
           "שלב 2 הושלם",
@@ -793,7 +793,7 @@
         ],
         [
           "שלב 3 הושלם",
-          "אתם יכולים להוביל Epic ולעבוד עם אגנטים אחרים"
+          "אתם יכולים להוביל Epic ולעבוד עם סוכנים אחרים"
         ],
         [
           "מקצועיים",
@@ -824,7 +824,7 @@
         ],
         [
           "שלב 3 הושלם",
-          "אתם יכולים לנהל מוצר מקצה לקצה עם כל האגנטים"
+          "אתם יכולים לנהל מוצר מקצה לקצה עם כל הסוכנים"
         ],
         [
           "מקצועיים",
@@ -843,10 +843,10 @@
       "ordered": false,
       "items": [
         "אני יודע/ת מה זה BMAD ולמה זה שימושי",
-        "אני מכיר/ה את האגנטים הרלוונטיים לתפקיד שלי",
+        "אני מכיר/ה את הסוכנים הרלוונטיים לתפקיד שלי",
         "אני יודע/ת להריץ את הוורקפלואים הבסיסיים",
         "אני יכול/ה לעבוד על פרויקט אמיתי עם BMAD",
-        "אני יודע/ת לשתף פעולה עם אגנטים אחרים",
+        "אני יודע/ת לשתף פעולה עם סוכנים אחרים",
         "אני מרגיש/ה שBMAD עוזר לי לעבוד טוב יותר"
       ]
     },
