--- a/src/content/locale/he/guides/roles/architects.json
+++ b/src/content/locale/he/guides/roles/architects.json
@@ -3,7 +3,7 @@
     "id": "role-architects",
     "slug": "role-architects",
     "title": "מדריך לארכיטקטים טכנולוגיים",
-    "description": "תכנון ארכיטקטורות מערכת עם אגנט Architect. איך לתכנן מערכות מורכבות, לבחור טכנולוגיות, לתעד החלטות ארכיטקטוניות, ולשמור על איכות טכנית גבוהה.",
+    "description": "תכנון ארכיטקטורות מערכת עם סוכן Architect. איך לתכנן מערכות מורכבות, לבחור טכנולוגיות, לתעד החלטות ארכיטקטוניות, ולשמור על איכות טכנית גבוהה.",
     "category": "roles",
     "difficulty": "advanced",
     "estimatedMinutes": 50,
@@ -31,7 +31,7 @@
     },
     {
       "id": "toc-3",
-      "title": "האגנט שלך: Winston",
+      "title": "הסוכן שלך: Winston",
       "level": 2,
       "anchor": "winston-agent"
     },
@@ -95,7 +95,7 @@
       "type": "callout",
       "variant": "info",
       "title": "איך BMAD הופך תכנון ארכיטקטורה למהיר, מובנה ומקצועי",
-      "content": "מדריך מקיף לארכיטקטים טכנולוגיים - תכננו מערכות מורכבות, תעדו החלטות, ותעבדו עם הצוות בצורה יעילה באמצעות אגנט Architect מומחה."
+      "content": "מדריך מקיף לארכיטקטים טכנולוגיים - תכננו מערכות מורכבות, תעדו החלטות, ותעבדו עם הצוות בצורה יעילה באמצעות סוכן Architect מומחה."
     },
     {
       "type": "divider"
@@ -108,7 +108,7 @@
     },
     {
       "type": "text",
-      "content": "מדריך זה נועד לארכיטקטים טכנולוגיים המעוניינים לשפר את תהליכי תכנון הארכיטקטורה שלהם באמצעות BMAD-METHOD. נסקור איך להשתמש באגנט Architect (Winston) ליצירת ארכיטקטורות מובנות, תיעוד החלטות, ועבודה יעילה עם הצוות.",
+      "content": "מדריך זה נועד לארכיטקטים טכנולוגיים המעוניינים לשפר את תהליכי תכנון הארכיטקטורה שלהם באמצעות BMAD-METHOD. נסקור איך להשתמש בסוכן Architect (Winston) ליצירת ארכיטקטורות מובנות, תיעוד החלטות, ועבודה יעילה עם הצוות.",
       "markdown": true
     },
     {
@@ -173,7 +173,7 @@
     },
     {
       "type": "text",
-      "content": "בשבוע הראשון, תכירו את האגנט Winston והוורקפלואים הארכיטקטוניים:\n\n**מה צריך ללמוד:**",
+      "content": "בשבוע הראשון, תכירו את הסוכן Winston והוורקפלואים הארכיטקטוניים:\n\n**מה צריך ללמוד:**",
       "markdown": true
     },
     {
@@ -181,7 +181,7 @@
       "variant": "ordered",
       "items": [
         {
-          "content": "**קראו את מדריך Winston** - הכירו את האגנט, המומחיות שלו, וסגנון העבודה",
+          "content": "**קראו את מדריך Winston** - הכירו את הסוכן, המומחיות שלו, וסגנון העבודה",
           "markdown": true
         },
         {
@@ -224,7 +224,7 @@
       "variant": "ordered",
       "items": [
         {
-          "content": "**קבלו PRD** - אם אין, תכתבו אחד פשוט או תשתמשו באגנט PM (John)",
+          "content": "**קבלו PRD** - אם אין, תכתבו אחד פשוט או תשתמשו בסוכן PM (John)",
           "markdown": true
         },
         {
@@ -282,13 +282,13 @@
           "content": "תעדו החלטות ב-ADRs באופן עקבי"
         },
         {
-          "content": "עבדו עם האגנט PM (John) לקבלת דרישות"
+          "content": "עבדו עם הסוכן PM (John) לקבלת דרישות"
         },
         {
           "content": "תאמו עם UX Designer (Lisa) על ארכיטקטורת Frontend"
         },
         {
-          "content": "סקרו קוד מול האגנט Dev (Amelia) לוידוא עקביות"
+          "content": "סקרו קוד מול הסוכן Dev (Amelia) לוידוא עקביות"
         },
         {
           "content": "הריצו Retrospectives לשיפור התהליך"
@@ -307,7 +307,7 @@
     {
       "type": "heading",
       "level": 2,
-      "text": "האגנט שלך: Winston",
+      "text": "הסוכן שלך: Winston",
       "id": "winston-agent"
     },
     {
@@ -317,7 +317,7 @@
       "content": [
         {
           "type": "text",
-          "content": "Winston הוא האגנט הארכיטקטוני המומחה שלכם. הוא מתמחה בתכנון מערכות מורכבות, בחירת טכנולוגיות, ותיעוד החלטות ארכיטקטוניות. Winston חושב בצורה מערכתית, שוקל טריידאופים, ומעדיף תכנון מעמיק על פני פתרונות מהירים.",
+          "content": "Winston הוא הסוכן הארכיטקטוני המומחה שלכם. הוא מתמחה בתכנון מערכות מורכבות, בחירת טכנולוגיות, ותיעוד החלטות ארכיטקטוניות. Winston חושב בצורה מערכתית, שוקל טריידאופים, ומעדיף תכנון מעמיק על פני פתרונות מהירים.",
           "id": "winston-card-text"
         }
       ],
@@ -1379,7 +1379,7 @@
     },
     {
       "type": "text",
-      "content": "כשמקבלים PRD מהאגנט PM (John) או ממנהל המוצר, חשוב לשאול את השאלות הנכונות:",
+      "content": "כשמקבלים PRD מהסוכן PM (John) או ממנהל המוצר, חשוב לשאול את השאלות הנכונות:",
       "markdown": true
     },
     {
@@ -1781,7 +1781,7 @@
       "type": "callout",
       "variant": "success",
       "title": "נקודות מפתח",
-      "content": "**מה למדנו:**\n- Winston הוא האגנט הארכיטקטוני המומחה שלכם\n- שלושה וורקפלואים מרכזיים: `*architecture`, `*tech-spec`, `*solutioning-gate-check`\n- תהליך מובנה מ-PRD ועד מסירה לצוות\n- ADRs קריטיים לתיעוד החלטות\n- עבודה צוותית עם PM, Dev, UX\n- Best practices לארכיטקטורה טובה",
+      "content": "**מה למדנו:**\n- Winston הוא הסוכן הארכיטקטוני המומחה שלכם\n- שלושה וורקפלואים מרכזיים: `*architecture`, `*tech-spec`, `*solutioning-gate-check`\n- תהליך מובנה מ-PRD ועד מסירה לצוות\n- ADRs קריטיים לתיעוד החלטות\n- עבודה צוותית עם PM, Dev, UX\n- Best practices לארכיטקטורה טובה",
       "markdown": true
     },
     {
