--- a/src/content/locale/he/guides/roles/non-technical.json
+++ b/src/content/locale/he/guides/roles/non-technical.json
@@ -34,7 +34,7 @@
     },
     {
       "id": "toc-3",
-      "title": "אגנטים ווורקפלואים שימושיים",
+      "title": "סוכנים ווורקפלואים שימושיים",
       "level": 2,
       "anchor": "useful-tools"
     },
@@ -224,7 +224,7 @@
     },
     {
       "type": "text",
-      "content": "BMAD זה מערכת שעוזרת לכם לעבוד עם בינה מלאכותית בצורה מסודרת. במקום לשאול את ChatGPT שאלות אקראיות, יש לכם \"אגנטים\" מקצועיים שמתמחים בתחומים שונים.",
+      "content": "BMAD זה מערכת שעוזרת לכם לעבוד עם בינה מלאכותית בצורה מסודרת. במקום לשאול את ChatGPT שאלות אקראיות, יש לכם \"סוכנים\" מקצועיים שמתמחים בתחומים שונים.",
       "id": "bmad-simple"
     },
     {
@@ -259,19 +259,19 @@
     {
       "type": "heading",
       "level": 2,
-      "content": "אגנטים ווורקפלואים שימושיים",
+      "content": "סוכנים ווורקפלואים שימושיים",
       "id": "useful-tools",
       "anchor": "useful-tools"
     },
     {
       "type": "heading",
       "level": 3,
-      "content": "האגנטים המועילים ביותר עבורכם",
+      "content": "הסוכנים המועילים ביותר עבורכם",
       "id": "useful-agents"
     },
     {
       "type": "text",
-      "content": "לא צריכים להכיר את כל 19 האגנטים. הנה אלה שהכי שימושיים לתפקידים לא טכניים:",
+      "content": "לא צריכים להכיר את כל 19 הסוכנים. הנה אלה שהכי שימושיים לתפקידים לא טכניים:",
       "id": "agents-intro"
     },
     {
@@ -300,7 +300,7 @@
         },
         {
           "title": "BMAD Master - המדריך הראשי",
-          "content": "**מה הוא עושה:** מנווט אתכם במערכת, עוזר לבחור את האגנט הנכון.\n\n**מתי להשתמש:**\n- כשלא בטוחים מאיפה להתחיל\n- כשצריכים עזרה כללית\n- כשרוצים לראות מה אפשר לעשות\n\n**דוגמה:** \"Master, אני צריך עזרה ביצירת קמפיין שיווקי, מה האגנט המתאים?\"",
+          "content": "**מה הוא עושה:** מנווט אתכם במערכת, עוזר לבחור את הסוכן הנכון.\n\n**מתי להשתמש:**\n- כשלא בטוחים מאיפה להתחיל\n- כשצריכים עזרה כללית\n- כשרוצים לראות מה אפשר לעשות\n\n**דוגמה:** \"Master, אני צריך עזרה ביצירת קמפיין שיווקי, מה הסוכן המתאים?\"",
           "markdown": true
         }
       ]
@@ -424,7 +424,7 @@
       "ordered": true,
       "id": "communication-benefits",
       "items": [
-        "**שפה משותפת:** כולם משתמשים באותם אגנטים ווורקפלואים",
+        "**שפה משותפת:** כולם משתמשים באותם סוכנים ווורקפלואים",
         "**מסמכים מובנים:** PRDs, Stories, Tech Specs - מבנה קבוע שכולם מבינים",
         "**הבנה הדדית:** אתם מבינים מה הצוות הטכני צריך, הם מבינים מה אתם רוצים",
         "**פחות אי-הבנות:** פחות \"אבל חשבתי שאתה מתכוון ל...\""
@@ -587,7 +587,7 @@
       "id": "summary-list",
       "items": [
         "BMAD זה לא רק למפתחים - זה לכולם!",
-        "אין צורך בידע טכני - האגנטים עושים את העבודה הקשה",
+        "אין צורך בידע טכני - הסוכנים עושים את העבודה הקשה",
         "יש המון תרחישי שימוש מעשיים לכל תפקיד",
         "BMAD משפר את התקשורת עם הצוות הטכני",
         "אפשר להתחיל עם משימות קטנות ולהתקדם"
@@ -633,8 +633,8 @@
           "כשלא מבינים מושג"
         ],
         [
-          "מדריך אגנטים",
-          "כל האגנטים במפורט",
+          "מדריך סוכנים",
+          "כל הסוכנים במפורט",
           "כשרוצים להעמיק"
         ],
         [
