--- a/src/content/locale/he/guides/roles/product-managers.json
+++ b/src/content/locale/he/guides/roles/product-managers.json
@@ -34,7 +34,7 @@
     },
     {
       "id": "toc-3",
-      "title": "האגנטים שלכם",
+      "title": "הסוכנים שלכם",
       "level": 2,
       "anchor": "your-agents"
     },
@@ -204,7 +204,7 @@
       "type": "callout",
       "variant": "success",
       "title": "זמן משוער ללמידה",
-      "content": "2-3 שעות להבנה מעמיקה של החומר, שבוע אחד לשליטה מלאה בעבודה עם האגנטים והוורקפלואים במקרים אמיתיים.",
+      "content": "2-3 שעות להבנה מעמיקה של החומר, שבוע אחד לשליטה מלאה בעבודה עם הסוכנים והוורקפלואים במקרים אמיתיים.",
       "id": "learning-time-callout"
     },
     {
@@ -231,7 +231,7 @@
     },
     {
       "type": "text",
-      "content": "בשבוע הראשון התמקדו בהכרת האגנטים והוורקפלואים הבסיסיים:",
+      "content": "בשבוע הראשון התמקדו בהכרת הסוכנים והוורקפלואים הבסיסיים:",
       "id": "stage-1-text"
     },
     {
@@ -242,7 +242,7 @@
           "content": "הכירו את John (PM Agent) - קראו את הפרופיל שלו, הריצו workflow-status פעם אחת"
         },
         {
-          "content": "הכירו את Mary (Analyst Agent) - הבינו את ההבדל בין האגנטים"
+          "content": "הכירו את Mary (Analyst Agent) - הבינו את ההבדל בין הסוכנים"
         },
         {
           "content": "הריצו workflow-init כדי להבין את תהליך האתחול"
@@ -260,7 +260,7 @@
       "type": "callout",
       "variant": "info",
       "title": "טיפ לשבוע הראשון",
-      "content": "אל תנסו ללמוד הכל בבת אחת. התמקדו באגנט אחד ביום, ובוורקפלואו אחד ביום. תרגלו על דוגמאות פשוטות.",
+      "content": "אל תנסו ללמוד הכל בבת אחת. התמקדו בסוכן אחד ביום, ובוורקפלואו אחד ביום. תרגלו על דוגמאות פשוטות.",
       "id": "stage-1-tip"
     },
     {
@@ -346,13 +346,13 @@
     {
       "type": "heading",
       "level": 2,
-      "content": "האגנטים שלכם",
+      "content": "הסוכנים שלכם",
       "id": "your-agents",
       "anchor": "your-agents"
     },
     {
       "type": "text",
-      "content": "כמנהלי מוצר ואנליסטים, יש לכם שני אגנטים מרכזיים שיעבדו איתכם:",
+      "content": "כמנהלי מוצר ואנליסטים, יש לכם שני סוכנים מרכזיים שיעבדו איתכם:",
       "id": "agents-intro"
     },
     {
@@ -1601,7 +1601,7 @@
       "type": "callout",
       "variant": "success",
       "title": "נקודות מפתח שכדאי לזכור",
-      "content": "✅ **John ו-Mary** - שני האגנטים המרכזיים שלכם. Mary לחקירה, John למימוש.\n\n✅ **5 וורקפלואים עיקריים** - workflow-status, product-brief, prd, tech-spec, create-epics-and-stories\n\n✅ **חיסכון זמן אדיר** - 70-80% חיסכון בכתיבת מסמכים\n\n✅ **תקשורת משופרת** - כולם עובדים מאותם מסמכים מובנים\n\n✅ **תהליך עקבי** - אפשר לחזור על זה שוב ושוב",
+      "content": "✅ **John ו-Mary** - שני הסוכנים המרכזיים שלכם. Mary לחקירה, John למימוש.\n\n✅ **5 וורקפלואים עיקריים** - workflow-status, product-brief, prd, tech-spec, create-epics-and-stories\n\n✅ **חיסכון זמן אדיר** - 70-80% חיסכון בכתיבת מסמכים\n\n✅ **תקשורת משופרת** - כולם עובדים מאותם מסמכים מובנים\n\n✅ **תהליך עקבי** - אפשר לחזור על זה שוב ושוב",
       "id": "summary-key-points",
       "markdown": true
     },
@@ -1660,7 +1660,7 @@
           "markdown": true
         },
         {
-          "content": "**מדריך אגנטים מלא** - היכרות עם כל 19 האגנטים",
+          "content": "**מדריך סוכנים מלא** - היכרות עם כל 19 הסוכנים",
           "markdown": true
         }
       ],
