--- a/src/content/locale/he/guides/roles/project-managers.json
+++ b/src/content/locale/he/guides/roles/project-managers.json
@@ -483,7 +483,7 @@
                   "content": "הצעת פתרונות ואסטרטגיות"
                 },
                 {
-                  "content": "תיאום בין אגנטים וחברי צוות"
+                  "content": "תיאום בין סוכנים וחברי צוות"
                 },
                 {
                   "content": "אסקלציה לניהול בעת הצורך"
@@ -1035,7 +1035,7 @@
       "type": "callout",
       "variant": "success",
       "title": "שפה משותפת",
-      "content": "כשכולם משתמשים ב-BMAD, יש שפה משותפת. Bob יכול לדבר עם כל האגנטים ולתאם בניהם - זה מקל מאוד על העבודה!"
+      "content": "כשכולם משתמשים ב-BMAD, יש שפה משותפת. Bob יכול לדבר עם כל הסוכנים ולתאם בניהם - זה מקל מאוד על העבודה!"
     },
     {
       "type": "divider"
@@ -1143,7 +1143,7 @@
           "content": [
             {
               "type": "text",
-              "content": "**לא!** BMAD לא מחליף את כלי הניהול הקיימים - הוא משלים אותם.\n\n**איך זה עובד:**\n• אתם מנהלים Stories ב-Jira/Azure\n• משתמשים ב-BMAD לתכנון ותיאום\n• Bob עוזר בהחלטות ואסטרטגיה\n• מייצאים את התוצאות לכלי הניהול\n\n**BMAD עוזר ב:**\n• תכנון ספרינטים\n• זיהוי סיכונים\n• הרצת רטרו\n• הסרת חסמים\n• תיאום בין אגנטים",
+              "content": "**לא!** BMAD לא מחליף את כלי הניהול הקיימים - הוא משלים אותם.\n\n**איך זה עובד:**\n• אתם מנהלים Stories ב-Jira/Azure\n• משתמשים ב-BMAD לתכנון ותיאום\n• Bob עוזר בהחלטות ואסטרטגיה\n• מייצאים את התוצאות לכלי הניהול\n\n**BMAD עוזר ב:**\n• תכנון ספרינטים\n• זיהוי סיכונים\n• הרצת רטרו\n• הסרת חסמים\n• תיאום בין סוכנים",
               "markdown": true
             }
           ]
@@ -1154,7 +1154,7 @@
           "content": [
             {
               "type": "text",
-              "content": "**Bob עוזר במספר דרכים:**\n\n**1. זיהוי מוקדם:**\n• מנתח את ה-velocity והתקדמות\n• מזהה Stories שתקועים\n• שואל שאלות הבהרה\n\n**2. הצעת פתרונות:**\n• מציע אסטרטגיות פתרון\n• מתאם בין אגנטים\n• מציע שינויים בתהליך\n\n**3. תיעוד ומעקב:**\n• מתעד את החסם\n• עוקב אחר הפתרון\n• לומד לעתיד\n\n**דוגמה:**\n'Dev is blocked - needs API documentation from Backend team'\n→ Bob מציע: שיחה עם Architect, temporary mock data, או escalation למנהל",
+              "content": "**Bob עוזר במספר דרכים:**\n\n**1. זיהוי מוקדם:**\n• מנתח את ה-velocity והתקדמות\n• מזהה Stories שתקועים\n• שואל שאלות הבהרה\n\n**2. הצעת פתרונות:**\n• מציע אסטרטגיות פתרון\n• מתאם בין סוכנים\n• מציע שינויים בתהליך\n\n**3. תיעוד ומעקב:**\n• מתעד את החסם\n• עוקב אחר הפתרון\n• לומד לעתיד\n\n**דוגמה:**\n'Dev is blocked - needs API documentation from Backend team'\n→ Bob מציע: שיחה עם Architect, temporary mock data, או escalation למנהל",
               "markdown": true
             }
           ]
@@ -1261,11 +1261,11 @@
           {
             "type": "card",
             "variant": "elevated",
-            "title": "מדריך אגנטים - Architect + SM + Dev",
+            "title": "מדריך סוכנים - Architect + SM + Dev",
             "content": [
               {
                 "type": "text",
-                "content": "הכירו לעומק את Bob ואת שאר האגנטים שתעבדו איתם.",
+                "content": "הכירו לעומק את Bob ואת שאר הסוכנים שתעבדו איתם.",
                 "markdown": false
               }
             ]
