--- a/src/content/locale/he/guides/workflows/cis-synthesis.json
+++ b/src/content/locale/he/guides/workflows/cis-synthesis.json
@@ -181,7 +181,7 @@
       "items": [
         "**פרויקטים הם מורכבים** - צריך להריץ עשרות וורקפלואים בסדר הנכון",
         "**תהליכים משתלבים** - פלט של וורקפלו אחד הוא קלט לאחר",
-        "**צריך לקבל החלטות** - מתי להריץ מה? באיזה שלב? עם איזה אגנט?",
+        "**צריך לקבל החלטות** - מתי להריץ מה? באיזה שלב? עם איזה סוכן?",
         "**יש מצבים מיוחדים** - לא כל פרויקט זהה, צריך גמישות",
         "**חשוב לחסוך זמן** - אופטימיזציה נכונה יכולה לחסוך שעות רבות"
       ]
@@ -229,7 +229,7 @@
       "headers": [
         "#",
         "וורקפלו",
-        "אגנט",
+        "סוכן",
         "תפוקה",
         "זמן"
       ],
@@ -286,7 +286,7 @@
       "headers": [
         "#",
         "וורקפלו",
-        "אגנט",
+        "סוכן",
         "תפוקה",
         "זמן"
       ],
@@ -328,7 +328,7 @@
       "headers": [
         "#",
         "וורקפלו",
-        "אגנט",
+        "סוכן",
         "תפוקה",
         "זמן"
       ],
@@ -407,7 +407,7 @@
       "headers": [
         "#",
         "וורקפלו",
-        "אגנט",
+        "סוכן",
         "תפוקה",
         "זמן"
       ],
@@ -470,7 +470,7 @@
       "headers": [
         "#",
         "וורקפלו",
-        "אגנט",
+        "סוכן",
         "תפוקה",
         "זמן"
       ],
@@ -514,7 +514,7 @@
       "headers": [
         "#",
         "וורקפלו",
-        "אגנט",
+        "סוכן",
         "תפוקה",
         "זמן"
       ],
@@ -565,7 +565,7 @@
       "headers": [
         "#",
         "וורקפלו",
-        "אגנט",
+        "סוכן",
         "תפוקה",
         "זמן"
       ],
@@ -609,7 +609,7 @@
       "headers": [
         "#",
         "וורקפלו",
-        "אגנט",
+        "סוכן",
         "תפוקה",
         "זמן"
       ],
@@ -1020,7 +1020,7 @@
       "type": "callout",
       "variant": "info",
       "title": "וורקפלואים ייחודיים למשחקים",
-      "content": "למשחקים יש 3 אגנטים ייחודיים (Game Designer, Game Architect, Game Dev) ו-3 וורקפלואים ייחודיים (brainstorm-game, game-brief, gdd, narrative). מלבד זה - התהליך דומה מאוד לפיתוח אפליקציה רגילה!"
+      "content": "למשחקים יש 3 סוכנים ייחודיים (Game Designer, Game Architect, Game Dev) ו-3 וורקפלואים ייחודיים (brainstorm-game, game-brief, gdd, narrative). מלבד זה - התהליך דומה מאוד לפיתוח אפליקציה רגילה!"
     },
     {
       "type": "divider"
@@ -1039,13 +1039,13 @@
     },
     {
       "type": "text",
-      "content": "**מתי להשתמש:** כשיש לכם מספר אגנטים/אנשים והתהליכים בלתי-תלויים.\n\n**דוגמה:**",
+      "content": "**מתי להשתמש:** כשיש לכם מספר סוכנים/אנשים והתהליכים בלתי-תלויים.\n\n**דוגמה:**",
       "markdown": true
     },
     {
       "type": "code",
       "language": "bash",
-      "code": "# במקביל - שלושה אגנטים עובדים:\n\n# אגנט 1: PM\n@pm\n*prd\n\n# אגנט 2: Architect (במקביל)\n@architect  \n*tech-spec\n\n# אגנט 3: UX Designer (במקביל)\n@ux-designer\n*create-ux-design\n\n# תוצאה: חוסכים זמן - במקום 6 שעות → 2-3 שעות!"
+      "code": "# במקביל - שלושה סוכנים עובדים:\n\n# סוכן 1: PM\n@pm\n*prd\n\n# סוכן 2: Architect (במקביל)\n@architect  \n*tech-spec\n\n# סוכן 3: UX Designer (במקביל)\n@ux-designer\n*create-ux-design\n\n# תוצאה: חוסכים זמן - במקום 6 שעות → 2-3 שעות!"
     },
     {
       "type": "callout",
@@ -1156,7 +1156,7 @@
       "items": [
         "**זהו את הצורך** - מה חסר בוורקפלואים הקיימים?",
         "**תכננו את התהליך** - מה הקלט? מה הפלט? מה השלבים?",
-        "**בחרו אגנט** - איזה אגנט מתאים?",
+        "**בחרו סוכן** - איזה סוכן מתאים?",
         "**צרו YAML** - קובץ workflow.yaml מותאם",
         "**בדקו** - הריצו על פרויקט טסט",
         "**שפרו** - לפי הפידבק",
@@ -1219,7 +1219,7 @@
         },
         {
           "title": "3. Context Caching - שמירת קונטקסט",
-          "content": "**שמרו קונטקסט חשוב:**\n- Architecture Decisions\n- Code Style Guidelines\n- Testing Standards\n\n**איך זה עוזר:** האגנטים לא צריכים \"ללמוד\" מחדש בכל פעם. הם מתחילים עם הידע המצטבר.",
+          "content": "**שמרו קונטקסט חשוב:**\n- Architecture Decisions\n- Code Style Guidelines\n- Testing Standards\n\n**איך זה עוזר:** הסוכנים לא צריכים \"ללמוד\" מחדש בכל פעם. הם מתחילים עם הידע המצטבר.",
           "markdown": true
         },
         {
@@ -1229,7 +1229,7 @@
         },
         {
           "title": "5. Automate Repetitive - אוטומציה",
-          "content": "**אוטומציה של משימות חוזרות:**\n- CI/CD pipeline → אוטומט את code-review הבסיסי\n- Linters → בדיקות קוד אוטומטיות\n- Test Runners → הרצת טסטים אוטומטית\n\n**תן לאגנטים להתמקד בחשיבה, לא בשגרה.**",
+          "content": "**אוטומציה של משימות חוזרות:**\n- CI/CD pipeline → אוטומט את code-review הבסיסי\n- Linters → בדיקות קוד אוטומטיות\n- Test Runners → הרצת טסטים אוטומטית\n\n**תן לסוכנים להתמקד בחשיבה, לא בשגרה.**",
           "markdown": true
         }
       ]
@@ -1343,7 +1343,7 @@
         },
         {
           "title": "8. לא לעדכן Context בין וורקפלואים",
-          "content": "**הטעות:** האגנטים לא יודעים מה קרה בוורקפלו הקודם\n\n**למה זה רע:** החלטות לא מעודכנות, חוסר עקביות.\n\n**הפתרון:** תמיד תעבירו את הקונטקסט. כל וורקפלו צריך לדעת מה היה לפניו.",
+          "content": "**הטעות:** הסוכנים לא יודעים מה קרה בוורקפלו הקודם\n\n**למה זה רע:** החלטות לא מעודכנות, חוסר עקביות.\n\n**הפתרון:** תמיד תעבירו את הקונטקסט. כל וורקפלו צריך לדעת מה היה לפניו.",
           "markdown": true
         },
         {
@@ -1377,12 +1377,12 @@
         },
         {
           "title": "מה עושים כשוורקפלו לוקח יותר מדי זמן?",
-          "content": "**פתרונות:**\n1. **פרקו לחלקים** - PRD גדול? תעשו אותו ב-2 איטרציות\n2. **השתמשו בתבניות** - Template ממלא 50% מהעבודה\n3. **Parallel Processing** - מספר אגנטים במקביל\n4. **Context Reuse** - אל תתחילו מאפס בכל פעם\n5. **בדקו אם באמת צריך** - אולי אפשר לדלג?",
+          "content": "**פתרונות:**\n1. **פרקו לחלקים** - PRD גדול? תעשו אותו ב-2 איטרציות\n2. **השתמשו בתבניות** - Template ממלא 50% מהעבודה\n3. **Parallel Processing** - מספר סוכנים במקביל\n4. **Context Reuse** - אל תתחילו מאפס בכל פעם\n5. **בדקו אם באמת צריך** - אולי אפשר לדלג?",
           "markdown": true
         },
         {
           "title": "איך שומרים עקביות בין וורקפלואים?",
-          "content": "**שמירת עקביות:**\n1. **Architecture Decision Records (ADRs)** - תעדו החלטות\n2. **Style Guides** - קוד, תיעוד, תכנון\n3. **Templates** - תבניות סטנדרטיות\n4. **Context Sharing** - כל אגנט רואה מה האחרים עשו\n5. **Code Review** - הגנה אחרונה מפני אי-עקביות",
+          "content": "**שמירת עקביות:**\n1. **Architecture Decision Records (ADRs)** - תעדו החלטות\n2. **Style Guides** - קוד, תיעוד, תכנון\n3. **Templates** - תבניות סטנדרטיות\n4. **Context Sharing** - כל סוכן רואה מה האחרים עשו\n5. **Code Review** - הגנה אחרונה מפני אי-עקביות",
           "markdown": true
         },
         {
@@ -1515,7 +1515,7 @@
         },
         {
           "title": "5. למידה מתמדת",
-          "content": "**המשיכו ללמוד:**\n- קראו את מדריכי האגנטים (אם טרם)\n- התעמקו במדריכי Role הרלוונטיים לכם\n- חפשו Best Practices נוספות\n- הצטרפו לקהילת BMAD (אם יש)\n\n**מטרה:** להישאר מעודכנים ולהמשיך להשתפר.",
+          "content": "**המשיכו ללמוד:**\n- קראו את מדריכי הסוכנים (אם טרם)\n- התעמקו במדריכי Role הרלוונטיים לכם\n- חפשו Best Practices נוספות\n- הצטרפו לקהילת BMAD (אם יש)\n\n**מטרה:** להישאר מעודכנים ולהמשיך להשתפר.",
           "markdown": true
         },
         {
@@ -1540,7 +1540,7 @@
       "type": "list",
       "ordered": false,
       "items": [
-        "**מדריכי אגנטים** - חלק 1-5: הכירו לעומק את כל 11 האגנטים",
+        "**מדריכי סוכנים** - חלק 1-5: הכירו לעומק את כל 11 הסוכנים",
         "**מדריכי Roles** - מדריך ספציפי לתפקיד שלכם (Dev, PM, Architect, QA, UX...)",
         "**Best Practices** - טיפים ושיטות עבודה מומלצות",
         "**Case Studies** - מקרי מבחן ותרגילים מעשיים",
@@ -1572,7 +1572,7 @@
       "type": "callout",
       "variant": "success",
       "title": "סיימתם! מה הלאה?",
-      "content": "✅ **השלמתם את מדריך הוורקפלואים המקיף ביותר!**\n\n📚 **מומלץ להמשיך ל:**\n- מדריכי האגנטים (חלק 1-5)\n- מדריך Role הספציפי שלכם\n- Best Practices למתקדמים\n- Case Studies ותרגילים\n\n💡 **זכרו:** הכי חשוב זה להתחיל! קחו פרויקט קטן ותתנסו.",
+      "content": "✅ **השלמתם את מדריך הוורקפלואים המקיף ביותר!**\n\n📚 **מומלץ להמשיך ל:**\n- מדריכי הסוכנים (חלק 1-5)\n- מדריך Role הספציפי שלכם\n- Best Practices למתקדמים\n- Case Studies ותרגילים\n\n💡 **זכרו:** הכי חשוב זה להתחיל! קחו פרויקט קטן ותתנסו.",
       "markdown": true
     }
   ],
