--- a/src/content/locale/he/guides/workflows/phase2-core.json
+++ b/src/content/locale/he/guides/workflows/phase2-core.json
@@ -189,7 +189,7 @@
       "type": "table",
       "headers": [
         "וורקפלו",
-        "אגנט",
+        "סוכן",
         "מתי להשתמש",
         "תפוקה",
         "זמן"
