--- a/src/content/locale/he/guides/roles/qa-testers.json
+++ b/src/content/locale/he/guides/roles/qa-testers.json
@@ -1252,11 +1252,11 @@
           {
             "type": "card",
             "variant": "elevated",
-            "title": "מדריך אגנטים - TEA + UX",
+            "title": "מדריך סוכנים - TEA + UX",
             "content": [
               {
                 "type": "text",
-                "content": "הכירו לעומק את Murat ואת שאר האגנטים שקשורים לאיכות.",
+                "content": "הכירו לעומק את Murat ואת שאר הסוכנים שקשורים לאיכות.",
                 "markdown": false
               }
             ]
